Add citations that include page ranges

--- a/content/1-history/4.md
+++ b/content/1-history/4.md
@@ -59,7 +59,7 @@ In terms of adhesives used for lining and strip-lining, the NMM shows a preferen
 
 {% figure 'fig-4-2' %}
 
-From 1971 to 1973, five sturgeon glue linings were performed. These are rather rare in the UK and drew upon the team’s training from “masterly restorer Brianzev” in Russia ([[Percival-Prescott 2003a\|, viii]]). Reports for the 1971 treatment of George Knight’s *Cleopatra's Needle Being Brought to England,* 1877 (BHC0641), revealed that “sturgeon bladder adhesive” was selected because the work was “painted upon a white ground and of materials which would have yellowed and darkened had wax been used.”[^7] These linings were performed only prior to the conference and were quickly abandoned; studio notes and treatment reports convey the impression that the technique was difficult to master.[^8]
+From 1971 to 1973, five sturgeon glue linings were performed. These are rather rare in the UK and drew upon the team’s training from “masterly restorer Brianzev” in Russia ({% cite 'Percival-Prescott 2003a' 'viii' %}). Reports for the 1971 treatment of George Knight’s *Cleopatra's Needle Being Brought to England,* 1877 (BHC0641), revealed that “sturgeon bladder adhesive” was selected because the work was “painted upon a white ground and of materials which would have yellowed and darkened had wax been used.”[^7] These linings were performed only prior to the conference and were quickly abandoned; studio notes and treatment reports convey the impression that the technique was difficult to master.[^8]
 
 Beva 371 was used for both strip-lining and lining, combined with a variety of fabrics ([figs. 4.2](#fig-4-2) and [4.3](#fig-4-3)). Initially, the preference was for TenCate, a polyvinyl alcohol fabric from the Netherlands, but this was gradually superseded by polyester sailcloth, beginning in 1982, most likely introduced to the NMM by the Courtauld. Linen was used on one occasion with Beva for lining but more frequently for strip-lining. Other materials were used more sporadically in conjunction with Beva, including woven polypropylene and glass fiber. These fabrics seem to have been used experimentally around the time of the lining conference and were not incorporated into usual practice. Glass fiber, introduced by Pierre Boissonnas ([[Boissonnas 1961]]), was used over a prolonged period (1973–81), in combination with wax-resin, Beva, or Beva with added wax, to help produce transparent linings.[^9]
 
@@ -99,7 +99,7 @@ From the 1950s, the department was involved in lining research ([[Straub and Ree
 
 Two strands emerge in the Courtauld reports: the paintings from the Courtauld Gallery collection and the paintings from external collections. Out of the 1,023 reports consulted from 1968 to 1996, 124 included structural treatment of some description (approximately 12%). Only eighteen reports from before 1980 were found, so the pre-1980 areas on the graphs shown in figures here should be interpreted with caution due to the unknown quantity of missing reports. Pre-1980 practices were gathered through interviews with conservators studying or working at the Courtauld during this period.
 
-The vacuum envelope table developed by Hedley, Hackney, and Cummings was used from the 1970s until the early 1980s ([[Hedley, Hackney, and Cummings 2003\|, 83]]). In 1984, a commercially built lining table, based on the design created in the department in the 1950s, came in as a long-term loan, this was used until 1994. Subsequently a multipurpose suction table with air-flow capability and a conventional hot-plate top was acquired from Willard Conservation Ltd.[^15] Occasionally, hand linings were also undertaken.
+The vacuum envelope table developed by Hedley, Hackney, and Cummings was used from the 1970s until the early 1980s ({% cite 'Hedley, Hackney, and Cummings 2003' '83' %}). In 1984, a commercially built lining table, based on the design created in the department in the 1950s, came in as a long-term loan, this was used until 1994. Subsequently a multipurpose suction table with air-flow capability and a conventional hot-plate top was acquired from Willard Conservation Ltd.[^15] Occasionally, hand linings were also undertaken.
 
 ### Trends and Patterns: Adhesives and Fabrics
 
@@ -135,7 +135,7 @@ Paul Cezanne’s *Turning Road (Route Tournante),* 1905 (P.1978.PG.61) was treat
 
 {% figuregroup '2' 'fig-4-9-a, fig-4-9-b' %}
 
-Edouard Manet’s *Au Bal—Marguerite de Conflans en Toilette de Bal,* 1870–80 (P.1978.PG.233) was treated the following year, in 1981, to address the buckling of the canvas recorded in raking light photographs before treatment. Caroline Villers’s recommendation seemed to follow the successful precedent set by the treatment of the Cezanne painting: to carry out a cold lining at low pressure. A change of plan is described with Villers’s typical understatement: “Although the tacking margin had not seemed to exhibit exceptional sensitivity to moisture…the canvas was found to be extremely responsive.”[^20] They switched to using Beva with sailcloth at 60°C–65°C and using 12"Hg vacuum envelope pressure. The envelope system was designed to avoid textural changes, and the conservators also removed large slubs and residues from the reverse prior to lining. However, when reviewing the treatment with the aid of archive raking light images, it did seem that there had been some increased weave emphasis. Despite this, the treatment was published by Hedley as an exemplar treatment the following year ([[Hedley and Villers 1982\|, 157]]). It was interesting to reflect on this treatment with the expert group. It seemed to particularly highlight the change in attitudes towards lining over the 38 years since this painting was treated. The consensus now would be to accept the deformations out of plane and to try to avoid lining for as long as possible.
+Edouard Manet’s *Au Bal—Marguerite de Conflans en Toilette de Bal,* 1870–80 (P.1978.PG.233) was treated the following year, in 1981, to address the buckling of the canvas recorded in raking light photographs before treatment. Caroline Villers’s recommendation seemed to follow the successful precedent set by the treatment of the Cezanne painting: to carry out a cold lining at low pressure. A change of plan is described with Villers’s typical understatement: “Although the tacking margin had not seemed to exhibit exceptional sensitivity to moisture…the canvas was found to be extremely responsive.”[^20] They switched to using Beva with sailcloth at 60°C–65°C and using 12"Hg vacuum envelope pressure. The envelope system was designed to avoid textural changes, and the conservators also removed large slubs and residues from the reverse prior to lining. However, when reviewing the treatment with the aid of archive raking light images, it did seem that there had been some increased weave emphasis. Despite this, the treatment was published by Hedley as an exemplar treatment the following year ({% cite 'Hedley and Villers 1982' '157' %}). It was interesting to reflect on this treatment with the expert group. It seemed to particularly highlight the change in attitudes towards lining over the 38 years since this painting was treated. The consensus now would be to accept the deformations out of plane and to try to avoid lining for as long as possible.
 
 Edgar Degas’s *Lady with a Parasol,* 1870–72 (P.1978.PG.87) was treated almost immediately after the Manet. The painting was first strip-lined using Permawear 122 and Beva, but during restretching the original canvas fractured along the turnover edge. At this point, close to the exhibition opening, it was decided to mend the tear locally and return to the painting after the show. The painting returned for treatment in 1983 in preparation for considerable travel as part of a loan to Japan and Australia, and the decision was taken to line the painting ([fig. 4.10](#fig-4-10)). Hedley, leading the treatment, selected Fabri-Sil, but adapted the process to incorporate solvent activation, which was concurrently investigated by Phenix in his research project ([[Phenix and Hedley 1984]]). Using solvent activation, the peel strength of Fabri-Sil increased to approximately match a “strong wax-resin” formulation. Despite the treatment being among the early Fabri-Sil linings, our inspection of the painting found that the experimental method performed well: the impasto looks crisp and sharp, and the ground layer appears unchanged by the adhesive, with the lining remaining well adhered throughout.
 
