--- a/content/1-history/5.md
+++ b/content/1-history/5.md
@@ -15,7 +15,7 @@ abstract: "The paper outlines the contribution of the Neapolitan tradition to th
 
 ## Introduction
 
-The intention of this paper is to outline the important contributions made by the Neapolitan tradition of structural conservation of paintings on canvas, the history of which remains little known. Knowledge of this tradition has increased over the past twenty years thanks to studies that have brought to light many documents presented during two conferences held in the Capodimonte Museum in 1999 and 2007 (see [[Catalano and Prisco 2003]] and [[D'Alconzo 2007})}. These studies made it possible to compare elements from the examination of the paintings themselves, elucidating the contents of the documents and allowing an understanding of the methods employed.
+The intention of this paper is to outline the important contributions made by the Neapolitan tradition of structural conservation of paintings on canvas, the history of which remains little known. Knowledge of this tradition has increased over the past twenty years thanks to studies that have brought to light many documents presented during two conferences held in the Capodimonte Museum in 1999 and 2007 (see [[Catalano and Prisco 2003]] and {% cite 'D’Alconzo 2007' %}. These studies made it possible to compare elements from the examination of the paintings themselves, elucidating the contents of the documents and allowing an understanding of the methods employed.
 
 A number of interesting elements were thus brought to light, such as the distinction—as early as the eighteenth century—between the “artistic” operations of cleaning and retouching and those of lining/consolidation, which were entrusted to the “liner” rather than the “restorer.” The studies highlighted the existence in the eighteenth century of diverse practices in the museums, often limited to cautious interventions, together with an awareness of the specificity of the materials involved. Traditionally, animal glue and flour paste were almost exclusively the materials employed to consolidate the paint layers and line the canvases throughout the period under consideration.
 
@@ -25,15 +25,15 @@ These studies also identified the presence of certain “professionals” who sp
 
 The history of the profession of *foderatore* (liner) in Naples sits at the intersection of craft, art, and profession, and it is here where the definition of the discipline of conservation-restoration unfolds.
 
-In 1960, Raffaello Causa—the renowned art historian who in the 1970s and ’80s would direct the *soprintendenza* for the Historical and Artistic Heritage of Naples, and who at that time headed the restoration laboratory of the Capodimonte Museum, highlighted this aspect by observing how in our city the conservation of paintings on canvas had been guaranteed by means of “an indisputable skill—and we would like to say a reckless ease—with which the lining of the canvases was performed here in Naples, an operation widely practiced by local restorers” ([[Causa 1960\|, 10]]).
+In 1960, Raffaello Causa—the renowned art historian who in the 1970s and ’80s would direct the *soprintendenza* for the Historical and Artistic Heritage of Naples, and who at that time headed the restoration laboratory of the Capodimonte Museum, highlighted this aspect by observing how in our city the conservation of paintings on canvas had been guaranteed by means of “an indisputable skill—and we would like to say a reckless ease—with which the lining of the canvases was performed here in Naples, an operation widely practiced by local restorers” ([[Causa 1960' '10' %}).
 
 In fact, it is possible since at least the eighteenth century to trace the evidence and documents relating to the practice of *rintelaggio* or *foderatura:* the consolidation of deteriorated textile supports carried out by gluing these onto a new canvas. We also find that such activities were carried out early on by a particular figure, the *telaiolo,*[^1] or manufacturer of canvases for painting, who would also repair damaged canvases if required.
 
-One of these craftsmen was Giuseppe Maria Ranzenò, known as il Filosofo (the Philosopher), who as early as 1726 was paid for “*due tele imprimate*” (two primed canvases) ([[Pavone 1994\|, 140]]). In 1740, he supplied some cases of canvas to the Reale Arazzeria, established by Charles of Bourbon, which produced many splendid tapestries for the royal residences ([[Siniscalco 1979\|, 278]]). The Arazzeria was based in Via San Carlo alle Mortelle, together with the Pietre Dure laboratory, in the same location where the Art Academy would soon be born.
+One of these craftsmen was Giuseppe Maria Ranzenò, known as il Filosofo (the Philosopher), who as early as 1726 was paid for “*due tele imprimate*” (two primed canvases) ({% cite 'Pavone 1994' '140' %}). In 1740, he supplied some cases of canvas to the Reale Arazzeria, established by Charles of Bourbon, which produced many splendid tapestries for the royal residences ({% cite 'Siniscalco 1979' '278' %}). The Arazzeria was based in Via San Carlo alle Mortelle, together with the Pietre Dure laboratory, in the same location where the Art Academy would soon be born.
 
 Other testimonies regarding the activity of the Arazzeria between 1761 and 1768 clarify the specificity of Ranzenò's profession. This information is found in a collection of documents published in 1979 as part of a campaign of wide-ranging research aimed at reconstructing the various and multifaceted artistic activities of the eighteenth century, thanks to a group of historians whose scholarship would come together to give rise to the great *Civiltà del Settecento a Napoli* exhibition in Naples (December 1979–October 1980) ([[N. Spinosa 1979]]; [[*Civiltà del ’700 a Napoli* 1980]]).
 
-In the Reale Arazzeria, several painters, including Girolamo Storace, Giuseppe Bonito, and Orlando Filippini, were engaged to create oil paintings that served as a guide to tapestry weaving ([fig. 5.1a](#fig-5-1)) and ([fig. 5.1b](#fig-5-1)). Giuseppe Maria Ranzenò supplied them with prepared canvases on which to make their models, and for this reason in the documents he is called “*mesticatore*” ([[Siniscalco 1979\|, 282]]), from *mestica*, the mixture with which the canvases were prepared for painting. But we also find him at work in other activities closely related to those of the painters active for the Arazzeria, which he assisted with all aspects relating to the preparation of the supports.
+In the Reale Arazzeria, several painters, including Girolamo Storace, Giuseppe Bonito, and Orlando Filippini, were engaged to create oil paintings that served as a guide to tapestry weaving ([fig. 5.1a](#fig-5-1)) and ([fig. 5.1b](#fig-5-1)). Giuseppe Maria Ranzenò supplied them with prepared canvases on which to make their models, and for this reason in the documents he is called “*mesticatore*” ({% cite 'Siniscalco 1979' '282' %}), from *mestica*, the mixture with which the canvases were prepared for painting. But we also find him at work in other activities closely related to those of the painters active for the Arazzeria, which he assisted with all aspects relating to the preparation of the supports.
 
 {% figure 'fig-5-1' %}
 
@@ -49,7 +49,7 @@ Paradoxically, however—precisely because it belonged to a subordinate professi
 
 ## The Eighteenth-Century Restorations for the Royal Museum
 
-In the years 1758 and 1759, Ranzenò was engaged in the restoration of the paintings from the Royal Collection housed in the Palace of Capodimonte, where he directed two *stiratori* (ironers), Nicola di Mauro and Pasquale Senzapaura, who in this case worked exclusively on the repairing and relining of canvases ([[Filangieri di Candida 1902\|, 225]]).
+In the years 1758 and 1759, Ranzenò was engaged in the restoration of the paintings from the Royal Collection housed in the Palace of Capodimonte, where he directed two *stiratori* (ironers), Nicola di Mauro and Pasquale Senzapaura, who in this case worked exclusively on the repairing and relining of canvases ({% cite 'Filangieri di Candida 1902' '225' %}).
 
 In these years, Father Giovanni Maria della Torre was the custodian of the Farnese Collection in the palace, and in charge of setting up the gallery. In a letter in which he gives an account of the work on the paintings, he describes the intervention of the ironers as follows: “The *accomodamento* \[repair\] of them consists in tensioning again, repairing, and changing the canvases, and working on them. All this is carried out by *manuali* \[skilled workers\].”[^2]
 
@@ -57,27 +57,27 @@ There is a further subdivision of the work. “The other part of the *accomodame
 
 In contrast to the assessment of the *accomodamento*, the artistic restoration, entrusted to the court painter Clemente Ruta, is questioned by della Torre, who reports the critical opinion of the connoisseurs (*Intendenti*): “I therefore do not see what else is desirable for these same paintings, and consequently I do not see any need for the painter D. Clemente Ruta to bring them to the Royal Palace of Naples, if not to give them a brushstroke or two, or some varnish, which in the opinion of all the *Intendenti* is to alter the old paintings.”[^5]
 
-A distinct intermediate activity was therefore taking shape—if not conservation, exactly, perhaps adjusting or repairing—a field of action somewhere between lining and artistic restoration in which both Ranzenò and his collaborator Senzapaura—the latter also called the Philosopher in his turn—were involved. Between 1762 and 1775, the two were engaged in the restoration of the copper paintings by Domenichino, Ribera, and Stanzione in the Cappella del Tesoro of San Gennaro in Naples Cathedral. The restoration of the paintings on copper would have included a cleaning but also probably consolidation of the flaking layers of paint, a consistently recurring conservation problem throughout the history of the numerous interventions on the seven great altarpieces (see [[Cerasuolo 2010\|, 113]]).
+A distinct intermediate activity was therefore taking shape—if not conservation, exactly, perhaps adjusting or repairing—a field of action somewhere between lining and artistic restoration in which both Ranzenò and his collaborator Senzapaura—the latter also called the Philosopher in his turn—were involved. Between 1762 and 1775, the two were engaged in the restoration of the copper paintings by Domenichino, Ribera, and Stanzione in the Cappella del Tesoro of San Gennaro in Naples Cathedral. The restoration of the paintings on copper would have included a cleaning but also probably consolidation of the flaking layers of paint, a consistently recurring conservation problem throughout the history of the numerous interventions on the seven great altarpieces (see {% cite 'Cerasuolo 2010' '113' %}).
 
-A few years later we see the emergence of the *telaiolo* Pasquale Chiariello, the first exponent of a family of restorers whose names we meet over a very broad span of time, from the late eighteenth to the second half of the twentieth century. In 1796, the latter supplied prepared canvases to the painter Tischbein: “Six *tele impresse* were delivered by the *telajolo* Pasquale Chiariello to the Director of the Royal Academy of Painting, D. Guglielmo Tischbein, to paint figures on them” ([[Cerasuolo 2007\|, 29]]). From that date until almost to our own times, the activity of the Chiariello family as manufacturers of canvases and as liners unfolds seamlessly. From 1826 to 1828 we find repeated references to the “*foderatori Raffaele e Antonio Chiariello*” engaged in work for the preparation of the Real Museo Borbonico ([[Catalano 2007]]).
+A few years later we see the emergence of the *telaiolo* Pasquale Chiariello, the first exponent of a family of restorers whose names we meet over a very broad span of time, from the late eighteenth to the second half of the twentieth century. In 1796, the latter supplied prepared canvases to the painter Tischbein: “Six *tele impresse* were delivered by the *telajolo* Pasquale Chiariello to the Director of the Royal Academy of Painting, D. Guglielmo Tischbein, to paint figures on them” ({% cite 'Cerasuolo 2007' '29' %}). From that date until almost to our own times, the activity of the Chiariello family as manufacturers of canvases and as liners unfolds seamlessly. From 1826 to 1828 we find repeated references to the “*foderatori Raffaele e Antonio Chiariello*” engaged in work for the preparation of the Real Museo Borbonico ([[Catalano 2007]]).
 
-In the 1820s, in the preparation for the opening of the museum in the rooms of Palazzo degli Studi (the current Museo Archeologico Nazionale di Napoli), an intense campaign of restorations was undertaken, for which many important documents have survived, such as notes drawn up in order to estimate the necessary expenses ([[D’Alconzo 2003]]). For the “canvas paintings of the Neapolitan School” a summary table lists the paintings (thirty-two works, including ones by Jusepe de Ribera, Luca Giordano, Salvator Rosa, and Aniello Falcone), and links them over three columns to the list of operations envisaged: “*Foderatura e tutt’altro occorre al completo*” (Lining and anything else is needed in full), “*Spianatura a colla e rassetto in telaro*” (Glue leveling and rearrangement on the stretcher), “*Telari a zeppe*” (Stretchers with wedges)[^6] (see [[Cerasuolo 2008\|, 28]]).
+In the 1820s, in the preparation for the opening of the museum in the rooms of Palazzo degli Studi (the current Museo Archeologico Nazionale di Napoli), an intense campaign of restorations was undertaken, for which many important documents have survived, such as notes drawn up in order to estimate the necessary expenses ([[D’Alconzo 2003]]). For the “canvas paintings of the Neapolitan School” a summary table lists the paintings (thirty-two works, including ones by Jusepe de Ribera, Luca Giordano, Salvator Rosa, and Aniello Falcone), and links them over three columns to the list of operations envisaged: “*Foderatura e tutt’altro occorre al completo*” (Lining and anything else is needed in full), “*Spianatura a colla e rassetto in telaro*” (Glue leveling and rearrangement on the stretcher), “*Telari a zeppe*” (Stretchers with wedges)[^6] (see {% cite 'Cerasuolo 2008' '28' %}).
 
 The operations described in the first two columns are obviously alternatives. In fact, in less serious cases, in place of the lining, only the *spianatura* operation would be performed. From other documents we can better understand what this “flattening” consisted of: the consolidation of the paint layers carried out by applying animal glue—the “strong glue” traditionally used for this purpose and also used for the lining—on the reverse of the canvas, without removing the painting from the stretcher, and then ironing it in this way.
 
-The application on a new stretcher, “*a* *zeppe*”—that is, with triangular wedges that allow the canvas to be put back under tension—is almost systematically proposed for lined paintings but could occasionally also be carried out for those subjected to “flattening” only[^7] (see [[Cerasuolo 2008\|, 28]]).
+The application on a new stretcher, “*a* *zeppe*”—that is, with triangular wedges that allow the canvas to be put back under tension—is almost systematically proposed for lined paintings but could occasionally also be carried out for those subjected to “flattening” only[^7] (see {% cite 'Cerasuolo 2008' '28' %}).
 
 For example, an expense report, for the treatment of Ribera’s *Drunken Silenus*, describes the operation as follows: “flattening from the front of the painting, glue on the back, stretched onto the new frame and fully adjusted.”[^8]
 
-It is interesting to observe that diversified practices are adopted, but always implemented with materials compatible with those originally used, and at the same time to note that harmful practices were not employed, even though they were widespread in other contemporary contexts, especially in northern Europe. Such practices include the application of *beveroni* (see [[Conti 2007\|, 106]]), oily substances of various natures applied to the reverse of canvases in order to consolidate and revive their colors—which, however, over time caused irreversible darkening of the tones and contraction of the pictorial layers.
+It is interesting to observe that diversified practices are adopted, but always implemented with materials compatible with those originally used, and at the same time to note that harmful practices were not employed, even though they were widespread in other contemporary contexts, especially in northern Europe. Such practices include the application of *beveroni* (see {% cite 'Conti 2007' '106' %}), oily substances of various natures applied to the reverse of canvases in order to consolidate and revive their colors—which, however, over time caused irreversible darkening of the tones and contraction of the pictorial layers.
 
-For the Real Museo of Naples also, we see that both the lining and the operations relating to the carpentry of the paintings on panel were practiced by professional figures distinct from the “restorers” who were entrusted with the operations deemed more noble, namely, cleaning and pictorial restoration. The work of these operators was often assessed separately, although sometimes the payment was made through the party who took care of the “artistic” part of the intervention ([[Cerasuolo 2008\|, 28]]).
+For the Real Museo of Naples also, we see that both the lining and the operations relating to the carpentry of the paintings on panel were practiced by professional figures distinct from the “restorers” who were entrusted with the operations deemed more noble, namely, cleaning and pictorial restoration. The work of these operators was often assessed separately, although sometimes the payment was made through the party who took care of the “artistic” part of the intervention ({% cite 'Cerasuolo 2008' '28' %}).
 
 ## A Family Tradition: The Chiariello
 
-In the middle of the nineteenth century, we meet Francesco Chiariello working for the Real Museo. He was an important person who proudly claimed the rights of the profession of *telaiolo*. Chiariello became very popular among Neapolitan artists of the time, acquiring a singular reputation and importance—so much so that he is remembered by various writers as an authoritative adviser. In the memoirs of the life of the painter Bernardo Celentano, written by his brother Luigi, for example, we find many references to him. Bernardo buys his canvases from Chiariello—indeed in a letter from Rome he considers the possibility of having a large canvas sent from Naples, and we learn the address of his shop, in Via Fosse del Grano, in the neighborhood called Museo. An unusual episode then shows the ease with which Chiariello offers himself to help the novice artist Bernardo in solving a problem of perspective, involving for this purpose a very young Domenico Morelli ([[Cerasuolo 2007\|, 32–33]]).
+In the middle of the nineteenth century, we meet Francesco Chiariello working for the Real Museo. He was an important person who proudly claimed the rights of the profession of *telaiolo*. Chiariello became very popular among Neapolitan artists of the time, acquiring a singular reputation and importance—so much so that he is remembered by various writers as an authoritative adviser. In the memoirs of the life of the painter Bernardo Celentano, written by his brother Luigi, for example, we find many references to him. Bernardo buys his canvases from Chiariello—indeed in a letter from Rome he considers the possibility of having a large canvas sent from Naples, and we learn the address of his shop, in Via Fosse del Grano, in the neighborhood called Museo. An unusual episode then shows the ease with which Chiariello offers himself to help the novice artist Bernardo in solving a problem of perspective, involving for this purpose a very young Domenico Morelli ({% cite 'Cerasuolo 2007' '32–33' %}).
 
-A lively description by Vittorio Imbriani also allows us to identify the portrait of Francesco Chiariello—called by the diminutive Ciccio—in a gentleman depicted by Giovanni Ponticelli in the historical painting *The Convalescent Cavalier Bajardo*, presented in 1867 in the exhibition *Quinta Promotrice Napoletana* ([fig. 5.2](#fig-5-2)). Imbriani produced a booklet to accompany the exhibition (which is later cited by the eminent historian and philosopher Benedetto Croce), and it includes a description of the *telaiolo*: “Ciccio Chiariello, the medal-winning *telaiuolo* who supplies canvas to all the painters of Naples, richly disguised as an Italian gentleman of the times, is observing the scene” ([[Cerasuolo 2007\|, 25–26]]).
+A lively description by Vittorio Imbriani also allows us to identify the portrait of Francesco Chiariello—called by the diminutive Ciccio—in a gentleman depicted by Giovanni Ponticelli in the historical painting *The Convalescent Cavalier Bajardo*, presented in 1867 in the exhibition *Quinta Promotrice Napoletana* ([fig. 5.2](#fig-5-2)). Imbriani produced a booklet to accompany the exhibition (which is later cited by the eminent historian and philosopher Benedetto Croce), and it includes a description of the *telaiolo*: “Ciccio Chiariello, the medal-winning *telaiuolo* who supplies canvas to all the painters of Naples, richly disguised as an Italian gentleman of the times, is observing the scene” ({% cite 'Cerasuolo 2007' '25–26' %}).
 
 {% figure 'fig-5-2' %}
 
@@ -85,7 +85,7 @@ The *telaiolo* referred to in the description clearly highlights the characteris
 
 Francesco Chiariello had in fact received a silver medal as a prize in the Solenne Mostra Industriale of 1853, the last of the major biannual exhibitions dedicated to the products of the National Industry of the Bourbon Kingdom. These exhibitions, held by the Reale Istituto d’Incoraggiamento, were aimed at encouraging entrepreneurs’ initiative and supporting the manufacturing activities that had once been promoted and financed by the royal court.
 
-The exhibition of 1853 divided the exhibits into five categories: Chiariello exhibited his “*tele buone da dipingere*” (good canvases for painting) in the class collectively described as “different objects” and was awarded the Silver Medal “for the improvement of canvases for painting,” as we read in the relative *Disamina—*a report of the examination made by the commission of Reale Istituto. After an interesting excursus on the various types of canvas congenial to the different inclinations of the artists, the “*artiere Chiariello*” is praised for his ability to prepare canvases of various fabrics and preparations “corresponding to the wishes of our painters.” ([[Reale Istituto d’Incoraggiamento 1855\|, 231–32]]; see also [[Cerasuolo 2007\|, 30–32]]).
+The exhibition of 1853 divided the exhibits into five categories: Chiariello exhibited his “*tele buone da dipingere*” (good canvases for painting) in the class collectively described as “different objects” and was awarded the Silver Medal “for the improvement of canvases for painting,” as we read in the relative *Disamina—*a report of the examination made by the commission of Reale Istituto. After an interesting excursus on the various types of canvas congenial to the different inclinations of the artists, the “*artiere Chiariello*” is praised for his ability to prepare canvases of various fabrics and preparations “corresponding to the wishes of our painters.” ({% cite 'Reale Istituto d’Incoraggiamento 1855' '231–32' %}; see also {% cite 'Cerasuolo 2007' '30–32' %}).
 
 In this context, the social elevation of the “craftsman Chiariello” suggests a new awareness of the dignity of the artisan craft and the value of entrepreneurial skills, and speaks to the personal esteem and friendship of the artists to whom he supplied the “good canvases”—a guarantee of the durability of their works.
 
@@ -115,19 +115,19 @@ The examination of the paintings revealed that the canvases of the Bertoja and o
 
 The edges of the canvases were fixed with strips of wood nailed along the perimeter to the stretcher and then wrapped with a glued paper. The stretchers, from different and unspecified periods—that of the Parmigianino is older and could be original—are of the fixed type.
 
-Glue-tempera makes colors look soft and light and is easily spoiled by the application of varnish or oily materials. In fact, glue, although relatively strong as a binder, does not form a continuous, even film on the surface, which therefore is quite porous. As a result, the colors once dried appear lighter and less saturated than when wet (see [[Cerasuolo 2017\|, 220–30]]; [[Cerasuolo 2019]]).
+Glue-tempera makes colors look soft and light and is easily spoiled by the application of varnish or oily materials. In fact, glue, although relatively strong as a binder, does not form a continuous, even film on the surface, which therefore is quite porous. As a result, the colors once dried appear lighter and less saturated than when wet (see {% cite 'Cerasuolo 2017' '220–30' %}; [[Cerasuolo 2019]]).
 
-A conscious and attentive protective intervention driven by the same care was taken with the two *Tüchlein* by Bruegel, which were placed under the glass as a preventive measure, rejecting the choice of more invasive interventions so as not to distort the optical qualities of the medium (see [[Cerasuolo 2017\|, 220–30]]; [[Cerasuolo 2019]]).
+A conscious and attentive protective intervention driven by the same care was taken with the two *Tüchlein* by Bruegel, which were placed under the glass as a preventive measure, rejecting the choice of more invasive interventions so as not to distort the optical qualities of the medium (see {% cite 'Cerasuolo 2017' '220–30' %}; [[Cerasuolo 2019]]).
 
 The documents testify to a remarkable awareness of the conservation problems posed by these works, which resulted in efforts of a purely conservative nature, thus avoiding the risks entailed by intrusive interventions. In 1846, Camillo Guerra, a professor of painting, wrote to the director of the museum reporting on the poor condition of the two Bruegels. In an 1847 document in reference to one of the two paintings, he wrote that “as it is painted in glue-tempera it is more easily subject to deterioration.” On May 13, 1853, the Commissione dei Restauri (the commission of artists who supervised restorations at the Museum) took the decision “to put behind glass the two tempera paintings by Pieter Bruegel, which are kept in the Dutch school” (see [[Cerasuolo 2019]]).
 
 ## The Transfer: Ancient Testimonies and Dangerous Practices
 
-Another important aspect of the caution shown by the museum administration concerns the practice of transfer, which was consciously avoided in the nineteenth century in the Museo Borbonico thanks to the awareness of its dangers. We find a clear testimony of this in a document dated 1810: Michele Arditi strongly opposed Paolino Girgenti, who wanted to transfer the *Strage degli Innocenti* by Andrea Vaccaro, in order to eliminate the imperfection caused by the seam joining the two pieces of canvas ([[D’Alconzo and Prisco 2005\|, 84]]).
+Another important aspect of the caution shown by the museum administration concerns the practice of transfer, which was consciously avoided in the nineteenth century in the Museo Borbonico thanks to the awareness of its dangers. We find a clear testimony of this in a document dated 1810: Michele Arditi strongly opposed Paolino Girgenti, who wanted to transfer the *Strage degli Innocenti* by Andrea Vaccaro, in order to eliminate the imperfection caused by the seam joining the two pieces of canvas ({% cite 'D’Alconzo and Prisco 2005' '84' %}).
 
-The practice of transfer was carried out very early in Naples, since at least the eighteenth century. In 1742, Bernardo De Dominici recounted the skill of two Neapolitan artists, Nicolò di Simone and Alessandro Majello, who specialized in the transfer of flaking paintings on panel onto canvas supports ([[De Dominici \[1742–43\] 2003–14\|, 796, 994]], cited in [[Conti 2007\|, 140]]).
+The practice of transfer was carried out very early in Naples, since at least the eighteenth century. In 1742, Bernardo De Dominici recounted the skill of two Neapolitan artists, Nicolò di Simone and Alessandro Majello, who specialized in the transfer of flaking paintings on panel onto canvas supports ([[De Dominici \[1742–43\] 2003–14\|, 796, 994]], cited in {% cite 'Conti 2007' '140' %}).
 
-The restoration of a painting by Fedele Fischetti, *Noli Me Tangere*, from the church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–1767. There are documents that refer to Fischetti’s activity as a restorer ([[Nappi 1984\|, 320]]), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
+The restoration of a painting by Fedele Fischetti, *Noli Me Tangere*, from the church of Santa Caterina da Siena ([fig. 5.7a](#fig-5-7)), in 1998,[^13] enabled us to examine a material example of a partial transfer procedure, probably carried out by the artist himself during the execution of the painting, which can be traced back to 1766–1767. There are documents that refer to Fischetti’s activity as a restorer ({% cite 'Nappi 1984' '320' %}), but in this case it was possible to verify the procedure carried out long ago directly on a painting.
 
 {% figure 'fig-5-7' %}
 
@@ -139,15 +139,15 @@ Evidently—probably following an accident—the painter had needed to restore h
 
 The fact that the intervention had been carried out by the artist himself is deduced from the nature of the canvas and from the fact that the gaps in the upper part are filled with an oily mixture quite similar to the original, applied from the back—underneath the lining canvas—and the color applied on the front over these fillings is similar to the original in the handling of the brushstrokes and color scheme, but slightly obscured in these areas. [fig. 5.7b](#fig-5-7)) shows the areas affected by these “integrations.”
 
-The practice of transfer—often claimed by restorers to be a secret capable of saving deteriorated paintings—causes more problems than it solves, as is now well understood. Although in the nineteenth century it was banned during restoration in the Real Museo Borbonico, it was unfortunately no longer avoided in the early twentieth century. In the years leading up to the 1960s, the transfer of easel paintings was considered a way of giving paintings greater durability (much like the *strappo* technique used with frescoes), so much so that it was also approved by rigorous ministerial circulars, and indeed it was practiced repeatedly, with questionable results. If the operation could have been carried out without very serious consequences for Neapolitan seventeenth-century paintings, which are characterized by remarkably thick and compact preparatory layers—(although even there it actually impoverished the paint layer and its texture), in other cases the consequences of these interventions were truly deleterious. This was the case with Titian’s *Paolo III col Camauro.* Titian famously painted directly onto lightly prepared canvas, and *Paolo III* was seriously damaged by the transfer carried out by Stanislao Troiano in 1932 ([[A. Cerasuolo 2013\|, 197]]).
+The practice of transfer—often claimed by restorers to be a secret capable of saving deteriorated paintings—causes more problems than it solves, as is now well understood. Although in the nineteenth century it was banned during restoration in the Real Museo Borbonico, it was unfortunately no longer avoided in the early twentieth century. In the years leading up to the 1960s, the transfer of easel paintings was considered a way of giving paintings greater durability (much like the *strappo* technique used with frescoes), so much so that it was also approved by rigorous ministerial circulars, and indeed it was practiced repeatedly, with questionable results. If the operation could have been carried out without very serious consequences for Neapolitan seventeenth-century paintings, which are characterized by remarkably thick and compact preparatory layers—(although even there it actually impoverished the paint layer and its texture), in other cases the consequences of these interventions were truly deleterious. This was the case with Titian’s *Paolo III col Camauro.* Titian famously painted directly onto lightly prepared canvas, and *Paolo III* was seriously damaged by the transfer carried out by Stanislao Troiano in 1932 ({% cite 'Cerasuolo 2013' '197' %}).
 
-In the first half of the twentieth century, Pasquale Chiariello and his sons Umberto and Raffaele also carried out many transfers (not always with positive results), while they successfully continued the activities of the family business and extending them to all “restoration” operations—perpetuating the traditional practice of flour paste lining ([[Cerasuolo 2007\|, 41]]).
+In the first half of the twentieth century, Pasquale Chiariello and his sons Umberto and Raffaele also carried out many transfers (not always with positive results), while they successfully continued the activities of the family business and extending them to all “restoration” operations—perpetuating the traditional practice of flour paste lining ({% cite 'Cerasuolo 2007' '41' %}).
 
 ## The Twentieth Century: The Experience of Antonio De Mata
 
-Finally, in the second half of the twentieth century, improvements to traditional lining techniques with *colla pasta* (glue paste) were developed by Antonio De Mata ([[Cerasuolo 2008\|, 40–42]]).[^14] De Mata personally took care of the lining and the cleaning and restoration. In his vision, structural conservation was not a subordinate phase but together with the other phases of conservation/restoration contributed to the aesthetic recovery of the materiality of a work. He developed a temporary stretcher with adjustable tie-rods that allowed a canvas’s tension to be controlled by loosening and tightening as necessary. He also devised a procedure for the preventive consolidation of paintings on canvas. After freeing the surface from dust and foreign matter, animal glue was gradually applied on the back, in several stages, if necessary, keeping the canvas fixed at the edges. This procedure, which was completed by ironing the painting from the back, reduced the risks of humidity and allowed the improvement of the surface of the paint film without damaging its material qualities.
+Finally, in the second half of the twentieth century, improvements to traditional lining techniques with *colla pasta* (glue paste) were developed by Antonio De Mata ({% cite 'Cerasuolo 2008' '40–42' %}).[^14] De Mata personally took care of the lining and the cleaning and restoration. In his vision, structural conservation was not a subordinate phase but together with the other phases of conservation/restoration contributed to the aesthetic recovery of the materiality of a work. He developed a temporary stretcher with adjustable tie-rods that allowed a canvas’s tension to be controlled by loosening and tightening as necessary. He also devised a procedure for the preventive consolidation of paintings on canvas. After freeing the surface from dust and foreign matter, animal glue was gradually applied on the back, in several stages, if necessary, keeping the canvas fixed at the edges. This procedure, which was completed by ironing the painting from the back, reduced the risks of humidity and allowed the improvement of the surface of the paint film without damaging its material qualities.
 
-The procedure is particularly suitable for solving the conservation problems of Neapolitan paintings on canvas of the seventeenth and eighteenth centuries, with their thick, rigid preparation layers. Indeed, the animal glues and flour—materials that have always been used for preparing canvases before applying the oil ground and the oil-bound paint layers (see [[Cerasuolo 2017\|, 240–41]]; [[Véliz 1982, 50–51]]), are highly compatible with the original ones, and are able to effectively consolidate old master paintings on canvas.
+The procedure is particularly suitable for solving the conservation problems of Neapolitan paintings on canvas of the seventeenth and eighteenth centuries, with their thick, rigid preparation layers. Indeed, the animal glues and flour—materials that have always been used for preparing canvases before applying the oil ground and the oil-bound paint layers (see {% cite 'Cerasuolo 2017' '240–41' %}; [[Véliz 1982, 50–51]]), are highly compatible with the original ones, and are able to effectively consolidate old master paintings on canvas.
 
 Comparing the condition of many paintings in the Capodimonte Museum that have been lined in the last fifty years—as well as documented and continuously monitored—makes it possible to evaluate the positive outcome of these linings over time. In many cases this method continues to be effective, and some restorers who learned directly from De Mata and continued his practice, can still teach us much about the behavior of materials and intervention techniques. To preserve a testimony, a meeting was organized in January 2014: an interview with the restorers of that generation, recording their memories and observations, in order to capture a tradition that has been too often left unrecorded.[^15] The recovery of these procedures, insofar as they can be effective and safe, will hopefully be a task and a legacy of the new generations.
 
@@ -159,7 +159,7 @@ Comparing the condition of many paintings in the Capodimonte Museum that have be
 
 [^1]: The term *telaiolo* is found in contemporary documents with different spellings but the same meaning: *telaiuolo*, *telajolo*.
 
-[^2]: The letter is kept in the “Quaderni di Giovanni Fraccia”: a transcription made in the 1880s by the scholar Giovanni Fraccia of documents already present in a bundle of the Naples State Archive, destroyed during the Second World War. The 'notebooks' containing these transcriptions are now kept in the archives of the National Archaeological Museum of Naples. Archivio Storico del Museo Archeologico Nazionale di Napoli (ASMANN), II inv., 40, II, “Quaderni di Giovanni Fraccia,” 1759, 68; cited by [[Denunzio 2002\|, 264, 270n16]]. See also [[Cerasuolo 2007\|, 28–29]].
+[^2]: The letter is kept in the “Quaderni di Giovanni Fraccia”: a transcription made in the 1880s by the scholar Giovanni Fraccia of documents already present in a bundle of the Naples State Archive, destroyed during the Second World War. The 'notebooks' containing these transcriptions are now kept in the archives of the National Archaeological Museum of Naples. Archivio Storico del Museo Archeologico Nazionale di Napoli (ASMANN), II inv., 40, II, “Quaderni di Giovanni Fraccia,” 1759, 68; cited by {% cite 'Denunzio 2002' '264, 270n16' %}. See also {% cite 'Cerasuolo 2007' '28–29' %}.
 
 [^3]: ASMANN, “Quaderni di Giovanni Fraccia,” 1759, 68.
 
