--- a/content/1-history/6.md
+++ b/content/1-history/6.md
@@ -15,7 +15,7 @@ abstract: "The Russian school of oil painting conservation has come a long way s
 ---
 ## Introduction
 
-The tradition of Russian conservation officially started in 1743, when the German artist Lucas Conrad Pfandzelt came to Saint Petersburg to care for the royal painting gallery. During the first decades of its existence, conservators established main principles that were retained for about two centuries. One of these was sticking to a complex structural treatment that would always include such serious interventions as transferring paintings from their original supports and, of course, lining ([[Alyoshin 1989\|, 55]]).
+The tradition of Russian conservation officially started in 1743, when the German artist Lucas Conrad Pfandzelt came to Saint Petersburg to care for the royal painting gallery. During the first decades of its existence, conservators established main principles that were retained for about two centuries. One of these was sticking to a complex structural treatment that would always include such serious interventions as transferring paintings from their original supports and, of course, lining ({% cite 'Alyoshin 1989' '55' %}).
 
 For a very long time after the October Socialist Revolution of 1917, conservation in Russia developed in isolation from the rest of the world. With the beginning of the thaw period in Soviet culture (from the mid-1950s to the mid-1960s) the sphere of heritage preservation experienced significant evolution, and the restoration community started to wander away from techniques developed in the nineteenth century. In 1957, with the founding of the All-Union Central Research Laboratory for Conservation and Restoration of Museum Valuables,[^1] conservation science in Russia gained impetus; however, it was not until the 1960s that conservators of easel paintings were able to access professional literature and scientific events from abroad to learn about methods used in current practice by their foreign colleagues.
 
@@ -25,15 +25,15 @@ From the 1960s to the 1980s, Soviet conservators reviewed, created, and adapted 
 
 ## Transformations of Traditional Lining Technique
 
-From the beginning of 1960s until the mid-1980s, attention was particularly given to the traditional lining technique. A lot of experiments were undertaken to work out best recipes ([[Lelekova 1966\|, 107–8]]) or to pick plasticizers. Historically, natural honey was used for this purpose, but its effects and properties in lining compounds were always questioned. In 1960, research on different lining adhesives was published in which specialists from State Central Arts and Conservation Studios[^4] discussed shrinkage of sturgeon glue films, both pure and with added different plasticizers. As a result of their experiments, the authors proposed using polyvinyl alcohol with glycerin, as these materials guarantee a more predictable effect, whereas the plasticizing properties of honey were considered insignificant and very much dependent on the amount of sucrose in its composition ([[Trostyanskaya, Tomashevich, and Sorokina 1960\|, 181–82]]).
+From the beginning of 1960s until the mid-1980s, attention was particularly given to the traditional lining technique. A lot of experiments were undertaken to work out best recipes ({% cite 'Lelekova 1966' '107–8' %}) or to pick plasticizers. Historically, natural honey was used for this purpose, but its effects and properties in lining compounds were always questioned. In 1960, research on different lining adhesives was published in which specialists from State Central Arts and Conservation Studios[^4] discussed shrinkage of sturgeon glue films, both pure and with added different plasticizers. As a result of their experiments, the authors proposed using polyvinyl alcohol with glycerin, as these materials guarantee a more predictable effect, whereas the plasticizing properties of honey were considered insignificant and very much dependent on the amount of sucrose in its composition ({% cite 'Trostyanskaya, Tomashevich, and Sorokina 1960' '181–82' %}).
 
-However, the results of this research were not widely applied in practice. New instructions and publications would still recommend that conservators use compounds for lining made up of different proportions of sturgeon glue and honey. For example, Margarita Alekseyeva and Zinaida Tcherkasova in an article on aqueous lining solutions mention all the known drawbacks of sturgeon glue–honey compounds but still include the recipes in their guidelines ([[Alekseyeva and Tcherkasova 1968\|, 19–21]]).
+However, the results of this research were not widely applied in practice. New instructions and publications would still recommend that conservators use compounds for lining made up of different proportions of sturgeon glue and honey. For example, Margarita Alekseyeva and Zinaida Tcherkasova in an article on aqueous lining solutions mention all the known drawbacks of sturgeon glue–honey compounds but still include the recipes in their guidelines ({% cite 'Alekseyeva and Tcherkasova 1968' '19–21' %}).
 
 The authors offer two practical methods of performing the process of lining canvases. The first is based on a recipe with a 1:1 ratio of honey to the dry sturgeon glue, by weight. It suggests that the lining canvas be glued three times: the first two with a 4%–8% solution and the third with an 8%–10% solution. All three layers of glue should be dried in sequence. The original canvas is covered with a 3%–6% water solution of sturgeon glue with honey. After it dries, a second layer of 8%–10% solution is applied. And as this second layer becomes tacky, the two canvases are joined, evenly pressed together, and ironed using warm and cold irons alternately until the condensed moisture stops being released.
 
-The second method is based on a recipe with 2:1 ratio of dry sturgeon glue to honey, again by weight. The lining canvas is prepared with two layers of warm 6%–8% solution of sturgeon glue and honey. The original canvas of the painting is infused with the same compound from one to five times, with each layer being allowed to dry between coats. Before the lining procedure, both canvases would be infused with a 12%–17% solution prepared in a proportion of 2–3:1 of dry sturgeon glue and honey, respectively. As the layers on both canvases become tacky, they are joined evenly and left to dry in a vertical position for three to six hours. After that, the canvases are ironed using warm and cold irons alternately until the condensed moisture stops being released ([[Alekseyeva and Tcherkasova 1968\|, 22]]).
+The second method is based on a recipe with 2:1 ratio of dry sturgeon glue to honey, again by weight. The lining canvas is prepared with two layers of warm 6%–8% solution of sturgeon glue and honey. The original canvas of the painting is infused with the same compound from one to five times, with each layer being allowed to dry between coats. Before the lining procedure, both canvases would be infused with a 12%–17% solution prepared in a proportion of 2–3:1 of dry sturgeon glue and honey, respectively. As the layers on both canvases become tacky, they are joined evenly and left to dry in a vertical position for three to six hours. After that, the canvases are ironed using warm and cold irons alternately until the condensed moisture stops being released ({% cite 'Alekseyeva and Tcherkasova 1968' '22' %}).
 
-Several years later these methods and their variations were included by Ivan Gorin and Zinaida Tcherkasova in chapter of a text for art colleges teaching conservation; it remained the most popular guide to practical restoration for at least 20 years ([[Gorin and Tcherkasova 1977\|, 126]]). Interestingly, it also has chapters on structural treatments with wax-resin adhesives that were already falling out of practice by that time.
+Several years later these methods and their variations were included by Ivan Gorin and Zinaida Tcherkasova in chapter of a text for art colleges teaching conservation; it remained the most popular guide to practical restoration for at least 20 years ({% cite 'Gorin and Tcherkasova 1977' '126' %}). Interestingly, it also has chapters on structural treatments with wax-resin adhesives that were already falling out of practice by that time.
 
 In 1974, Larissa Yashkina made a presentation at Greenwich conference, basing her speech on a variation of the first method described above, though she offered slightly different formulations of the lining compounds and gave more technical details about the procedure ([[Yashkina 2003]]). It was a more common method at that time, and considered to be more reliable.
 
@@ -45,7 +45,7 @@ Moreover, there is now a trend toward reducing the amount of additives in the li
 
 ## Treatments to Postpone Lining
 
-In the 1970s and 1980s, leading studios and institutions evolved new methods of preserving linen canvases that are still widely used in conservation practice in Russia. One of the most vivid examples is a tear-mending technique developed at the State Research Institute for Restoration (GOSNIIR) in the 1970s that is still widely used by conservators throughout the country ([[Surovov and Yashkina 1979]]). It suggests that tears and cuts of the textile painting supports are treated with 5% solution of polyvinyl butyral (PVB) in ethanol or isopropanol. Saturated threads are interwoven and after drying are fixed using a hot spatula. This adhesive has been widely used in conservation practice in Russia since 1950s ([[Rumyantsev 1953]]), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature (Tg) is approximately 60°C–70°C. “PVB films are resistant to light and heat-sealable at temperatures above 120°C.…PVB films are noted for their biostable and abrasion resistance properties as well as for good colorfastness against ultraviolet light, low static generation, and low water absorbtion” ([[Sannikova 2018\|, 106]]). In 2008, the tear-mending technique was slightly extended by adjusting the method for strip-lining two-sided paintings to avoid overlaps of new margins over the paint layer ([[Yashkina and Churakova 2013]]). The working procedure has also slightly changed. Following a general trend holding that less is more, conservators tend to use less adhesive for the process: instead of saturating canvas around the tears, they just apply it to the direct spots.
+In the 1970s and 1980s, leading studios and institutions evolved new methods of preserving linen canvases that are still widely used in conservation practice in Russia. One of the most vivid examples is a tear-mending technique developed at the State Research Institute for Restoration (GOSNIIR) in the 1970s that is still widely used by conservators throughout the country ([[Surovov and Yashkina 1979]]). It suggests that tears and cuts of the textile painting supports are treated with 5% solution of polyvinyl butyral (PVB) in ethanol or isopropanol. Saturated threads are interwoven and after drying are fixed using a hot spatula. This adhesive has been widely used in conservation practice in Russia since 1950s ([[Rumyantsev 1953]]), especially for treating murals, ceramics, and fabric painting supports. Its glass transition temperature (Tg) is approximately 60°C–70°C. “PVB films are resistant to light and heat-sealable at temperatures above 120°C.…PVB films are noted for their biostable and abrasion resistance properties as well as for good colorfastness against ultraviolet light, low static generation, and low water absorbtion” ({% cite 'Sannikova 2018' '106' %}). In 2008, the tear-mending technique was slightly extended by adjusting the method for strip-lining two-sided paintings to avoid overlaps of new margins over the paint layer ([[Yashkina and Churakova 2013]]). The working procedure has also slightly changed. Following a general trend holding that less is more, conservators tend to use less adhesive for the process: instead of saturating canvas around the tears, they just apply it to the direct spots.
 
 A method of stabilizing canvases by starch sizing was introduced by conservators of the Tretyakov gallery and came into common practice as a procedure for conserving canvas ([[Yushkevich 1995]]). The technique was first developed in 1970s but was not published until the mid-1990s, being constantly improved in the interim by its author, Galina Yushkevich.
 
@@ -61,13 +61,13 @@ Evaluating methods of hydrophobization of canvases with solutions of organosilic
 
 We did not have an industry dedicated to conservation products in the former Soviet Union, nor do we currently have one in Russia. None of the polymers that have been studied, tested, and applied were produced specifically for conservation purposes; all of them were created for the production sector and then adapted to conservation needs. In the 1990s, not only the political but also the economic life of our country underwent serious changes after the collapse of the Soviet Union. Many manufacturers either closed or changed production technology, afterwards offering new materials to the market. At the same time, importation of European and American conservation materials started to grow, so people working in the conservation and restoration sphere suddenly had a broad selection of totally new polymers to get acquainted with. Consequently, the beginning of the new period in Russian history started with a lot of experimentation, comparative work, and research in the conservation field. Specialists returned to the international conservation community, attending conferences and scientific seminars and learning more about the work of their foreign colleagues. At this time a lot of tests were also established, including those on materials for structural conservation of canvases.
 
-GOSNIIR conducted comparative research on three acrylic dispersions: Lascaux 498 HV (Lascaux Colours & Restauro) was compared to two adhesives originally produced in Russia for coated paper and textile manufacturing. The first has the trade name ABV1B and is a copolymer of butyl acrylate, methacrylic acid, and vinyl acetate. The second has the trade name AK-243 and is a copolymer of ethyl acrylate, methacrylic acid, vinyl acetate, and acrylonitrile. Both have a working concentration of up to 50% ([[Fedoseeva et al. 2016\|, 98–99} no perms doc +}). All three dispersions meet the general requirements for a strip-lining adhesive: to not penetrate deeply into the threads of the canvas, not cause shrinkage of the canvas, have a high adhesive capacity, and form a film with elasticity that persists over time.
+GOSNIIR conducted comparative research on three acrylic dispersions: Lascaux 498 HV (Lascaux Colours & Restauro) was compared to two adhesives originally produced in Russia for coated paper and textile manufacturing. The first has the trade name ABV1B and is a copolymer of butyl acrylate, methacrylic acid, and vinyl acetate. The second has the trade name AK-243 and is a copolymer of ethyl acrylate, methacrylic acid, vinyl acetate, and acrylonitrile. Both have a working concentration of up to 50% ({% cite 'Fedoseeva et al. 2016' '98–99' %}). All three dispersions meet the general requirements for a strip-lining adhesive: to not penetrate deeply into the threads of the canvas, not cause shrinkage of the canvas, have a high adhesive capacity, and form a film with elasticity that persists over time.
 
-Results of the comparative analysis showed that the AK-243 and ABV-1B dispersions are superior to the Lascaux adhesive on a number of indicators; in particular, they penetrate less into the threads of the canvas and do not cause shrinkage ([[Fedoseeva, Malachevskaya, and Yashkina 1997]]). Nevertheless, today the most popular adhesives for strip-lining are Beva products (Beva 371 Film or Beva D-8 Dispersion) and Lascaux 498 HV ([[Romanova 2019]]). This popularity is despite the fact that both AK-243 and ABV-1B are still produced in Russia: manufacturers sell them only in industrial-scale volumes and retailers are not interested in organizing packaging the products in smaller sizes, conservators have problems obtaining them.
+Results of the comparative analysis showed that the AK-243 and ABV-1B dispersions are superior to the Lascaux adhesive on a number of indicators; in particular, they penetrate less into the threads of the canvas and do not cause shrinkage ([[Fedoseeva, Malachevskaya, and Yashkina 1997' %}). Nevertheless, today the most popular adhesives for strip-lining are Beva products (Beva 371 Film or Beva D-8 Dispersion) and Lascaux 498 HV ([[Romanova 2019]]). This popularity is despite the fact that both AK-243 and ABV-1B are still produced in Russia: manufacturers sell them only in industrial-scale volumes and retailers are not interested in organizing packaging the products in smaller sizes, conservators have problems obtaining them.
 
 Following international trends, in the 1990s, the Russian conservation community started to familiarize itself with synthetic materials for lining and to compare them with traditional techniques ([[Fedoseeva 1998]]). There were also some intentions to develop or adapt Russian synthetic polymers for the lining process.[^6] In the end, an understanding that the most common sturgeon glue lining has obvious drawbacks and is not suitable for all artworks led to adopting a method for treating oil paintings that has been well known for lining textiles since the 1970s, when it was introduced at the Pranas Gudynas Centre for Restoration in Lithuania.
 
-The method employs an acrylic adhesive with the trade name A-45-K, which is a copolymer of vinyl acetate, butyl acrylate, and acrylic acid in ethyl acetate ({Emelyanov 2004}). In a form of either a dispersion or acetone solution, it can be brushed or sprayed on a lining cloth and later activated by temperature ([[Semechkina 1993\|, 125]]). Its properties are in many ways similar to Plextol and Lascaux adhesives, but choosing a local manufacturer was preferred in the 1970s, not only to support the country’s economy but also because this particular material was well-known and tested. A-45-K has not become very popular for standard lining procedures for canvases, but it showed good results in a few specific case studies.
+The method employs an acrylic adhesive with the trade name A-45-K, which is a copolymer of vinyl acetate, butyl acrylate, and acrylic acid in ethyl acetate ({Emelyanov 2004}). In a form of either a dispersion or acetone solution, it can be brushed or sprayed on a lining cloth and later activated by temperature ({% cite 'Semechkina 1993' '125' %}). Its properties are in many ways similar to Plextol and Lascaux adhesives, but choosing a local manufacturer was preferred in the 1970s, not only to support the country’s economy but also because this particular material was well-known and tested. A-45-K has not become very popular for standard lining procedures for canvases, but it showed good results in a few specific case studies.
 
 One example is the lining support of the eighteenth century painting *Conclusions of Field Marshall General Count B. H. Minikh on the Seizure of Ochakov*” ([figs. 6.1a](#fig-6-1-a) and [6.1b](#fig-6-1-b)) ([[Iurovetskaia et al. 2019]]). Silk was used as a support ([fig. 6.2](#fig-6-2)), and the image layer combined oil, gold paint, and ink. Adhesive A-45-K dissolved in acetone was sprayed on the surface of the lining cloth ([fig. 6.3](#fig-6-3)) and after matching with the original support was activated locally by heat ([figs. 6.4a](#fig-6-4-a) and [6.4b](#fig-6-4-b)). Effective application of A-45-K for this art piece still has not led to widespread adoption of this technique among professional conservators because, since 2006, when this method was first introduced for lining the Mikhail Vrubel painting *Gwydon* on a sackcloth support, it has become increasingly complicated to buy the material from the manufacturers.
 
