--- a/content/1-history/7.md
+++ b/content/1-history/7.md
@@ -15,7 +15,7 @@ abstract: "Emphasizing international inclusivity and valuing regional and tradit
 
 ## Introduction
 
-In his essay “Three Days that Changed Conservation,” David Bomford reflected upon the circumstances surrounding the 1974 Conference on Comparative Lining Techniques and its status as an important inflection point in the history of paintings conservation: “It was the beginning of a new precision, a new refinement, and it heralded a new technical intelligence in targeting conservation treatments …. Greenwich was when conservation came of age” ([[Bomford 2017\|, 1]]). What followed was a proliferation of approaches to treatment, coincident adoption of new materials, and a need for supportive fundamental and practical research.
+In his essay “Three Days that Changed Conservation,” David Bomford reflected upon the circumstances surrounding the 1974 Conference on Comparative Lining Techniques and its status as an important inflection point in the history of paintings conservation: “It was the beginning of a new precision, a new refinement, and it heralded a new technical intelligence in targeting conservation treatments …. Greenwich was when conservation came of age” ({% cite 'Bomford 2017' '1' %}). What followed was a proliferation of approaches to treatment, coincident adoption of new materials, and a need for supportive fundamental and practical research.
 
 The past forty-five years have seen technical refinements of traditional methods, changes in the ways that conservators communicate the nuances of structural treatment, engineering of new purpose-built equipment for lining and alternatives to lining, development of new approaches to lining, changes in material formulations, adoption of sophisticated research instrumentation, and increased international exchange of information. While the advances have been numerous, the challenges ahead are equally numerous and increasingly formidable. This paper attempts to anticipate some of these significant challenges and to provide a framework for sustainable collaborative efforts to address future difficulties.
 
