--- a/content/2-present-practice/11.md
+++ b/content/2-present-practice/11.md
@@ -21,7 +21,7 @@ abstract: "This paper describes some customized methodologies developed to solve
 
 ## Introduction
 
-“We are firmly convinced that there cannot be a single method valid for every painting—not only for obvious reasons related to the nature of the work, but above all because of the individual ‘character’ of the painting, with its ‘own’ fabric, its ‘own’ ground preparation, its ‘own’ pigment and its ‘own’ reaction to the passage of time. It follows that if there is no single method and no single material appropriate to every picture, it must and will be for the painting itself to impose a careful choice between the various methods and materials” ([[Baldini and Taiti 2003\|, 115]]).
+“We are firmly convinced that there cannot be a single method valid for every painting—not only for obvious reasons related to the nature of the work, but above all because of the individual ‘character’ of the painting, with its ‘own’ fabric, its ‘own’ ground preparation, its ‘own’ pigment and its ‘own’ reaction to the passage of time. It follows that if there is no single method and no single material appropriate to every picture, it must and will be for the painting itself to impose a careful choice between the various methods and materials” ({% cite 'Baldini and Taiti 2003' '115' %}).
 
 The quotation above is an excerpt from Sergio Taiti and Umberto Baldini’s address at the Greenwich lining conference in 1974. Sergio Taiti had been chief conservator for structural treatments on canvas at Opificio delle Pietre Dure of Florence for about twenty years and during his tenure he distinguished himself for having a deep sensitivity toward the specific characteristics of paintings. We didn’t have the opportunity to meet him in person, but we had our training in canvas conservation with Luciano Sostegni, who worked closely with him for a long time and became his successor at the Fortezza da Basso’s Laboratories. Although our profession led us to test and use new and different materials and methods, his teachings remain the basis for our approach to work and we are still firmly convinced of their validity.
 
@@ -118,7 +118,7 @@ Thanks to Jennifer Ginevra (TEFL/Cambridge educator) and Dan Butcovich Pieroni (
 
 {% endbackmatter %}
 
-[^1]: Measuring the canvas pH, the degree of polymerization (DP), traction testing of the yarn (tensile strength) with a dynamometer, and eventual examination with scanning electron microscopy (SEM) and energy dispersive X-ray spectroscopy (EDS). See ([[Orata 2009\|, 25–31]]).
+[^1]: Measuring the canvas pH, the degree of polymerization (DP), traction testing of the yarn (tensile strength) with a dynamometer, and eventual examination with scanning electron microscopy (SEM) and energy dispersive X-ray spectroscopy (EDS). See ({% cite 'Orata 2009' '25–31' %}).
 
 [^2]: The original support is made up of five pieces stitched together along the selvages.
 
