--- a/content/2-present-practice/13.md
+++ b/content/2-present-practice/13.md
@@ -34,15 +34,15 @@ In most cases, even when paintings at first sight seem beyond recovery, local tr
 
 ## The Painter Engelbert Zimmermann and His Totentanz Cycle
 
-The painting *The Last Judgment* is the central piece of Engelbert Zimmermann’s Totentanz (danse macabre) series, which is owned by the Stadtmuseum Wasserburg am Inn, a small community museum in eastern Bavaria. The large-format painting, which dates from the beginning of the nineteenth century, had several horizontal tears, one of which divided the support in half (see [fig. 13.1](#fig-13-1)). The series was created in 1839 for the mortuary hall of the Wasserburg cemetery and is based on a model by Hans Holbein the Younger. His series Imagines Mortis (Images of Death)—does not show the dance of Death with his victims as was customary in the Middle Ages, but rather individual, self-contained scenes accompanied by interpretative verses and Bible quotations ([[Wunderlich 2010]]). The Totentanz from Wasserburg is considered one of the few remaining monumental cycles of this kind from the first half of the nineteenth century ([[Sörries 1998\|, 276]]).
+The painting *The Last Judgment* is the central piece of Engelbert Zimmermann’s Totentanz (danse macabre) series, which is owned by the Stadtmuseum Wasserburg am Inn, a small community museum in eastern Bavaria. The large-format painting, which dates from the beginning of the nineteenth century, had several horizontal tears, one of which divided the support in half (see [fig. 13.1](#fig-13-1)). The series was created in 1839 for the mortuary hall of the Wasserburg cemetery and is based on a model by Hans Holbein the Younger. His series Imagines Mortis (Images of Death)—does not show the dance of Death with his victims as was customary in the Middle Ages, but rather individual, self-contained scenes accompanied by interpretative verses and Bible quotations ([[Wunderlich 2010]]). The Totentanz from Wasserburg is considered one of the few remaining monumental cycles of this kind from the first half of the nineteenth century ({% cite 'Sörries 1998' '276' %}).
 
 Zimmermann was born in Wasserburg in 1807, the son of a carpenter. He was enrolled in figure drawing at the Munich Art Academy in 1827, but nothing is recorded about his further career and very few paintings by him are known. The mortuary hall was built in 1830 as part of the expansion and renovation of the Wasserburg cemetery, and a few years later Zimmermann was commissioned to furnish it. The cycle he created consists of six rectangular paintings (135 x 85 cm), and a central painting depicting the Last Judgment (225 x 130 cm).[^1] Initially, a cycle of eighteen paintings was planned. In a declaration from August 24 of the same year, however, the number was reduced by half (and in the end, only seven seem to have been executed); the free wall surfaces were to be filled with aphorisms.
 
-Zimmermann states in the declaration that he wanted to paint the paintings “for the sake of better durability [with] oil paints on metal sheets.” But in the end all seven paintings were executed on canvas. The painter added the corresponding quotations from the Bible directly on the plaster under the small paintings. For the central *Last Judgment*, the text appears at the bottom of the canvas. The Bible quotations and aphorisms are taken from an 1832 edition of Holbein’s Imagines Mortis with texts by Joseph Schlothenhauer, a professor at the Munich Art Academy ([[Von Perger 2013\|, 201–3]]). Seen from the entrance of the hall, the four small paintings depicting Death dancing with different individuals hung to the left and right: On the left the child and the bride, on the right the couple and the old man. At the front wall, in a semicircular niche, hung *The Last Judgment* flanked by *Expulsion from Paradise* on the left and *Skeletons Playing Music* on the right.
+Zimmermann states in the declaration that he wanted to paint the paintings “for the sake of better durability [with] oil paints on metal sheets.” But in the end all seven paintings were executed on canvas. The painter added the corresponding quotations from the Bible directly on the plaster under the small paintings. For the central *Last Judgment*, the text appears at the bottom of the canvas. The Bible quotations and aphorisms are taken from an 1832 edition of Holbein’s Imagines Mortis with texts by Joseph Schlothenhauer, a professor at the Munich Art Academy ({% cite 'Von Perger 2013' '201–3' %}). Seen from the entrance of the hall, the four small paintings depicting Death dancing with different individuals hung to the left and right: On the left the child and the bride, on the right the couple and the old man. At the front wall, in a semicircular niche, hung *The Last Judgment* flanked by *Expulsion from Paradise* on the left and *Skeletons Playing Music* on the right.
 
 The paintings were individually photographed in 1919 and published in the illustrated magazine *Das Bayerland*. These are the only known photographs of the cycle in their original arrangement in the mortuary hall. During the course of the hall’s renovation in 1924, the Zimmermann cycle was taken down and moved to the attic of the mortuary hall, and the aphorisms were overpainted. After a publication by Otto Kögl, who pointed out the importance and quality of Zimmerman’s Totentanz, the Stadtmuseum Wasserburg took the cycle into its collection in 1940 and exhibited it for some time.[^2]
 
-Possibly in the 1960s, but at the latest in the 1980s, the cycle was placed in storage at the museum.[^3] In 1998, two of the small-format paintings (*Skeletons Playing Music* and *Death and the Old Man*) were shown in the exhibition *Tanz der Toten—Todestanz: Der monumentale Totentanz im deutschsprachigen Raum* in the Museum für Sepulkralkultur in Kassel, Germany ([[Sörries 1998\|, 41]]). The museum had requested a loan of the whole cycle, but the other paintings were too damaged to be exhibited.
+Possibly in the 1960s, but at the latest in the 1980s, the cycle was placed in storage at the museum.[^3] In 1998, two of the small-format paintings (*Skeletons Playing Music* and *Death and the Old Man*) were shown in the exhibition *Tanz der Toten—Todestanz: Der monumentale Totentanz im deutschsprachigen Raum* in the Museum für Sepulkralkultur in Kassel, Germany ({% cite 'Sörries 1998' '41' %}). The museum had requested a loan of the whole cycle, but the other paintings were too damaged to be exhibited.
 
 In 2013, the painting was offered to the chair of Conservation-Restoration to be treated by students, as the museum did not have the funds to pay for the restoration. By this point, it had not been accessible to the public for several decades.
 
@@ -166,6 +166,6 @@ We would like to thank the Stadtmuseum Wasserburg am Inn for its cooperation and
 
 [^7]: “Finely dispersed, aqueous emulsion of a methacrylic acid ester-/acrylic acid ester-copolymer. The emulsion contains an anionic emulsifier system and is free from film forming auxiliary agents, solvents and plasticizers.” Source: http://www.kremer-pigmente.com/media/pdf/76202e.pdf. The product is no longer produced but is still commercially available through Kremer Pigmente.
 
-[^8]: Formerly named Plextol D 360 (consisting of n-butyl methacrylate and methyl acrylate). Kremer sells a substitute under the name Dispersion K 360 without giving specifications about the chemical composition other then it being a “aqueous dispersion of a thermoplastic acrylic polymer”: https://shop.kremerpigments.com/us/shop/mediums-binders-glues/76101-dispersion-k-360.html. However, it has a lower pH than Plextol D 360, and according to FTIR measurements it consists of poly butyl acrylate, polynitrile, and phthalate, thus containing a softener. See [[Reuber 2010\|, 36]]. The products we used were bought from Kremer Pigmente.
+[^8]: Formerly named Plextol D 360 (consisting of n-butyl methacrylate and methyl acrylate). Kremer sells a substitute under the name Dispersion K 360 without giving specifications about the chemical composition other then it being a “aqueous dispersion of a thermoplastic acrylic polymer”: https://shop.kremerpigments.com/us/shop/mediums-binders-glues/76101-dispersion-k-360.html. However, it has a lower pH than Plextol D 360, and according to FTIR measurements it consists of poly butyl acrylate, polynitrile, and phthalate, thus containing a softener. See {% cite 'Reuber 2010' '36' %}. The products we used were bought from Kremer Pigmente.
 
 [^9]: Plexigum PQ 611 is an isobutyl methacrylate and officially named Degalan PQ 611 since 1999. Both names refer to the same material. Until 2009 it was produced by Röhm & Haas, a company that now is part of Evonic Industries, which continued the production until 2019. It is currently produced by Röhm (not Röhm & Haas), a company that was part of Evonik Industries until August 2019 but is now independent. Since 2009 it is produced through continuous direct polymerization (CDP), making additives unnecessary. However, Kremer still sells the product under the name Plexigum PQ 611. The reason is unknown. This information was provided by Mona Konietzny by mail in May 2020. Mona had contact to staff from Evonik Industries. The product we used was from the university's stock and labelled Plexigum PQ 611, bought from Kremer Pigmente at an unknown date.
