--- a/content/2-present-practice/14.md
+++ b/content/2-present-practice/14.md
@@ -20,7 +20,7 @@ This paper examines treatments performed during the past decade on paintings mea
 
 ## Rolling, Folding, and Other Provisional Interventions—Conservation Problems of Large Canvas Paintings
 
-Vienna’s first imperial gallery displaying large canvases was established in 1656 at Stallburg Palace, which housed Leopold Wilhelm’s collection after his return from Brussels. Continual changes in selection and display means paintings were (and still are) transported between the main gallery and the other venues ([[Swoboda 2008\|, 110–23]]).
+Vienna’s first imperial gallery displaying large canvases was established in 1656 at Stallburg Palace, which housed Leopold Wilhelm’s collection after his return from Brussels. Continual changes in selection and display means paintings were (and still are) transported between the main gallery and the other venues ({% cite 'Swoboda 2008' '110–23' %}).
 
 Handling is key in the preservation of large canvas paintings. Canvases are rolled onto tubes for transport. Such manipulations are difficult, and improper handling or storage techniques (kinking, folding) often cause damage and paint losses.
 
@@ -52,7 +52,7 @@ Delaminated areas between the original and the lining canvas were reglued. We us
 
 The nineteenth century favored using types of canvas with a finer and denser texture for lining. One example of a painting lined this way is Caravaggio’s *Rosary* *Madonna,*[^10] which also exemplifies the frequent format changes imposed over the years to adjust a painting’s size to a new location. In this case, a “revised revision” occurred a century later.
 
-Rubens and other prominent Antwerp artists purchased Caravaggio’s *Rosary Madonna*, first documented in Antwerp’s Dominican church around 1620. In 1781, the painting was presented to Emperor Joseph II, and in 1786, it was transported to Vienna, presumably rolled ([[Prohaska and Swoboda 2010\|, 71]]), during the Napoleonic Wars.[^11] It was probably relined before being installed at Belvedere Palace in the early nineteenth century. We do not know why its size was reduced by folding about 30 centimeters of the original canvas over the upper strainer edge. This strip remained unlined until 1913, when the format change was reversed.[^12]
+Rubens and other prominent Antwerp artists purchased Caravaggio’s *Rosary Madonna*, first documented in Antwerp’s Dominican church around 1620. In 1781, the painting was presented to Emperor Joseph II, and in 1786, it was transported to Vienna, presumably rolled ({% cite 'Prohaska and Swoboda 2010' '71' %}), during the Napoleonic Wars.[^11] It was probably relined before being installed at Belvedere Palace in the early nineteenth century. We do not know why its size was reduced by folding about 30 centimeters of the original canvas over the upper strainer edge. This strip remained unlined until 1913, when the format change was reversed.[^12]
 
 To avoid risk and costs, large-scale paintings are rarely moved. In 2019, when the painting was moved for the exhibition *Caravaggio & Bernini*, we took the opportunity to thoroughly examine it.[^13] Unframing revealed damage to the canvas from the tacking edges but also more information on format changes. The 1913 intervention concerned only the top edge, as indicated by the different, more modern tacks used there. The nineteenth-century lining canvas did not cover the entire original canvas, as the strip folded over had remained unlined.[^14] In 1913, when the strip was reintegrated to the picture plane, the upper stretcher bar was temporarily removed to access the area for treatment. The border of the lining (the area of the previous tacking edge) was removed. This probably helped flatten deformations caused by the former tacking edge. The previously unlined original canvas was partially lined, but only to the edge of the previous lining, and a random strip of original canvas again remained unlined. The side bars of the stretcher were extended to compensate for the missing centimeters in its height, and the old upper bar of stretcher was reinserted ([fig. 14.3](#fig-14-3)). Finally, the upper portion of the painting was restretched, returning the entire composition to its original size.
 
@@ -146,7 +146,7 @@ Conservation of large paintings is teamwork, and many colleagues have contribute
 
 [^5]: The largest canvas is 400 x 800 cm: Pierre Benevault des Mares, *Diana Commands to Hunt* (1672, GG 6890). It is stored on a roll.
 
-[^6]: The same type of lining is seen on Titian’s *Nymph and Shepherd*, 1570–75 (150 x 187 cm, GG 1825) with an inscription on the reverse: “Hickel rep. 1774” ([[Oberthaler 2008\|, 192]]).
+[^6]: The same type of lining is seen on Titian’s *Nymph and Shepherd*, 1570–75 (150 x 187 cm, GG 1825) with an inscription on the reverse: “Hickel rep. 1774” ({% cite 'Oberthaler 2008' '192' %}).
 
 [^7]: See https://www.khm.at/en/objectdb/detail/1944/?offset=12&lv=list.
 
@@ -160,11 +160,11 @@ Conservation of large paintings is teamwork, and many colleagues have contribute
 
 [^11]: According to art historian Alice Hoppe-Harnoncourt, the painting was evacuated on a “big drum” (i.e., cylinder) together with seven other Italian and Netherlandish paintings in 1809 (email correspondence, Feb. 27, 2020). I am grateful to Alice Hoppe-Harnoncourt for this information.
 
-[^12]: The earliest record of the *Rosary Madonna*’s size from 1824 (Room 6, no. 20) already gives the reduced height, as does the 1837 catalogue ([[Krafft 1837\|, 33]]).
+[^12]: The earliest record of the *Rosary Madonna*’s size from 1824 (Room 6, no. 20) already gives the reduced height, as does the 1837 catalogue ({% cite 'Krafft 1837' '33' %}).
 
 [^13]: *Caravaggio & Bernini—The Discovery of Emotion.* KHM Vienna, October 15, 2019–January 19, 2020.
 
-[^14]: This was indicated by the reduced height of 337 cm in the 1837 catalogue ([[Krafft 1837\|, 33]]).
+[^14]: This was indicated by the reduced height of 337 cm in the 1837 catalogue ({% cite 'Krafft 1837' '33' %}).
 
 [^15]: Treatment by Eva Götz and Michael Odlozil; structural assistance by Rhe Suykens and Laura Hack, November 2017–February 2020.
 
