--- a/content/3-open-questions/18.md
+++ b/content/3-open-questions/18.md
@@ -70,9 +70,9 @@ It was not easy to find all the recipes used. In some cases, old documentary inf
 
 Knowing the materials used to prepare a canvas is essential to understanding the behavior of the lining treatment. With reference to the recipe, materials, and ingredients used in canvases in Spain, interesting research has been done (e.g., [[Gayo and Jover de Celis 2010]]), but we still have a lot to learn. For example, the presence of ashes in the preparatory layers has only recently been confirmed in paintings ([[Jover de Celis and Gayo 2014]]; [[Carò, Centeno, and Mahon 2018]]), although it appeared in recipes and treatises.
 
-Through the documents we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ([[Vasari (1568) 1998\|, 119]]). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ([[Bruquetas Galán 1998]]).
+Through the documents we know that from the moment people started painting on canvas, a flour paste was used to prepare the canvas. Giorgio Vasari has written about flour with walnut oil, glue, and white lead for preparing the canvas ({% cite 'Vasari (1568) 1998' '119' %}). An anonymous Spanish manuscript from the end of the sixteenth century also mentions preparing the canvas with glue, flour, and gypsum and states that “if it were all flour, it would be better” ([[Bruquetas Galán 1998]]).
 
-We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores … But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ([[Pacheco (1638) 1990\|, 481]]). And Antonio Palomino relates similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey and a little linseed oil ([[Palomino (1715) 1947\|, 483]]). In some cases, the presence of flour paste has been identified by scientific analysis ([[Helwig and Daly Hartin 1999]]).
+We find the same in Francisco Pacheco’s treatise from the mid-seventeenth century: “Some work with flour or mill-dust paste, cooking oil and a little honey (which you can eat even if you are not hungry); they apply a coating of this to a well-stretched canvas to cover over the pores … But experience has taught me that any paste of gypsum, flour or ash gets damp and with time rots the canvas and the painting comes out in scabs” ({% cite 'Pacheco (1638) 1990' '481' %}). And Antonio Palomino relates similar concerns in 1715, when explaining how to prepare the mixture by boiling and shaking it to avoid lumps: *gacha* paste with flour and water, honey and a little linseed oil ({% cite 'Palomino (1715) 1947' '483' %}). In some cases, the presence of flour paste has been identified by scientific analysis ([[Helwig and Daly Hartin 1999]]).
 
 A treatise by Spaniard Vicente Poleró published in the mid-nineteenth century points to the lining of the canvas as an essential operation ([[Poleró (1853 and 1866) 2018]]). He describes the procedure: cover the paint surface with paper, and apply the adhesive to both the lining fabric mounted on a loom and to the original canvas on the back and then iron until it is completely dry. The idea was not to simply reinforce the support, but also to fix the layers of color with an impregnation of glue paste (which was surely much more compatible with the original materials than modern plastic adhesives).
 
@@ -174,7 +174,7 @@ It would be useful to continue testing to determine the different additives in t
 
 [^3]: Personal communications with Laura Alba and Jaime García-Maiquez.
 
-[^4]: “No hay cambios de color o son muy ligeros. Su elevado contenido en humedad permite aplanar ciertos cuarteados. Sin embargo, la mezcla es muy higroscópica y sensible a la humedad. Existe riesgo de encogimiento de la tela original. Presenta peligro de crecimiento de hongos. Su adhesividad disminuye rápidamente en malas condiciones climáticas, y se hace dura y frágil. Tiene un pH ácido. Requiere aplicación de calor” ([[Gómez 1998\|, 386]]).
+[^4]: “No hay cambios de color o son muy ligeros. Su elevado contenido en humedad permite aplanar ciertos cuarteados. Sin embargo, la mezcla es muy higroscópica y sensible a la humedad. Existe riesgo de encogimiento de la tela original. Presenta peligro de crecimiento de hongos. Su adhesividad disminuye rápidamente en malas condiciones climáticas, y se hace dura y frágil. Tiene un pH ácido. Requiere aplicación de calor” ({% cite 'Gómez 1998' '386' %}).
 
 [^5]: We would like to thank the conservator-restorer of the Museo del Prado, María Álvarez Garcillán, for all the information she provided us on the condition of this painting.
 
