--- a/content/3-open-questions/20.md
+++ b/content/3-open-questions/20.md
@@ -22,9 +22,9 @@ The stated goals and final designs of each provide useful insight into how the m
 
 Vishwa Mehra, who had been working at the Central Research Laboratory in Amsterdam since 1966, began his public discussion of lining treatments at the 1972 ICOM meeting in Madrid. There, he examined the prevailing orthodoxy of lining and posited a set of new criteria for structural restoration. His observations and evaluation of the functional and aesthetic shortcomings of glue linings and wax-resin linings are familiar, and questions of reversibility; weave interference; stability of treatment materials; and visual alteration of fabric, ground, and paint were particularly critical ones.
 
-He also suggested that leaving visible traces of a painting’s age, such as some cupping and cracking, was viable, as opposed to trying to make them disappear as completely as possible ([[Ackroyd 2002\|, 4]]).[^1] Mehra’s critique led him to conclude that structural problems should be understood through more systematic analysis and more precise treatment—or a series of treatments—rather than through a single global treatment like overall consolidation or lining. The first need then, was to determine with greater accuracy the actual strength of the materials in a painting composite, which would then allow the conservator to tailor treatments to individual paintings.
+He also suggested that leaving visible traces of a painting’s age, such as some cupping and cracking, was viable, as opposed to trying to make them disappear as completely as possible ({% cite 'Ackroyd 2002' '4' %}).[^1] Mehra’s critique led him to conclude that structural problems should be understood through more systematic analysis and more precise treatment—or a series of treatments—rather than through a single global treatment like overall consolidation or lining. The first need then, was to determine with greater accuracy the actual strength of the materials in a painting composite, which would then allow the conservator to tailor treatments to individual paintings.
 
-Mehra’s ideas had been in the air for some time by then.[^2] A reading of the ICOM replies to the lining questionnaire distributed in 1972 and published in 1975 offers some revealing insights into concerns that practitioners had for both glue and wax-resin linings ([[Rees Jones, Cummings, and Hedley 1975]]). Wax-resin lining had been the subject of some considerable research and development in Britain, resulting in 1948 in the construction of what is deemed the first hot table. In 1955, this mechanization of lining (and consolidation, of which much will be made later) was furthered by the introduction of vacuum to the hot table ([[Hackney 2020\|, 84]]). By 1960, it was noted in an ICOM report that many paintings fared poorly under such treatments. With this background in mind, Mehra had, by 1972, set down what might be called his first principles, of which there are eight, summarized here ([[Mehra 1972]]):
+Mehra’s ideas had been in the air for some time by then.[^2] A reading of the ICOM replies to the lining questionnaire distributed in 1972 and published in 1975 offers some revealing insights into concerns that practitioners had for both glue and wax-resin linings ([[Rees Jones, Cummings, and Hedley 1975]]). Wax-resin lining had been the subject of some considerable research and development in Britain, resulting in 1948 in the construction of what is deemed the first hot table. In 1955, this mechanization of lining (and consolidation, of which much will be made later) was furthered by the introduction of vacuum to the hot table ({% cite 'Hackney 2020' '84' %}). By 1960, it was noted in an ICOM report that many paintings fared poorly under such treatments. With this background in mind, Mehra had, by 1972, set down what might be called his first principles, of which there are eight, summarized here ([[Mehra 1972]]):
 
 1.  Full reversibility.
 
@@ -114,7 +114,7 @@ This paper has outlined the basic features of the early generation of suction ta
 
 {% endbackmatter %}
 
-[^1]: According to Ackroyd, Mehra “maintained that the preservation of the painting’s appearance and the positive aspects of its age (e.g., cupped or raised cracks) were more important than the choice of lining materials” ([[Ackroyd 2002\|, 4]]).
+[^1]: According to Ackroyd, Mehra “maintained that the preservation of the painting’s appearance and the positive aspects of its age (e.g., cupped or raised cracks) were more important than the choice of lining materials” ({% cite 'Ackroyd 2002' '4' %}).
 
 [^2]: Indeed, other papers presented at Greenwich, such as that of Chittenden, Lewis, and Percival-Prescott on low-pressure lining ([[Chittenden, Lewis, and Percival-Prescott 2003]]), trace similar analyses and practical approaches as those outlined here summarizing Mehra’s thinking.
 
