--- a/content/3-open-questions/21.md
+++ b/content/3-open-questions/21.md
@@ -50,9 +50,9 @@ This is much in line with the sixth requirement ([table 21.1](#table-21-1)), tha
 
 ### The Flexibility Requirement
 
-The fourth requirement ([table 21.1](#table-21-1)) is that flexibility must be guaranteed for an unlimited period of time. It is not specified if Mehra means in the complete lining structure or in the canvas, adhesive, or a possible interleaf. An argument for a flexible lining adhesive was mentioned as early as 1931, when the Canadian painter and sculptor Percyval Tudor-Hart advised that a lining adhesive should provide unlimited flexibility and recommended the “Dutch” adhesive ([[Tudor-Hart 1931]]), and that same year, two American conservators remarked that a wax lining is “the best that is yet found for relining . . . It is flexible, never becoming brittle” ([[Durham and Leser 1931\|, 38]]). The unlimited flexibility mentioned by Mehra should be seen in light of these sources and the long historic experience with brittle glue-paste linings. However, flexibility in lining adhesive and flexibility in lining as a whole are two very different concepts. In his requirements, Mehra mentioned the lining as a whole and not just the adhesive. In 1981, he contradicted this requirement in a paper on lining canvases, where he wrote that lining canvases should be as stiff as possible ([[Mehra 1981b]]).
+The fourth requirement ([table 21.1](#table-21-1)) is that flexibility must be guaranteed for an unlimited period of time. It is not specified if Mehra means in the complete lining structure or in the canvas, adhesive, or a possible interleaf. An argument for a flexible lining adhesive was mentioned as early as 1931, when the Canadian painter and sculptor Percyval Tudor-Hart advised that a lining adhesive should provide unlimited flexibility and recommended the “Dutch” adhesive ([[Tudor-Hart 1931]]), and that same year, two American conservators remarked that a wax lining is “the best that is yet found for relining . . . It is flexible, never becoming brittle” ({% cite 'Durham and Leser 1931' '38' %}). The unlimited flexibility mentioned by Mehra should be seen in light of these sources and the long historic experience with brittle glue-paste linings. However, flexibility in lining adhesive and flexibility in lining as a whole are two very different concepts. In his requirements, Mehra mentioned the lining as a whole and not just the adhesive. In 1981, he contradicted this requirement in a paper on lining canvases, where he wrote that lining canvases should be as stiff as possible ([[Mehra 1981b]]).
 
-A year later, Mecklenburg summed up his approach to providing stability in a painting: “\[T\]o support a painting, the material chosen must: 1) be capable of developing and maintaining a large percentage of the total force of a stretched painting; 2) be able to restrain in-plane displacement as developed by desiccated glue and paint films; 3) restrain out-of-plane distortion such as cupping and buckling” ([[Mecklenburg 1982\|, 27]])*.* He furthermore advised that a high modulus[^3] of the lining material was preferable and that thickness would provide support against out-of-plane distortions.
+A year later, Mecklenburg summed up his approach to providing stability in a painting: “\[T\]o support a painting, the material chosen must: 1) be capable of developing and maintaining a large percentage of the total force of a stretched painting; 2) be able to restrain in-plane displacement as developed by desiccated glue and paint films; 3) restrain out-of-plane distortion such as cupping and buckling” ({% cite 'Mecklenburg 1982' '27' %})*.* He furthermore advised that a high modulus[^3] of the lining material was preferable and that thickness would provide support against out-of-plane distortions.
 
 Thus, research has shown that stiff linings can reduce the risk of further cracks and cupping in a painting ([[Mecklenburg 1982]]; [[Hedley 1988]]; [[Andersen 2013]]), which contradicts Mehra’s 1972 report. However, it is worth remarking that Mehra had been measuring the bending stiffness of the linings he tested, as opposed to the later studies, which measured stiffness in tension. For paintings, this means the difference between in-plane and out-of-plane forces.
 
@@ -74,7 +74,7 @@ Consider the case of a very torn canvas painting with frayed tacking edges. Diff
 
 In the last requirement ([table 21.1](#table-21-1)) Mehra wrote that the lining adhesive should “be compatible with the other materials used for the relining which it serves.” The meaning of “compatible” is not clear, and Mehra does not define it. It remains an open question whether poor compatibility means that the material does not bond well, that is it historically or ethically wrong, or perhaps that it has different properties from the original materials. It is also not clear how compatibility may be judged in a scientific manner. And yet the word is frequently used.
 
-In E.C.C.O.’s Code of Ethics article IX, compatibility is included as a requirement, but it remains undefined. The European Committee for Standardization (CEN) standard defining the most important general terms used in conservation of cultural heritage EN 15898:2011 defined compatibility as the “extent to which one material can be used with another material without putting significance or stability at risk” ([[CEN 2011\|, 10]]). Acknowledging that this was still a rather vague definition, Revez proposed the following definition: “Compatibility corresponds to the extent to which a product, method or action may be used upon a heritage object without putting its present or future significance at risk” ([[Revez 2016]]). In the updated version of the CEN standard from 2019 (EN 15898:2019) the definition was clarified further: “extent to which one material can be used with another material without *compromising **significance** or **stability** of the object. Note 1 to entry: this relates to conservation materials or to components of the **object***” ([[CEN 2019\|, 25]]).
+In E.C.C.O.’s Code of Ethics article IX, compatibility is included as a requirement, but it remains undefined. The European Committee for Standardization (CEN) standard defining the most important general terms used in conservation of cultural heritage EN 15898:2011 defined compatibility as the “extent to which one material can be used with another material without putting significance or stability at risk” ({% cite 'CEN 2011' '10' %}). Acknowledging that this was still a rather vague definition, Revez proposed the following definition: “Compatibility corresponds to the extent to which a product, method or action may be used upon a heritage object without putting its present or future significance at risk” ([[Revez 2016]]). In the updated version of the CEN standard from 2019 (EN 15898:2019) the definition was clarified further: “extent to which one material can be used with another material without *compromising **significance** or **stability** of the object. Note 1 to entry: this relates to conservation materials or to components of the **object***” ({% cite 'CEN 2019' '25' %}).
 
 Useful compatibility indicators have been proposed for stone conservation and the conservation of archeological sites by Rodrigues and Grossi ([[Rodrigues and Grossi 2007]]), but due to the difference in materials, these are not easily translated to paintings conservation. One indicator that might be useful, however, is physical content, which represents “intrinsic properties responsible for the performance of the intervention action, considered in its material side” ([[Rodrigues and Grossi 2007]]). The other indicators are the operational background, the sociocultural context, and the environmental constraints. Assuming that compatibility is a multifaceted concept that can be broken down into a number of simpler categories, they propose a rating system (from 1 to 10) for each action taken, which would then be translated to an incompatibility degree for a proposed treatment of stone and buildings. The question remains whether this concept works for structural painting conservation.
 
