--- a/content/4-case-studies/22.md
+++ b/content/4-case-studies/22.md
@@ -16,29 +16,29 @@ abstract: An important recent acquisition to the collection of the National Gall
 
 ## Introduction
 
-In July 2018, the National Gallery, London, acquired a self-portrait by the Italian Baroque artist Artemisia Gentileschi, one of only a handful of works by female painters in the collection and the first painting by this artist to be represented at the Gallery. The painting, *Self-Portrait as Saint Catherine of Alexandria* (ca. 1615–17), depicts the artist herself as Saint Catherine of Alexandria, the Christian saint martyred in the early fourth century ([fig. 22.1](#fig-22-1)). Her right hand holds the martyr’s palm close to her chest, while she rests her left hand on a broken wheel with iron spikes, the instrument of Catherine’s torture and the saint’s standard attribute. The painting dates from Artemisia’s period of activity in Florence, where she lived and worked from 1613 to 1620, establishing herself as an independent artist and becoming the first woman to gain membership to the Accademia della Arti del Disegno, in 1616 ([[Bissell 1968\|, 154]]; [[Bissell 1999\|, 141]]; [[Whitlum-Cooper et al. 2019]]).
+In July 2018, the National Gallery, London, acquired a self-portrait by the Italian Baroque artist Artemisia Gentileschi, one of only a handful of works by female painters in the collection and the first painting by this artist to be represented at the Gallery. The painting, *Self-Portrait as Saint Catherine of Alexandria* (ca. 1615–17), depicts the artist herself as Saint Catherine of Alexandria, the Christian saint martyred in the early fourth century ([fig. 22.1](#fig-22-1)). Her right hand holds the martyr’s palm close to her chest, while she rests her left hand on a broken wheel with iron spikes, the instrument of Catherine’s torture and the saint’s standard attribute. The painting dates from Artemisia’s period of activity in Florence, where she lived and worked from 1613 to 1620, establishing herself as an independent artist and becoming the first woman to gain membership to the Accademia della Arti del Disegno, in 1616 ({% cite 'Bissell 1968' '154' %}; {% cite 'Bissell 1999' '141' %}; [[Whitlum-Cooper et al. 2019]]).
 
 {% figure 'fig-22-1' %}
 
 Upon acquisition, the canvas painting was conserved in the National Gallery conservation department, where the decision was made to reline the painting and to clean and restore the image. The entire treatment was filmed for the National Gallery’s website and made available on YouTube as part of the Gallery’s public engagement program.[^1] Conservation was led by Larry Keith (chief restorer and keeper), and the structural treatment was undertaken by Paul Ackroyd (senior restorer) and the author.[^2]
 
-The painting was originally executed on a medium-weight, plain-weave canvas, with a horizontal seam approximately 7 cm up from the bottom edge. The seam is uneven and rather wavy in appearance ([fig. 22.2](#fig-22-2)), and is likely to have been sewn by the artist: it is known that at this time Artemisia was poor—“she was beleaguered with financial problems,” and probably therefore was preparing and reusing her own canvases for painting ([[Barker 2017\|, 59]]; [[Keith et al. 2019\|, 8n23, 16n24]]).
+The painting was originally executed on a medium-weight, plain-weave canvas, with a horizontal seam approximately 7 cm up from the bottom edge. The seam is uneven and rather wavy in appearance ([fig. 22.2](#fig-22-2)), and is likely to have been sewn by the artist: it is known that at this time Artemisia was poor—“she was beleaguered with financial problems,” and probably therefore was preparing and reusing her own canvases for painting ({% cite 'Barker 2017' '59' %}; {% cite 'Keith et al. 2019' '8n23, 16n24' %}).
 
 {% figure 'fig-22-2' %}
 
 Around the late nineteenth or early twentieth century, the painting was glue-paste lined onto another linen canvas and attached to its existing mortise-and-tenon joint stretcher. At the time of acquisition by the National Gallery, the painting had old discolored restorations and was coated with a significantly yellowed and poorly saturating varnish (see [fig. 22.1](#fig-22-1)). Impact damage in the lower left of the painting had resulted in an irregular 3.8 cm long tear to both the original and lining canvas. The original seam was pronounced and potentially weak, as the seam flap at the back would have been cut away for the previous lining treatment. The remains of the sewing stitches were now visible on the front, partially hidden by restoration (see [fig. 22.2](#fig-22-2)). The lining was found to be generally degraded, fragile, and easily detachable.
 
-Three original edges remained relatively intact, with exaggerated cusping present along the bottom edge and some cusping present on the two vertical edges. The right edge also had evidence of being modified; it had been previously folded, such as over a stretcher edge, and then later flattened ([[Keith et al. 2019\|, 6, 16n11]]).[^3] There was also evidence to suggest the top edge had been previously cut down slightly: the tip of the martyr’s palm and the central pearl of the saint’s crown were both missing (see [fig. 22.1](#fig-22-1)).
+Three original edges remained relatively intact, with exaggerated cusping present along the bottom edge and some cusping present on the two vertical edges. The right edge also had evidence of being modified; it had been previously folded, such as over a stretcher edge, and then later flattened ({% cite 'Keith et al. 2019' '6, 16n11' %}).[^3] There was also evidence to suggest the top edge had been previously cut down slightly: the tip of the martyr’s palm and the central pearl of the saint’s crown were both missing (see [fig. 22.1](#fig-22-1)).
 
 ## History of Lining at the National Gallery
 
 The National Gallery has a long history of undertaking structural treatments, including lining, and is active in maintaining traditional practices as well as researching and developing new methods and technologies ([[Bomford 1978]]; [[Reeve, Ackroyd, and Stephenson-Wright 1988]]; [[Young and Ackroyd 2001]]). Aqueous glue-paste hand-linings were first undertaken for the Gallery by private liners, who were commissioned by the Gallery. In a letter from the Gallery Archives (date unknown) the Gallery’s first director, Sir Charles Eastlake, writes to inform colleagues that “Mr. William Morrill of 3 Duck Lane, Wardour Street is ordinarily employed for the re-lining of pictures in the collection.”[^4] In 1880, Morrill himself writes to the director: “The price of double lining the large Weenix picture will be about 14 pounds. I should have written before but I have been very busy with the Crivelli picture which I hope very soon to complete.”[^5]
 
-While the Gallery established its conservation department in 1946, it wasn’t until the late 1940s and early 1950s that its conservators were directly employed by the Gallery ([[Bomford 1978\|, 3]]).[^6]<sup>,</sup>[^7] Glue paste was the only lining adhesive used at the Gallery until around 1947, when wax-resin adhesive began to be used as an alternative adhesive, until the late 1970s, with the advent of Beva 371. All linings were done by hand until the studio bought its first vacuum hot table in 1976 ([[Reeve, Ackroyd, and Stephenson-Wright 1988]]).
+While the Gallery established its conservation department in 1946, it wasn’t until the late 1940s and early 1950s that its conservators were directly employed by the Gallery ({% cite 'Bomford 1978' '3' %}).[^6]<sup>,</sup>[^7] Glue paste was the only lining adhesive used at the Gallery until around 1947, when wax-resin adhesive began to be used as an alternative adhesive, until the late 1970s, with the advent of Beva 371. All linings were done by hand until the studio bought its first vacuum hot table in 1976 ([[Reeve, Ackroyd, and Stephenson-Wright 1988]]).
 
-Traditional aqueous glue-paste hand-lining remains part of the conservation department’s methods for structural treatments for canvas paintings and is chosen when appropriate for a painting’s requirements, for example, when considering the type and extent of damage, the painting’s overall condition, and its treatment history. Its use, however, has evolved over the last thirty years. The current modified glue-paste recipe is the result of research undertaken at the Gallery in the late 1990s by Paul Ackroyd that evaluated the bond performance and relative stiffness of glue-paste linings. Tests revealed that a low ratio of glue to flour paste proved desirable, providing a lining that is more dimensionally stable than those with a higher glue content ([[Ackroyd 1995\|, 89]]). The proportion of glue now used, at 1 part glue to 6 parts flour paste, contains far less glue than traditionally used in the UK and is more akin to European formulations.
+Traditional aqueous glue-paste hand-lining remains part of the conservation department’s methods for structural treatments for canvas paintings and is chosen when appropriate for a painting’s requirements, for example, when considering the type and extent of damage, the painting’s overall condition, and its treatment history. Its use, however, has evolved over the last thirty years. The current modified glue-paste recipe is the result of research undertaken at the Gallery in the late 1990s by Paul Ackroyd that evaluated the bond performance and relative stiffness of glue-paste linings. Tests revealed that a low ratio of glue to flour paste proved desirable, providing a lining that is more dimensionally stable than those with a higher glue content ({% cite 'Ackroyd 1995' '89' %}). The proportion of glue now used, at 1 part glue to 6 parts flour paste, contains far less glue than traditionally used in the UK and is more akin to European formulations.
 
-The Gallery’s current technique is also distinct from other traditional methods, in that natural beeswax is used in the process: as part of the facing adhesive, as a lubricant during the lining phase, and as a moisture barrier applied after lining ([[Phenix 1995\|, 26]]). A cold wax-resin facing adhesive is used at the Gallery for paintings that do not have absorbent ground or paint layers. It is made with dammar resin, beeswax, and mineral spirit (a low-aromatic petroleum-based solvent) and is brushed out thinly on to the painted surface as a cold liquid over a paper tissue facing ([fig. 22.3](#fig-22-3)), usually over a temporary varnish (see the appendix for the recipe).
+The Gallery’s current technique is also distinct from other traditional methods, in that natural beeswax is used in the process: as part of the facing adhesive, as a lubricant during the lining phase, and as a moisture barrier applied after lining ({% cite 'Phenix 1995' '26' %}). A cold wax-resin facing adhesive is used at the Gallery for paintings that do not have absorbent ground or paint layers. It is made with dammar resin, beeswax, and mineral spirit (a low-aromatic petroleum-based solvent) and is brushed out thinly on to the painted surface as a cold liquid over a paper tissue facing ([fig. 22.3](#fig-22-3)), usually over a temporary varnish (see the appendix for the recipe).
 
 {% figure 'fig-22-3' %}
 
@@ -58,7 +58,7 @@ The painting was then removed from its stretcher, the old lining tacking margins
 
 ### Delining and Repairs to the Original Canvas
 
-The painting was turned face down, and its edges taped to a Melinex (clear polyester film) covered plywood board to prevent dirt and hard grains of brittle glue-paste residue from getting under the painting and embedding in the facing during the removal of the old lining. (This is one noteworthy disadvantage of wax-resin facings to guard against: debris can easily get trapped in its waxy surface, risking damage to the paint surface, especially during mechanical scraping.) The old lining was then reversed, the lining fabric peeled away in strips by hand, and the remaining glue-paste residue scraped from the surface with a scalpel ([[National Gallery 2019\|, video 6]]). [^9]
+The painting was turned face down, and its edges taped to a Melinex (clear polyester film) covered plywood board to prevent dirt and hard grains of brittle glue-paste residue from getting under the painting and embedding in the facing during the removal of the old lining. (This is one noteworthy disadvantage of wax-resin facings to guard against: debris can easily get trapped in its waxy surface, risking damage to the paint surface, especially during mechanical scraping.) The old lining was then reversed, the lining fabric peeled away in strips by hand, and the remaining glue-paste residue scraped from the surface with a scalpel ({% cite 'National Gallery 2019' 'video 6' %}). [^9]
 
 Old insect damage, in the form of woodworm exit holes, was found within the back of the original canvas corresponding to the likely position of a previous wooden stretcher or strainer (the current stretcher has no insect damage). Luckily, this damage did not penetrate through to the paint surface, so the holes in the canvas could be filled from the back with an adhesive mix of Mowiol GE 04-86 (polyvinyl alcohol), chalk, and pigment using a small metal spatula. Mowiol remains soluble in water, so care is needed during the lining process not to disturb the fills. Rather usefully, Mowiol is also thermoplastic when dry, and can be softened and flattened out—with, for example, an electric spatula—to conform with the lining process, thereby avoiding the creation of any undulations or hard bumps behind the original canvas.
 
@@ -72,7 +72,7 @@ After the repairs were complete and the facing was removed, the painting was tre
 
 {% figure 'fig-22-4' %}
 
-The table was heated to 40°C, at 28 mbar (0.83 "Hg) for about twenty minutes. During this time, additional pressure was applied locally to the surface of the painting using a heated spatula set to the same temperature as the table ([[National Gallery 2019\|, video 7]]; see [fig. 22.4](#fig-22-4)). Raised areas and dips in the surface topography were marked up on a Melinex template for further examination from the back once the painting was removed from the table. The painting was dried out under pressure.
+The table was heated to 40°C, at 28 mbar (0.83 "Hg) for about twenty minutes. During this time, additional pressure was applied locally to the surface of the painting using a heated spatula set to the same temperature as the table ({% cite 'National Gallery 2019' 'video 7' %}; see [fig. 22.4](#fig-22-4)). Raised areas and dips in the surface topography were marked up on a Melinex template for further examination from the back once the painting was removed from the table. The painting was dried out under pressure.
 
 Using the low-pressure suction table in this way has become an integral part of the glue-paste lining process at the Gallery. Firstly, moisture treatments using the table provide the opportunity to witness under controlled conditions how the painting responds to moisture, in preparation for the upcoming aqueous relining treatment. Secondly, it enables critical inspection of the surface topography of the painting under acute raking light and provides the chance to work on some of the most raised areas that are considered disturbing to the overall surface appearance.
 
@@ -80,7 +80,7 @@ Once dry, the painting was removed from the suction table and returned, face dow
 
 ### New Canvas Addition
 
-The lack of cusping along the top edge and the appearance of the closely cropped composition led to discussions around the original format of the painting and whether it had been cut down or altered in shape and size (see [fig. 22.1](#fig-22-1)). The decision was taken to extend the top of the painting to accommodate the tip of the martyr’s palm frond and the central pearl in her crown ([[National Gallery 2019\|, video 9]]). A piece of new primed linen canvas, similar in weave to the original, was prepared by first wetting and stretching it, and then a strip was cut with the weave oriented with the warp thread vertical and the weft horizontal.[^11] This strip was then profiled to match the top edge of the original canvas and attached with the same PVA adhesive–cellulose powder mix used for the inserts and tear mend. A heated spatula was used to secure the strip just below the original canvas surface.
+The lack of cusping along the top edge and the appearance of the closely cropped composition led to discussions around the original format of the painting and whether it had been cut down or altered in shape and size (see [fig. 22.1](#fig-22-1)). The decision was taken to extend the top of the painting to accommodate the tip of the martyr’s palm frond and the central pearl in her crown ({% cite 'National Gallery 2019' 'video 9' %}). A piece of new primed linen canvas, similar in weave to the original, was prepared by first wetting and stretching it, and then a strip was cut with the weave oriented with the warp thread vertical and the weft horizontal.[^11] This strip was then profiled to match the top edge of the original canvas and attached with the same PVA adhesive–cellulose powder mix used for the inserts and tear mend. A heated spatula was used to secure the strip just below the original canvas surface.
 
 ### Preparation of the New Lining Canvas
 
@@ -102,7 +102,7 @@ Next the loomed lining canvas was placed directly on top of the painting, follow
 
 The painting was then returned to the table and the wax-resin facing removed with mineral spirit so the paint surface could be inspected for any faults, undulations, or problems with the lining.[^14] A fresh piece of facing tissue was then laid on the painting, and the surface ironed for a final time, with the iron temperature increased to around 65°C–70°C and with melted wax on the iron plate to lubricate the iron across the tissue facing. Work proceeded over the painting, keeping the irons moving to prevent any hot spots and with the iron being returned to the beeswax block to pick up more wax to keep the iron well lubricated this achieved a smooth and controlled lining process. Once complete, the painting was lifted from the lining board and propped up to allow air to circulate and the painting to thoroughly dry out overnight.
 
-The following day the facing tissue was removed with mineral spirit. The tabletop was prepared with a thin blanket and Melinex release layer, and the loomed, lined painting was placed face down on top of the Melinex. Beeswax was ironed into the back of the lining canvas as a barrier to moisture. The wax does not impregnate the original reverse because the coherent glue-paste adhesive layer prevents this ([[National Gallery 2019\|, video 8]]; [[Ackroyd 1995\|, 89]]; [[Young and Ackroyd 2001\|, 101]]).
+The following day the facing tissue was removed with mineral spirit. The tabletop was prepared with a thin blanket and Melinex release layer, and the loomed, lined painting was placed face down on top of the Melinex. Beeswax was ironed into the back of the lining canvas as a barrier to moisture. The wax does not impregnate the original reverse because the coherent glue-paste adhesive layer prevents this ({% cite 'National Gallery 2019' 'video 8' %}; {% cite 'Ackroyd 1995' '89' %}; {% cite 'Young and Ackroyd 2001' '101' %}).
 
 ### Modifications to the Old Wooden Stretcher and Restretching
 
