--- a/content/4-case-studies/23.md
+++ b/content/4-case-studies/23.md
@@ -111,7 +111,7 @@ As previously noted, the panorama was in thirteen sections before stabilization 
 
 {% figure 'fig-23-7' %}
 
-On roll 1, sections 9, 10, 12, and 13 each had a large three-sided cut (8 x 48 inches) along the upper edge. These date from the 1964 New York World’s Fair, when a 175-foot section of the Panorama was hung for exhibition around the interior walls of a restaurant in the New England States Pavilion. After installation, it was discovered that the Panorama’s upper edge was blocking the air conditioning registers, so the cuts were made to allow the air to flow freely ([[New Bedford Whaling Museum 2018\|, 79]]). The cuts in these areas went through the fabric, but the rope was left intact. To stabilize these large areas, the cut edges were aligned as closely as possible (the panorama fabric had stretched slightly along the cut lines during previous vertical exhibition) and stitched to dyed cotton underlays. These dyed underlays filled the small voids where the cut edges of the panorama cloth did not quite butt together during stabilization treatment.
+On roll 1, sections 9, 10, 12, and 13 each had a large three-sided cut (8 x 48 inches) along the upper edge. These date from the 1964 New York World’s Fair, when a 175-foot section of the Panorama was hung for exhibition around the interior walls of a restaurant in the New England States Pavilion. After installation, it was discovered that the Panorama’s upper edge was blocking the air conditioning registers, so the cuts were made to allow the air to flow freely ({% cite 'New Bedford Whaling Museum 2018' '79' %}). The cuts in these areas went through the fabric, but the rope was left intact. To stabilize these large areas, the cut edges were aligned as closely as possible (the panorama fabric had stretched slightly along the cut lines during previous vertical exhibition) and stitched to dyed cotton underlays. These dyed underlays filled the small voids where the cut edges of the panorama cloth did not quite butt together during stabilization treatment.
 
 Roll 2, section 1, received two treatments not applied elsewhere in the project, due to its unique condition issues. As found, this approximately 7 x 9 foot section was not attached to any roll; the proper right edge was an unstitched vertical seam and the left was a full vertical cut. The original upper part of this section was missing and had been replaced with a band of white sheeting. It was labeled “miscellaneous section” in the 2001 condition notes, but during the course of this project its proper right edge was found to match the lead edge of roll 2, section 2, revealing its proper placement in the panorama sequence. The sheeting in the upper part of section 1 was replaced with a dyed cotton panel to return the section to its full original height, and section 1 was subsequently reattached to roll 2, section 2. The other treatment this section received was joining it to a new blank lead, to protect its cut leading edge during handling and storage.
 
