--- a/content/4-case-studies/24.md
+++ b/content/4-case-studies/24.md
@@ -36,9 +36,9 @@ Painted between 1904 and 1911 by the American artist Edwin Austin Abbey (1852–
 
 {% figure 'fig-24-1' %}
 
-Although largely unknown today, Edwin Austin Abbey was one of the most prominent American painters working in British and American artistic circles at the turn of the twentieth century. Having begun his career as an illustrator in the publishing firm of Harper and Brothers in New York City, Abbey adopted oil painting in 1889, after moving permanently to England ([[Lucas 1921\|, 1:22–196]]). Over the next twenty years, he exhibited several acclaimed paintings of Shakespearean subjects at the Royal Academy, eventually becoming an academician in 1898 ([[Lucas 1921\|, 2:317]]). Like many painters of the time, Abbey also possessed a keen interest in mural painting and completed several commissions for British and American public buildings, his most famous being *The Quest and Achievement of the Holy Grail*, held in the Boston Public Library.
+Although largely unknown today, Edwin Austin Abbey was one of the most prominent American painters working in British and American artistic circles at the turn of the twentieth century. Having begun his career as an illustrator in the publishing firm of Harper and Brothers in New York City, Abbey adopted oil painting in 1889, after moving permanently to England ({% cite 'Lucas 1921' '1:22–196' %}). Over the next twenty years, he exhibited several acclaimed paintings of Shakespearean subjects at the Royal Academy, eventually becoming an academician in 1898 ({% cite 'Lucas 1921' '2:317' %}). Like many painters of the time, Abbey also possessed a keen interest in mural painting and completed several commissions for British and American public buildings, his most famous being *The Quest and Achievement of the Holy Grail*, held in the Boston Public Library.
 
-An essential component of Abbey’s artistic process was the creation of hundreds of preparatory studies for each mural or easel composition, many of which are now part of the Edwin Austin Abbey Memorial Collection at YUAG.[^1] Certainly one of Abbey’s largest studies, *The Hours* may also be one of his most ambitious and visually striking preparatory works. The painting was created as a half-scale study for a 24-foot ceiling painting currently in situ in the House of Representatives Chamber of the Pennsylvania State Capitol building in Harrisburg. In a composition that Abbey described as “one of the most successful designs I have ever made,” the painting depicts twenty-four women, personifications of the hours, moving around the perimeter of a celestial sphere filled with forty-eight constellations of the northern hemisphere ([[Lucas 1921\|, 2:436]]). Heavily influenced by one of the star maps Peter Apian (1495–1552) published in his *Astronomicum Caesareum,* the constellations are indicated with carefully placed mordant-gilded stars ([[Ricci 2015\|, 52]]). With the sun passing from Virgo to Libra, the carefully balanced composition may reference the position of astronomical bodies around the fall equinox, when day and night are equal.
+An essential component of Abbey’s artistic process was the creation of hundreds of preparatory studies for each mural or easel composition, many of which are now part of the Edwin Austin Abbey Memorial Collection at YUAG.[^1] Certainly one of Abbey’s largest studies, *The Hours* may also be one of his most ambitious and visually striking preparatory works. The painting was created as a half-scale study for a 24-foot ceiling painting currently in situ in the House of Representatives Chamber of the Pennsylvania State Capitol building in Harrisburg. In a composition that Abbey described as “one of the most successful designs I have ever made,” the painting depicts twenty-four women, personifications of the hours, moving around the perimeter of a celestial sphere filled with forty-eight constellations of the northern hemisphere ({% cite 'Lucas 1921' '2:436' %}). Heavily influenced by one of the star maps Peter Apian (1495–1552) published in his *Astronomicum Caesareum,* the constellations are indicated with carefully placed mordant-gilded stars ({% cite 'Ricci 2015' '52' %}). With the sun passing from Virgo to Libra, the carefully balanced composition may reference the position of astronomical bodies around the fall equinox, when day and night are equal.
 
 ## Painting Technique and Condition
 
