--- a/content/5-adhesives/28.md
+++ b/content/5-adhesives/28.md
@@ -59,7 +59,7 @@ Methylcellulose is among the most durable adhesives used in conservation ([[Fell
 
 For adhesive meshes, two types of Methocel were chosen.[^4] They differ mainly in degree of polymerization—and thus viscosity. Methocel A15LV is of low viscosity and hence requires a short activation time with low amounts of water. It proved suitable for inaccessible bonding surfaces and water-sensitive materials where only a minimum of humidity is acceptable. Methocel A4C is of medium viscosity but requires more time and water to be activated. The bond strength exceeds that of Methocel A15LV and seems to be equivalent to Beva 371 film (65 µm) bonding ([[Sindlinger-Maushardt and Petersen 2007]]). Consequently, its use is recommended in cases where bonding surfaces are accessible, water input can be controlled, and a high bond strength is desired. Due to the delayed response to humidity, methylcellulose might be advantageous for larger areas that need to be bonded, as well as objects that do not require climate control. Methylcellulose meshes are particularly suitable for paintings that are sensitive to heat, as no elevated temperatures are required for activation.
 
-Sturgeon glue is a traditional adhesive and still in frequent use in conservation.[^5] Sturgeon glue is gaining popularity in modern paintings conservation thanks to its good adhesive properties and has been investigated for paint consolidation ([[Sindlinger-Maushardt and Petersen 2007]]; [[Soppa et al. 2014]]), tear mending ([[Flock 2014]]), and canvas bonding using glue solutions ([[Geißinger and Krekel 2007]]; [[Mecklenburg, Fuster-López, and Ottolini 2012]]). As a material of natural origin, with variations in the raw material and processing ([[Soppa 2018\|, 42]]), it can display a range of bonding properties. The glue does slightly discolor over time, unlike methylcellulose ([[Pataki-Hundt 2018]]).
+Sturgeon glue is a traditional adhesive and still in frequent use in conservation.[^5] Sturgeon glue is gaining popularity in modern paintings conservation thanks to its good adhesive properties and has been investigated for paint consolidation ([[Sindlinger-Maushardt and Petersen 2007]]; [[Soppa et al. 2014]]), tear mending ([[Flock 2014]]), and canvas bonding using glue solutions ([[Geißinger and Krekel 2007]]; [[Mecklenburg, Fuster-López, and Ottolini 2012]]). As a material of natural origin, with variations in the raw material and processing ({% cite 'Soppa 2018' '42' %}), it can display a range of bonding properties. The glue does slightly discolor over time, unlike methylcellulose ([[Pataki-Hundt 2018]]).
 
 Sturgeon glue remains sufficiently water soluble over time, and its adhesive strength barely changes ([[Geißinger and Krekel 2007]]; [[Przybylo 2006]]). It is prone to rapid response to fluctuating relative humidity and, in the long run, to increased crystallinity in films ([[Schellmann 2007]]). This fact limits the application of sturgeon glue meshes preferably to smaller areas or objects in controlled environmental conditions. On the other hand, considerable tack develops within a very short activation time with only small amounts of activation water. Thermal energy (35°C) further mobilizes the gel, leading to better adhesion—albeit at the cost of propagating penetration into the canvas ([[Konietzny 2015]]). Elevated temperatures can thus help to reduce the amount of activation water required. Like methylcellulose, sturgeon glue is capable of adhering to various materials, including natural wax ([[Fischer and Eska 2011]]).
 
