--- a/content/6-interventions/30.md
+++ b/content/6-interventions/30.md
@@ -22,7 +22,7 @@ New tools like vacuum hot tables, low-pressure suction tables, and regulated hum
 
 Over the next couple of decades, a more cautious approach known as “Minimal Intervention” was becoming the mantra of more and more painting conservators. When I began my training in the mid-1980s, I was one of the young converts to this approach, even though some of my mentors considered Prescott an alarmist whose call for “a lining moratorium” was holding back progress in our field. While Prescott was advocating for caution and further investigation into both the efficacy and unintended consequences of lining, other critics soon came forward with much more scathing accusations of conservators destroying artworks due to their lack of connoisseurship and a rush to adopt new materials and methods ([[Walden 1985]]; [[Beck and Daley 1994]]).
 
-A cadre of conservators were similarly advocating for what might be described as a gentler approach to treating paintings. Take, for example, the 1988 American Institute for Conservation (AIC) meeting in New Orleans. Sandwiched between the presentation of technical reports by two engineers, Gustav Berger and Marion Mecklenberg, Lance Mayer and Gay Myers presented a paper titled “Thoughts on Unlined Paintings.” In this presentation they pondered “the ways in which conservators wrestle…with the actual treatment of unlined paintings” ([[Mayer and Myers 1988\|, 222]]) and stated that “The trend toward treating paintings conservatively implies…changing ways of thinking…\[toward\]…minimal treatment of problems as they develop, rather than thinking that any conservation treatment can solve all of a painting’s past, present and future problems” ([[Mayer and Myers 1988\|, 227]]).
+A cadre of conservators were similarly advocating for what might be described as a gentler approach to treating paintings. Take, for example, the 1988 American Institute for Conservation (AIC) meeting in New Orleans. Sandwiched between the presentation of technical reports by two engineers, Gustav Berger and Marion Mecklenberg, Lance Mayer and Gay Myers presented a paper titled “Thoughts on Unlined Paintings.” In this presentation they pondered “the ways in which conservators wrestle…with the actual treatment of unlined paintings” ({% cite 'Mayer and Myers 1988' '222' %}) and stated that “The trend toward treating paintings conservatively implies…changing ways of thinking…\[toward\]…minimal treatment of problems as they develop, rather than thinking that any conservation treatment can solve all of a painting’s past, present and future problems” ({% cite 'Mayer and Myers 1988' '227' %}).
 
 Probably the conservator most associated with this minimal approach was Winfried Heiber ([fig. 30.1](#fig-30-1)), a mentor for many students and like-minded colleagues even before he became a professor at the Hochschule für Bildende Künste (Academy of Fine Arts) Dresden. Today the “Heiber method” of tear mending is widely accepted as the primary technique for avoiding the “need” to line a torn painting.
 
