--- a/content/6-interventions/32.md
+++ b/content/6-interventions/32.md
@@ -15,11 +15,11 @@ abstract: "Today the collection of the Neue Pinakothek in Munich comprises a col
 
 ## Introduction
 
-Publications offer us only a fragmentary understanding of developments in conservation. One such fragment is the plea to “do in future only that which is absolutely necessary, and if in doubt, do nothing at all—always heeding the fact that each intervention is in and of itself irreversible” ([[Weddigen 1980\|, 30]]). This statement represents a shift witnessed in the field of paintings conservation in German-speaking countries around 1980.[^1] This new approach called into question the suitability of lining canvas paintings as the default method for treating many types of defects. As a result, lining was indeed largely replaced by less invasive alternatives in the following years. Retaining an artwork’s “untouched” condition, thus enabling later generations to uncover clues whose significance may not yet be understood, gained importance as a value in its own right.[^2] Around the same time, an occupational profile was developed for conservation-restoration that defined academic training as a future standard. Considering the treatment of canvas paintings, this change took place over years and—depending on the country—at different times, influenced by leading conservators and university teaching. Nowadays, more than a generation of German-speaking conservators see lining as an almost exclusively historical technique that is only taught to elucidate its various methods.
+Publications offer us only a fragmentary understanding of developments in conservation. One such fragment is the plea to “do in future only that which is absolutely necessary, and if in doubt, do nothing at all—always heeding the fact that each intervention is in and of itself irreversible” ({% cite 'Weddigen 1980' '30' %}). This statement represents a shift witnessed in the field of paintings conservation in German-speaking countries around 1980.[^1] This new approach called into question the suitability of lining canvas paintings as the default method for treating many types of defects. As a result, lining was indeed largely replaced by less invasive alternatives in the following years. Retaining an artwork’s “untouched” condition, thus enabling later generations to uncover clues whose significance may not yet be understood, gained importance as a value in its own right.[^2] Around the same time, an occupational profile was developed for conservation-restoration that defined academic training as a future standard. Considering the treatment of canvas paintings, this change took place over years and—depending on the country—at different times, influenced by leading conservators and university teaching. Nowadays, more than a generation of German-speaking conservators see lining as an almost exclusively historical technique that is only taught to elucidate its various methods.
 
 At the 1974 international Conference on Comparative Lining Techniques in Greenwich, lining was not yet challenged per se; the focus was on improving materials and methods. While the exchange of ideas across language borders was still quite limited at this time,[^3]the impact of this conference is nevertheless visible in some German publications published thereafter.[^4] By the annual meeting of the Deutscher Restauratorenverband (German Association of Conservators-Restorers) in 1980, however, lining was fundamentally questioned and alternatives sought ([[von Manteuffel-Szoege 1980]]). Here, probably for the first time in such an arena, thread-by-thread tear mending was presented ([[Gabler 1979]]). In Switzerland, too, criticism was being leveled at traditional lining techniques under the caption “Gaining experience through failure” ([[Weddigen 1981]]). Occasional discussions of improved lining methods followed,[^5] but from the 1990s onward it was all about tear mending with adhesives, and later stitching (see, for example, [[Heiber 1996]] and [[Beltinger 1992]]). In this context, retrospectives published in 1983 on the history of lining, marouflage, and paintings transfer assume an almost epitaphic quality ({Marty 1983}; [[Schaible 1983a]]; [[Schaible 1983b]]; [[Schiessl 1983]]).
 
-At a conservation conference in 1984, Winfried Heiber used a microscope linked to a projection screen to give a live demonstration of thread-by-thread tear mending.[^6] In his comprehensive description of the method published in 1996, Heiber noted in amazement that “an idea can quietly assert itself—with little to no publication, very modest practical instruction on the part of the protagonists, no indoctrination attempts and no divisive fundamental discussions” ([[Heiber 1996\|, 117]]).
+At a conservation conference in 1984, Winfried Heiber used a microscope linked to a projection screen to give a live demonstration of thread-by-thread tear mending.[^6] In his comprehensive description of the method published in 1996, Heiber noted in amazement that “an idea can quietly assert itself—with little to no publication, very modest practical instruction on the part of the protagonists, no indoctrination attempts and no divisive fundamental discussions” ({% cite 'Heiber 1996' '117' %}).
 
 As the author began her conservation career at the time of this turning point, the minimal-intervention approach was natural to her from early on. Reviewing countless paintings that were ‘overrestored’ (from today’s perspective) across centuries was a painful experience. This made the discovery that Munich’s two nineteenth-century state painting collections—the Neue Pinakothek and the Sammlung Schack (for whose conservation the author is responsible)—seem to contain an unusually large number of paintings in a fairly original state of preservation all the more inspiring. This study was conducted in order to support this empirical observation and to better understand and provide access to the restoration history of the collections. It is limited to a summary record of the treatments carried out on the canvas paintings, as far as these are documented, and their placement within the temporal context. Verification of the data or specific follow-up examinations of individual paintings was not possible within the scope of the project.
 
