--- a/content/6-interventions/33.md
+++ b/content/6-interventions/33.md
@@ -38,17 +38,17 @@ The rehousing of the V&A’s reserve collection from premises in West London to 
 
 The first curator of paintings at the SKM, Richard Redgrave (1804–1888), had a protocol for dealing with newly acquired paintings that we would now describe as preventive conservation ([[Costaras 2013]]). Redgrave’s acquisition procedure involved cleaning the reverse of paintings, as well as the front, and putting a backing on the frame. A few years later, putting glass in the frames became a policy. During the years that I have worked at the V&A, a great many of the paintings in the collection have passed through the studio, and I have had the opportunity to observe their condition. It is striking how many canvases are unlined. I noted, thanks to helpful labels on the reverse, that the treatment of almost all the paintings that were lined was carried out in the 1890s or early 1900s by F. Haines & Sons (more of Haines & Sons later). Redgrave described the state of the Sheepshanks paintings on their acquisition in 1856:
 
-> When in the spring of last year the pictures were given over to the Department, the greater number had been left, during the years they had been in Mr. Sheepshanks’ possession, in the state in which they had been purchased direct from the studios of the various artists or elsewhere…and all had gradually accumulated dirt and discoloration on their surface, and much dust behind the canvases (a source of mischief too often neglected). ([[Committee of Council on Education 1858\|, 64]])
+> When in the spring of last year the pictures were given over to the Department, the greater number had been left, during the years they had been in Mr. Sheepshanks’ possession, in the state in which they had been purchased direct from the studios of the various artists or elsewhere…and all had gradually accumulated dirt and discoloration on their surface, and much dust behind the canvases (a source of mischief too often neglected). ({% cite 'Committee of Council on Education 1858' '64' %})
 
 Redgrave went on to describe the measures taken after the dirt had been removed from front and back:
 
-> In order to secure the picture on canvas from the injury arising from the accumulation of dust behind them, they have all been protected by painted canvas stretched over them, so as to exclude both damp and dust.” ([[Committee of Council on Education 1858\|, 65]])
+> In order to secure the picture on canvas from the injury arising from the accumulation of dust behind them, they have all been protected by painted canvas stretched over them, so as to exclude both damp and dust.” ({% cite 'Committee of Council on Education 1858' '65' %})
 
 The painted canvas backing has the appearance of imitation leather, it was stretched over the reverse of the painting and tacked to the back of the frame. Narrow wooden fillets were pinned along the edges to improve the seal. An example of this method can be seen on a painting by Johann Gottfried Steffan (1815–1905), *The Torrent,* 1844/1848 (1545–1869), and probably dates from 1869, the year it was acquired ([fig. 33.2](#fig-33-2)).
 
 {% figure 'fig-33-2' %}
 
-As mentioned earlier, paintings from the collection were regularly sent to art schools around the country for students to copy. The destinations were noted on labels on the reverse, possibly stamped on arrival at the art school. One such label on the reverse of *The Torrent* records that it went to Northampton and Salford in 1913, and Truro in 1922. An adjacent label contains an injunction not to hang the painting in direct sunlight. The galleries at South Kensington were carefully designed to ensure that the viewer was not disturbed by reflections from the central roof light (skylight), described as “glitter,” including those high up on the walls in a dense double or triple hang ([fig. 33.3](#fig-33-3)) ([[Committee of Council on Education 1858\|, 62]]).
+As mentioned earlier, paintings from the collection were regularly sent to art schools around the country for students to copy. The destinations were noted on labels on the reverse, possibly stamped on arrival at the art school. One such label on the reverse of *The Torrent* records that it went to Northampton and Salford in 1913, and Truro in 1922. An adjacent label contains an injunction not to hang the painting in direct sunlight. The galleries at South Kensington were carefully designed to ensure that the viewer was not disturbed by reflections from the central roof light (skylight), described as “glitter,” including those high up on the walls in a dense double or triple hang ([fig. 33.3](#fig-33-3)) ({% cite 'Committee of Council on Education 1858' '62' %}).
 
 {% figure 'fig-33-3' %}
 
@@ -104,7 +104,7 @@ Three Korean paintings on cotton were acquired recently, which date from the ear
 
 {% figure 'fig-33-6' %}
 
-Preparations for a touring exhibition of the works of John Constable meant that 50 oil sketches passed through the studio in 2010.[^13] *Landscape with Double Rainbow,* 1812 (33.7 x 38.4 cm) (328-1888), is on a mixture of supports, paper adhered to canvas as well as an original lining. Constable used a variety of supports for his oil sketches: frequently a homemade paper laminate, primed in different colors. At other times he reused his own canvas paintings, cutting them into small sections ([[Costaras and Richardson 2010]]). It is possible that in this instance he tried to peel off one layer of paper to get a fresh surface to paint on; the surface is irregular, with sections of paper missing. Clare Richardson and I speculated that Constable used the nearest support to hand to capture the fleeting atmospheric effect. An X-ray image shows at least one other composition within the support ([[Costaras and Richardson 2010\|, 151]]).
+Preparations for a touring exhibition of the works of John Constable meant that 50 oil sketches passed through the studio in 2010.[^13] *Landscape with Double Rainbow,* 1812 (33.7 x 38.4 cm) (328-1888), is on a mixture of supports, paper adhered to canvas as well as an original lining. Constable used a variety of supports for his oil sketches: frequently a homemade paper laminate, primed in different colors. At other times he reused his own canvas paintings, cutting them into small sections ([[Costaras and Richardson 2010]]). It is possible that in this instance he tried to peel off one layer of paper to get a fresh surface to paint on; the surface is irregular, with sections of paper missing. Clare Richardson and I speculated that Constable used the nearest support to hand to capture the fleeting atmospheric effect. An X-ray image shows at least one other composition within the support ({% cite 'Costaras and Richardson 2010' '151' %}).
 
 Constable painted over the top of the torn paper and canvas support regardless, lined it, and continued to work on it. When it came to the studio, the canvases were delaminating and the edges were frail. Wheat-starch paste was used to reattach the two canvases and left to dry under weight. With the help of Susan Catcher, our colleague in Paper Conservation, we strip-lined the painting with wheat-starch paste and Japanese paper ([fig. 33.7](#fig-33-7)). Wheat-starch paste was also used to attach the paper to the strainer. Serendipitously, the shrinkage of the paper as it dried exerted a gentle tension on the canvas without making it too taut.
 
@@ -120,7 +120,7 @@ My attitude about what constitutes a suitable condition for a painting to go on 
 
 Now, if paintings are unlined, this is immediately flagged, often by the loans curator, and an alternative offered, if possible. There isn’t always an acceptable substitute, as is the case with the Degas. However, if such a painting is requested for a multivenue loan, we might agree to just one venue, one accessible by a single-truck journey, and decline it for the rest. At the time of the symposium, in October 2019, the Degas was at an exhibition in Paris, and this is the reason it did not go to the second venue in Washington, DC. We receive more loan requests for the Degas than for any other painting in the collection.
 
-Travelling does cause wear and tear. An unlined canvas by Lawrence Alma Tadema (1836–1912)[^14] had recently gone on loan when it was requested again two years later. On checking it for the second loan, I found tears had developed along the fold line. Even if a well-designed packing case does a good job of reducing shocks and vibration, they can be greater during the movement of paintings on A-frames within museums at either end of the journey, as shock loggers have shown ([[Saunders, Sitwell, and Staniforth 1991\|, 320]]). By limiting the number of trips these unlined canvases make, we are trying to postpone the moment when lining or strip-lining becomes necessary, and this is another aspect to our approach to conserving canvas.
+Travelling does cause wear and tear. An unlined canvas by Lawrence Alma Tadema (1836–1912)[^14] had recently gone on loan when it was requested again two years later. On checking it for the second loan, I found tears had developed along the fold line. Even if a well-designed packing case does a good job of reducing shocks and vibration, they can be greater during the movement of paintings on A-frames within museums at either end of the journey, as shock loggers have shown ({% cite 'Saunders, Sitwell, and Staniforth 1991' '320' %}). By limiting the number of trips these unlined canvases make, we are trying to postpone the moment when lining or strip-lining becomes necessary, and this is another aspect to our approach to conserving canvas.
 
 ## Conclusion
 
