--- a/content/6-interventions/35.md
+++ b/content/6-interventions/35.md
@@ -52,9 +52,9 @@ During drying, the shrinking of the canvas led to the failure of adhesion betwee
 
 ## Structural Interventions
 
-According to Cesare Brandi, matter is structure and aspect, and the aim of conservation is to stop the process of degradation of the artwork and to restore its structural unity to improve the perception of image and color ([[Brandi 2001\|, 34})}. Additionally, conservation treatments and products must be compatible with the original materials, stable, and as reversible as possible.
+According to Cesare Brandi, matter is structure and aspect, and the aim of conservation is to stop the process of degradation of the artwork and to restore its structural unity to improve the perception of image and color ({% cite 'Brandi 2001' '34' %}). Additionally, conservation treatments and products must be compatible with the original materials, stable, and as reversible as possible.
 
-In 1974, the Greenwich conference on comparative lining techniques highlighted the risks incurred by paint layers when moisture, pressure, and heat are applied, particularly with regard to traditional glue-paste and wax-resin techniques ([[Villers 2003b]]). Indeed, these treatments can crush the paint layers, especially the impasto, and can also induce blanching. More recently, new methods of lining with synthetic adhesives have been developed, while traditional methods have evolved to improve the control of the different parameters of the procedure.
+In 1974, the Greenwich conference on comparative lining techniques highlighted the risks incurred by paint layers when moisture, pressure, and heat are applied, particularly with regard to traditional glue-paste and wax-resin techniques ([[Villers 2003b' %}). Indeed, these treatments can crush the paint layers, especially the impasto, and can also induce blanching. More recently, new methods of lining with synthetic adhesives have been developed, while traditional methods have evolved to improve the control of the different parameters of the procedure.
 
 The goal of the 2016–2017 interventions was to correct the deformations of the canvas, to reduce the lifting of paint layers, and to restore the cohesion of the multilayer system. Conservation protocols for all the paintings were established by taking into consideration the characteristics of each painting: the physicochemical properties of the original materials, the nature of the alterations, and past conservation treatments. Due to the fragility of the paintings, the conservators intervened very gradually. They alternated operations from the front, such as cleaning, and from the back of the artwork: reduction of deformations, consolidation, and relining, taking care to protect the paint layer with facings when it was necessary.
 
@@ -80,7 +80,7 @@ While in the past the majority of paintings were lined with glue paste (twenty-f
 
 *The Sacrifice of Abraham*, attributed to a follower of Maertens de Vos (sixteenth century), was originally an oil painting on panel; it entered the collections of the Musée Girodet between 1853 and 1857. The museum’s archives indicate that, due to extensive flaking, it was transferred from panel onto canvas in 1960.
 
-As a reminder, a transfer is the replacement of the original support of a painting by a new support. Transfer is no longer practiced today; our view on the artworks has changed, and we have set ourselves certain limits for ethical and philosophical reasons. But in the eighteenth century and for some time after, transfer was thought to “bring back life”"[^5] to paintings in poor condition, “saving” them from the ravages of time by giving them “eternal life” ([[B.-F. Lépicié 1752\|, 43–44]]). Indeed, some restorers would be awarded the task of transferring the king’s royal paintings to other supports ([[Emile-Mâle 1982\|, 225]]). There is therefore a whole corpus of paintings previously transferred, on a part of which it may be necessary to intervene.
+As a reminder, a transfer is the replacement of the original support of a painting by a new support. Transfer is no longer practiced today; our view on the artworks has changed, and we have set ourselves certain limits for ethical and philosophical reasons. But in the eighteenth century and for some time after, transfer was thought to “bring back life”"[^5] to paintings in poor condition, “saving” them from the ravages of time by giving them “eternal life” ({% cite 'B.-F. Lépicié 1752' '43–44' %}). Indeed, some restorers would be awarded the task of transferring the king’s royal paintings to other supports ({% cite 'Emile-Mâle 1982' '225' %}). There is therefore a whole corpus of paintings previously transferred, on a part of which it may be necessary to intervene.
 
 In May 2016, *The Sacrifice of Abraham* remained submerged for seventy-two hours, due to the disaster that occurred in the Musée Girodet storerooms after the flooding of the Loing river in the city of Montargis. The deep immersion of the painting caused a significant alteration of the support of the artwork: very pronounced roof-shape lifting of the paint layer ([fig. 35.4](#fig-35-4)), separation of the canvas, and—as we discovered later—powdering of the ground layer. The transfer as a whole was weakened, and thus a complete dismounting was necessary.
 
