--- a/content/6-interventions/37.md
+++ b/content/6-interventions/37.md
@@ -38,13 +38,13 @@ An innovative approach that aims to overcome this gap involves a new low-tempera
 
 The examination of paintings on canvas with prior lining treatments often involves identification of visual evidence of unwanted alterations that can be attributed to the effects of uncontrolled heat that exceeded the required or safe temperatures and were combined with equally uncontrolled and unsafe levels of humidity and wetting, all of which together caused irreversible changes in canvas and paint surface morphology. 
 
-The execution of traditional flour-paste or wax-resin linings requires elevated and sustained heat transfer. Historically, it was performed with thermally uncontrolled methods such as hot sand or water bags, flat irons, or self-heating box irons, which relied on the reliner to monitor and regulate the temperature by touch. The introduction of electric irons in the early twentieth century led to their adoption for relining treatments, and they continue to be among methods employed to the present day ([[Bomford et al. 2003\|, 31]]). Most electric hand irons used by conservators today are not precision tools: they lack steadiness in heat transfer, as they are regulated by thermostatic on-off mechanisms that deliver only an average set temperature, which in actuality is a fluctuating series of over- and undershoots that trigger the on-off function. Variance as high as ±15^o^ C has been observed on hand irons ([fig. 37.1](#fig-37-1)).
+The execution of traditional flour-paste or wax-resin linings requires elevated and sustained heat transfer. Historically, it was performed with thermally uncontrolled methods such as hot sand or water bags, flat irons, or self-heating box irons, which relied on the reliner to monitor and regulate the temperature by touch. The introduction of electric irons in the early twentieth century led to their adoption for relining treatments, and they continue to be among methods employed to the present day ({% cite 'Bomford et al. 2003' '31' %}). Most electric hand irons used by conservators today are not precision tools: they lack steadiness in heat transfer, as they are regulated by thermostatic on-off mechanisms that deliver only an average set temperature, which in actuality is a fluctuating series of over- and undershoots that trigger the on-off function. Variance as high as ±15^o^ C has been observed on hand irons ([fig. 37.1](#fig-37-1)).
 
 {% figure 'fig-37-1' %}
 
 This lack of steadiness is even more problematic when the conservator attempts to heat a larger area with sweeping movement of the iron, which necessitates the set temperature to be considerably higher than the desired surface temperature. Furthermore, most hand irons are designed for household textiles, and therefore have operational parameters between 120ºC and 180ºC, far above the safe, low-energy range needed for painting materials. Other temperature controls, such as rheostats, measure energy output and are not corrected by local temperature readings, so the actual surface temperature is unknown.
 
-The primacy of lining as the most significant structural remediation method motivated conservators in the mid-to-late twentieth century to develop custom-fabricated hot tables to overcome the difficulties of heating a larger surface area than possible with a hand iron. The earliest of these were guided by the desire to improve impregnation at 65ºC or higher when performing the prevailing method of wax-resin lining ([[Ruhemann 1953\|, 73]]; {P{lenderleith 1956\|, 169]]; [[Bomford 2003]]; [[Rees Jones, Cummings, and Hedley 2003]]; [[Berger and Zeliger 2003\|, v–ix]]; [[Ackroyd 2002]]; [[Falvey 2008]]). Refinements were made to the design of multipurpose heating tables from the 1980s on, to be used in combination with thermoplastic synthetic adhesives for linings that are activated at 65ºC. Nonetheless, many heating tables lack uniformity in heat transfer over the table surface area, which is easily identified by thermal imaging cameras, and users come to know the idiosyncratic hot and cold spots present on their device ([[Olsson and Markevičius 2010]]).
+The primacy of lining as the most significant structural remediation method motivated conservators in the mid-to-late twentieth century to develop custom-fabricated hot tables to overcome the difficulties of heating a larger surface area than possible with a hand iron. The earliest of these were guided by the desire to improve impregnation at 65ºC or higher when performing the prevailing method of wax-resin lining ({% cite 'Ruhemann 1953' '73' %}; {P{lenderleith 1956\|, 169]]; [[Bomford 2003]]; [[Rees Jones, Cummings, and Hedley 2003]]; {% cite 'Berger and Zeliger 2003' 'v–ix' %}; [[Ackroyd 2002]]; [[Falvey 2008]]). Refinements were made to the design of multipurpose heating tables from the 1980s on, to be used in combination with thermoplastic synthetic adhesives for linings that are activated at 65ºC. Nonetheless, many heating tables lack uniformity in heat transfer over the table surface area, which is easily identified by thermal imaging cameras, and users come to know the idiosyncratic hot and cold spots present on their device ([[Olsson and Markevičius 2010]]).
 
 From the 1970s to the 1990s, various low-pressure envelope methods were combined with infrared lamps for heat transfer ([[Hedley, Hackney, and Cummings 2003]])—or even heat guns—with the inevitable obstacles to accuracy and control, although these methods also aimed to achieve the customary 65ºC heat-activation temperatures for synthetic thermoplastic consolidating and lining adhesives. These large, costly devices do not resonate with the fundamental shift in conservation methodology to prioritize targeted, minimally invasive treatments, today performed by conservators rather than specialized reliners. The application of heat transfer expanded to localized remedial treatments, such as tear mending, consolidation, stabilization of cracked and lifted paint, and reduction of diverse deformations and planar distortions. In the absence of alternatives, these treatments are performed with spatulas and tacking and hand irons ([[Olsson and Markevičius 2010]]).
 
