--- a/content/7-modern-contemporary/39.md
+++ b/content/7-modern-contemporary/39.md
@@ -21,11 +21,11 @@ abstract: "In 2018, the Conservation Department of the Menil Collection performe
 
 ## Introduction
 
-“Why subject it to this rack-like torture? . . . Restorers are amazing. They have transformed my guitar into a tambourine.” So said Georges Braque to John Richardson after viewing one of his still lifes that had been wax-resin lined. He completed the sentiment with a tap of his brush on the painting’s taut surface ([[Richardson 2004\|, 533]]).
+“Why subject it to this rack-like torture? . . . Restorers are amazing. They have transformed my guitar into a tambourine.” So said Georges Braque to John Richardson after viewing one of his still lifes that had been wax-resin lined. He completed the sentiment with a tap of his brush on the painting’s taut surface ({% cite 'Richardson 2004' '533' %}).
 
 In 2016, the Conservation Department at the Menil Collection began a long-anticipated cleaning of Georges Braque’s 1943 painting *Pitcher, Candlestick, and Black Fish* (*Vase et poisson noir*). The painting had been treated in 1961 by Caroline Keck, receiving a “superficial cleaning,” wax-resin lining, and a poly butyl methacrylate varnish.[^1] The motivation for lining was largely preventative. In a letter in the painting’s file, Keck explains that “the result of the rolling and its mishandling has caused cracks to develop, some easily seen with the eye in the yellow area, others developing definitely in the structure but visible under magnification only at this stage…this is an important moment to treat the painting, to prevent any serious damage and even loss of surface as these cracks go further.”[^2] The painting was likely rolled twice in 1940, when Braque travelled to the south of France and then back to Paris at the beginning of World War II ([[Danchev 2006]]).
 
-That Braque sought variation in his final surfaces is effectively demonstrated by Favero, Mysak, and Khandekar in their technical study of twenty-one paintings from 1928 to 1944. Braque achieved a variety of textural effects by mixing sand, fine gravel, and quartz into his grounds or using combs and sculptors’ tools to scrape through wet paint ([[Favero, Mysak, and Khandekar 2013]]). He created more delicate variations of surface by mixing varnish or beeswax into the paint or by selectively varnishing certain passages. Richardson describes his practice of applying a varnish to certain passages, sometimes according to a viewer’s expectations of an object’s reflectance (as in his paintings of the 1920s and ’30s, where shiny objects such as a glass vase received a glossy finish while matte objects such as a lemon received nothing), or sometimes in deliberately playful ways that go against a viewer’s expectations by rendering inherently shiny objects matte ([[Richardson 2004\|, 533]]).
+That Braque sought variation in his final surfaces is effectively demonstrated by Favero, Mysak, and Khandekar in their technical study of twenty-one paintings from 1928 to 1944. Braque achieved a variety of textural effects by mixing sand, fine gravel, and quartz into his grounds or using combs and sculptors’ tools to scrape through wet paint ([[Favero, Mysak, and Khandekar 2013]]). He created more delicate variations of surface by mixing varnish or beeswax into the paint or by selectively varnishing certain passages. Richardson describes his practice of applying a varnish to certain passages, sometimes according to a viewer’s expectations of an object’s reflectance (as in his paintings of the 1920s and ’30s, where shiny objects such as a glass vase received a glossy finish while matte objects such as a lemon received nothing), or sometimes in deliberately playful ways that go against a viewer’s expectations by rendering inherently shiny objects matte ({% cite 'Richardson 2004' '533' %}).
 
 In *Pitcher,* the cleaning revealed that Braque manipulated the final surface sheen with two black paints—one that is velvety matte and one that is glossy—to establish subtle contrasts across the surface.[^3] For instance, a fish featured in the foreground is almost entirely painted in matte black paint except for two small reveals around its eye and gills where Braque left underlying glossy paint in reserve, creating a shiny iris and gleaming gill line ([fig. 39.1](#fig-39-1)).
 
@@ -99,7 +99,7 @@ When considering the treatment results, there are a variety of aspects to consid
 
 {% figure 'fig-39-2' %}
 
-The planarity of the canvas is now visibly more congruent with the age of the paint layer, as it no longer has the rigid tautness it did before. Six horizontal cracks spanning the painting’s width are more prominent, resulting in subtle planar distortions that are visible in the final stretching ([fig. 39.3](#fig-39-3)). These cracks likely relate to when it was rolled during Braque’s evacuation from Paris at the outset of World War II; their return make visible an aspect of the painting’s history that was previously masked by the lining’s flatness. In addition to evidencing history, this return of dimensionality restores a relationship between paint and support that is more in keeping with Braque’s governing thoughts about the artistic process. Favero et al. have eloquently summarized these using an example described by the artist: “For Braque, color was inextricably bound to material and texture: ‘Dip two white cloths, but of different material, into the same dye; their color will be different’” ([[Favero, Mysak, and Khandekar, 2013\|, 99]]).[^8] Restoring the pliancy of the linen that had formerly been restricted by the wax resin creates an interaction between color and support that was previously absent.
+The planarity of the canvas is now visibly more congruent with the age of the paint layer, as it no longer has the rigid tautness it did before. Six horizontal cracks spanning the painting’s width are more prominent, resulting in subtle planar distortions that are visible in the final stretching ([fig. 39.3](#fig-39-3)). These cracks likely relate to when it was rolled during Braque’s evacuation from Paris at the outset of World War II; their return make visible an aspect of the painting’s history that was previously masked by the lining’s flatness. In addition to evidencing history, this return of dimensionality restores a relationship between paint and support that is more in keeping with Braque’s governing thoughts about the artistic process. Favero et al. have eloquently summarized these using an example described by the artist: “For Braque, color was inextricably bound to material and texture: ‘Dip two white cloths, but of different material, into the same dye; their color will be different’” ({% cite 'Favero, Mysak, and Khandekar, 2013' '99' %}).[^8] Restoring the pliancy of the linen that had formerly been restricted by the wax resin creates an interaction between color and support that was previously absent.
 
 {% figure 'fig-39-3' %}
 
@@ -131,7 +131,7 @@ Exactly what was extracted needs to be identified. Does what was removed corresp
 
 It is worth exploring whether there are alternative hydrocarbon solvents that would be equally effective. As evidenced by the solvent-immersion test, ShellSol OMS actually extracted a similar amount of wax resin by weight to xylenes (32% compared to 31%). Clearly, it had an affinity for the wax-resin mixture, but it takes longer to work. Solvents with similar properties should be explored, perhaps ShellSol D38.
 
-Weight loss per surface area should be measured instead of weight change percentages, as Gunnar Heydenreich did in his 1994 wax-resin extraction treatment ([[Heydenreich 1994\|, 25]]). This will more easily allow for comparison of wax-resin loss across samples of varying weights and sizes. The impact of a higher solvent volume on the amount of wax resin extracted should be explored with more trials. Perhaps using a higher volume with a shorter treatment duration could optimize the amount of wax resin extracted while minimizing solvent and heat exposure.
+Weight loss per surface area should be measured instead of weight change percentages, as Gunnar Heydenreich did in his 1994 wax-resin extraction treatment ({% cite 'Heydenreich 1994' '25' %}). This will more easily allow for comparison of wax-resin loss across samples of varying weights and sizes. The impact of a higher solvent volume on the amount of wax resin extracted should be explored with more trials. Perhaps using a higher volume with a shorter treatment duration could optimize the amount of wax resin extracted while minimizing solvent and heat exposure.
 
 We need to better understand what is causing the blanching around cracks and areas of thin paint. Is it related to incomplete wax-resin removal, a higher rate of solvent evaporation, or a combination?
 
@@ -139,7 +139,7 @@ We need to better understand what is causing the blanching around cracks and are
 
 Wax-resin linings have a mixed legacy—they partially address physics at the expense of certain aesthetics. Qualities like saturation and color harmony are sacrificed for a planarity free from distortions that can impair legibility. Though wax-resin impregnation has been shown to improve tensile properties ([[Hedley 1975]]) and increase protection against changes in humidity for short exposure times ([[Young and Ackroyd 2001]]), it has also been shown to increase contraction forces resulting from long exposures to high humidity ([[Andersen et al. 2014]]).
 
-Its impact on color change is similarly contradictory. Wax-resin linings affect color saturation to varying degrees, dependent upon the presence of sizing, pigment type, medium type, layer thickness, and hiding power ([[Nieder, Hendricks, and Burnstock 2011\|, 98]]; [[Froment 2019\|, 439]]). Bomford and Staniforth have demonstrated that wax-resin impregnation has a significant impact on the color of canvas of varying weights as well as grounds of differing compositions, particularly those that are underbound, but whether such a change is visible in the painting is dependent on the degree to which the canvas or ground plays a visible role in the composition ([[Bomford and Staniforth 1981]]). Though recent studies have indicated that certain artists chose to have their paintings lined very early in a painting’s life or even during the painting process ([[Hackney 2004b]]), it is clear from Richardson’s writings that Braque preferred a surface in which the variable qualities of stretched canvas are visible.
+Its impact on color change is similarly contradictory. Wax-resin linings affect color saturation to varying degrees, dependent upon the presence of sizing, pigment type, medium type, layer thickness, and hiding power ({% cite 'Nieder, Hendricks, and Burnstock 2011' '98' %}; {% cite 'Froment 2019' '439' %}). Bomford and Staniforth have demonstrated that wax-resin impregnation has a significant impact on the color of canvas of varying weights as well as grounds of differing compositions, particularly those that are underbound, but whether such a change is visible in the painting is dependent on the degree to which the canvas or ground plays a visible role in the composition ([[Bomford and Staniforth 1981]]). Though recent studies have indicated that certain artists chose to have their paintings lined very early in a painting’s life or even during the painting process ([[Hackney 2004b]]), it is clear from Richardson’s writings that Braque preferred a surface in which the variable qualities of stretched canvas are visible.
 
 A treatment such as this one is not undertaken lightly. In terms of solvent amounts and their potential effects on paint films, the treatment is not dissimilar to the process of cleaning. Above all, the words of the artist offer direction. Without its lining, *Pitcher, Candlestick, and Black Fish* presents a planarity that is more congruent with its age and honors its history. Furthermore, reduction of the wax-resin adhesive allows physical response to environmental fluctuations. Perhaps most importantly, it restores the relationship of the canvas’s materiality and paint layers to one more in keeping with Braque’s artistic practice. When considering Braque’s statements about the interconnectedness of those two elements at the start of treatment, the question became why continue to subject it to this racklike torture?
 
@@ -213,4 +213,4 @@ All trials involved the following procedure with adjustments for specific variab
 
 [^11]: Percentage of weight loss was calculated by dividing the difference of the painting’s weight before and after treatment by its weight before treatment and multiplying by 100.
 
-[^12]: Only the results from the measurements on the tacking margins are included here, as three measurements were taken, which permits calculation of standard deviation. The difference perceptible to the human eye has been a subject of debate in the literature since the 1980s. Some authors suggest that one CIELAB unit (1ΔE\*) corresponds to the smallest difference that is perceivable to the naked eye, while other authors suggest it is between one and two units, and others above two. For purposes of comparison with other research, a ΔE\* of 1 was defined as the perceptible limit in this paper. See [[Froment 2019\|, 140]].
+[^12]: Only the results from the measurements on the tacking margins are included here, as three measurements were taken, which permits calculation of standard deviation. The difference perceptible to the human eye has been a subject of debate in the literature since the 1980s. Some authors suggest that one CIELAB unit (1ΔE\*) corresponds to the smallest difference that is perceivable to the naked eye, while other authors suggest it is between one and two units, and others above two. For purposes of comparison with other research, a ΔE\* of 1 was defined as the perceptible limit in this paper. See {% cite 'Froment 2019' '140' %}.
