--- a/content/7-modern-contemporary/40.md
+++ b/content/7-modern-contemporary/40.md
@@ -33,7 +33,7 @@ During curing, paint layers (which are “fatter” layers) attempt to shrink mo
 
 By combining equations from geometry with Timoshenko’s equation for curvature of a two-layer laminate ([[Timoshenko 1925]]), we can derive the height of the curl in the paint-ground laminate.[^2] Height depends on the difference in shrinkages, the thickness of the laminate (in this case, paint and ground), and the width (w) of the region that is free to curl. The inset graph of [fig. 40.1](#fig-40-1) shows cupping height (y-axis) for various laminate thicknesses (x-axis), for paintings where the paint layers are equal to, or not more than a few times thicker than, the ground, and are not especially soft compared to the ground.[^3] Plots are shown for a range of differential shrinkages, with 0.2% as a difference we can expect for an oil paint on a lean ground, whether oil or acrylic.[^4] The blue circle marks the predicted curl for the model paintings in this study. Much larger shrinkages due to severe aging or solvent leaching will drive much larger curl.
 
-The size layer is not considered in this model for curl (equations for a three-layer system are beyond the scope of this paper). However, one can expect shrinkage of the size layer to counteract shrinkage of the paint layer, especially at low humidities, but in Hough’s measurements of curl in the experimental samples (see Profile Measurement below), curl definitely increased with lower relative humidity (RH) ([[Hough 2000\|, fig. 11]]),[^5] showing that shrinkage of the paint layer dominated shrinkage of the size layer. We can qualify this simple two-layer model for curl, paint-ground, as an estimate of the maximum expected curl.
+The size layer is not considered in this model for curl (equations for a three-layer system are beyond the scope of this paper). However, one can expect shrinkage of the size layer to counteract shrinkage of the paint layer, especially at low humidities, but in Hough’s measurements of curl in the experimental samples (see Profile Measurement below), curl definitely increased with lower relative humidity (RH) ({% cite 'Hough 2000' 'fig. 11' %}),[^5] showing that shrinkage of the paint layer dominated shrinkage of the size layer. We can qualify this simple two-layer model for curl, paint-ground, as an estimate of the maximum expected curl.
 
 Where the painting is cracked, the canvas acts as a hinge (see [fig. 40.1b](#fig-40-1)). Curl is then limited by the surrounding area of painting plus any overall tension in the painting. If the painting is keyed out, the canvas hinge and the cupping are pulled toward flatness, but this flattening reaches a limit when the canvas hinge aligns with the center of the tension located in the size, ground, and paint layers of the uncracked regions.[^6] Cupping cannot be flattened beyond this limit no matter how much tension is applied. This flattening limit h~align~ is equal to at least half the combined thickness of canvas, size, and ground (for low-stiffness paint) and at most half the combined thickness of canvas, size, ground, and paint (for high-stiffness paints). In [fig. 40.1b](#fig-40-1), the simplest situation has been assumed, where the red line is in the middle of the size-ground-paint laminate.
 
@@ -141,7 +141,7 @@ Results for each treatment are summarized in [table 40.1](#table-40-1), and pres
 
 {% figure 'fig-40-8' %}
 
-During the early monitoring of the cracked model paintings, prior to any treatment, cupping increased after the tension was released, exceeding the painting’s half thickness, thus confirming curl as the dominant driving force ([[Hough and Michalski 1999\|, fig. 7]]).
+During the early monitoring of the cracked model paintings, prior to any treatment, cupping increased after the tension was released, exceeding the painting’s half thickness, thus confirming curl as the dominant driving force ({% cite 'Hough and Michalski 1999' 'fig. 7' %}).
 
 After the first seventy days, before any keying out, only three of the treatments (4, 5, 6) were successful in terms of visual appearance—rigid enough to hold the cupping down and insubstantial enough not to create new distortions.
 
@@ -223,7 +223,7 @@ Our conclusions fall into two categories: those that have practical ramification
 
 [^3]: Given initial values of m=n=1 (see previous note) a plot of h stays within 25% of initial value despite changes in thickness ratio, n, by a factor of 3, or changes in elasticity ratio, m, by a factor of 7. Heavy impasto, or paints known to be soft, such as poor driers, will need the full equation, rather than the graph of [fig. 40.1](#fig-40-1).
 
-[^4]: Curing shrinkage of linseed oil was suggested as a contributor to paint failure as early as 1929 ([[Clark and Tschentke 1929]]). Pure medium with driers, cured in the dark, shrank 1% to 1.6% by volume, so 0.3%–0.5% in length. A paint of 35% pigment volume concentration (PVC) would experience \~65% of pure oil values, so \~0.2–0.3%. A ground at critical PVC would shrink negligibly in comparison. Browne reported dimensional change for films of linseed oil paints after they were released from the casting substrate and exposed to cycles of high relative humidity ([[Browne 1955]]). Michalski plotted the nonrecoverable shrinkage from Browne’s data: \~0.3% for an oil paint of 30% PVC, consistent with Clark and Tschentke ([[Michalski 1991\|, n25]]).
+[^4]: Curing shrinkage of linseed oil was suggested as a contributor to paint failure as early as 1929 ([[Clark and Tschentke 1929]]). Pure medium with driers, cured in the dark, shrank 1% to 1.6% by volume, so 0.3%–0.5% in length. A paint of 35% pigment volume concentration (PVC) would experience \~65% of pure oil values, so \~0.2–0.3%. A ground at critical PVC would shrink negligibly in comparison. Browne reported dimensional change for films of linseed oil paints after they were released from the casting substrate and exposed to cycles of high relative humidity ([[Browne 1955]]). Michalski plotted the nonrecoverable shrinkage from Browne’s data: \~0.3% for an oil paint of 30% PVC, consistent with Clark and Tschentke ({% cite 'Michalski 1991' 'n25' %}).
 
 [^5]: Since the RH in the room where cupping was measured varied gradually over the course of the study, all cupping heights prior to treatment were plotted versus RH in order to derive a correction factor to normalize results to 50% RH. The factor was 2.1% height increase per 1% RH drop, for example, 21% height increase when RH is reduced from 50% to 40% RH (slack paintings).
 
