--- a/content/8-posters/41.md
+++ b/content/8-posters/41.md
@@ -42,7 +42,7 @@ BkM conservation records are kept as paper files and digital assets on The Museu
 
 ## Preliminary Findings
 
-Wax-resin linings were performed at BkM over a nearly fifty-year period from 1936 through the mid-1980s, encompassing the rise and fall of the technique’s popularity in the United States. Based on the records reviewed to date, the authors hypothesize that 20%–25% of the canvas paintings in the BkM collection are wax-resin lined. The earliest linings were primarily done on paintings that had been in the collection for decades. The institution, with roots dating back to 1823, had been collecting paintings for nearly a hundred years before employing a conservator. In his first years on the job, Keck may have encountered a backlog of paintings in unstable condition that he judged to be in need of lining. The data appears to suggest that, starting in the 1940s, many paintings were lined as they were acquired. This trend is consistent with the developing role of the conservator within the museum. Annual reports from 1938 onward emphasize the practice of examining all artwork considered for acquisition “to make sure of their good condition and authenticity” ([[Brooklyn Museum 1940\|, 23]]).
+Wax-resin linings were performed at BkM over a nearly fifty-year period from 1936 through the mid-1980s, encompassing the rise and fall of the technique’s popularity in the United States. Based on the records reviewed to date, the authors hypothesize that 20%–25% of the canvas paintings in the BkM collection are wax-resin lined. The earliest linings were primarily done on paintings that had been in the collection for decades. The institution, with roots dating back to 1823, had been collecting paintings for nearly a hundred years before employing a conservator. In his first years on the job, Keck may have encountered a backlog of paintings in unstable condition that he judged to be in need of lining. The data appears to suggest that, starting in the 1940s, many paintings were lined as they were acquired. This trend is consistent with the developing role of the conservator within the museum. Annual reports from 1938 onward emphasize the practice of examining all artwork considered for acquisition “to make sure of their good condition and authenticity” ({% cite 'Brooklyn Museum 1940' '23' %}).
 
 Most of the paintings wax-resin lined at BkM were between fifty and 125 years old at the time of lining ([fig. 41.3](#fig-41-3)), including paintings from the early nineteenth century through the 1930s. Few paintings predating the nineteenth century were lined at BkM, which likely reflects the strength of BkM collection holdings in certain areas.
 
