--- a/content/8-posters/42.md
+++ b/content/8-posters/42.md
@@ -44,7 +44,7 @@ Professor \[Stephen\] Rees Jones had originally given me a project, essentially 
 
 In 1993, Hackney wrote about Hedley’s contributions ([fig. 42.2](#fig-42-2)):
 
-It was clear that there was little fundamental understanding of the properties of materials used in paintings and their conservation. The complex structure of an old stretched canvas painting had not been considered from an engineering standpoint. As a consequence, at the Greenwich lining conference some very strong contradictory opinions were expressed. It was Gerry’s gift that he could quickly analyze an argument and identify its premises, frequently enabling him to resolve a dispute or misunderstanding. ([[Hackney 1993\|, 4]])
+It was clear that there was little fundamental understanding of the properties of materials used in paintings and their conservation. The complex structure of an old stretched canvas painting had not been considered from an engineering standpoint. As a consequence, at the Greenwich lining conference some very strong contradictory opinions were expressed. It was Gerry’s gift that he could quickly analyze an argument and identify its premises, frequently enabling him to resolve a dispute or misunderstanding. ({% cite 'Hackney 1993' '4' %})
 
 {% figure 'fig-42-2' %}
 
@@ -64,15 +64,15 @@ In his 1995 FAIC interview, Berger noted:
 
 Berger had the verso of the butterfly collage on canvas serve as the top of the vacuum envelope.
 
-In 1976 he told me, “There is another little thing that I developed … that you can use the painting itself as a membrane and reline it without any pressure from the top.”[^8] During the opening session in Greenwich, *The Guitar*, a freshly painted collage, oil, and mixed media work on primed canvas by Raphael Berger, with high impasto and preserved butterfly specimens, was lined in a public demonstration. The lining left the high impasto and the butterflies intact ([[Berger and Russell 2000\|, 35]]).
+In 1976 he told me, “There is another little thing that I developed … that you can use the painting itself as a membrane and reline it without any pressure from the top.”[^8] During the opening session in Greenwich, *The Guitar*, a freshly painted collage, oil, and mixed media work on primed canvas by Raphael Berger, with high impasto and preserved butterfly specimens, was lined in a public demonstration. The lining left the high impasto and the butterflies intact ({% cite 'Berger and Russell 2000' '35' %}).
 
-New terminology and key personalities emerged at Greenwich. Caroline Villers noted that Berger coined the term *weave interference* ([[Villers 2003a\|, v]]), while Percival-Prescott had invented the portmanteau *shrinkle* to describe what happens when moisture causes the canvas to shrink and the paint to wrinkle. I was among the many audience members over the following years who were treated to conference talks featuring Gustav Berger at the podium while his wife, Mira, moved up and down the aisles passing out squares of Kleenex tissue “lined” with other squares of Kleenex using Beva 371 (with no resultant staining). Mira would sometime call out instructions from the back of the auditorium: “No, no, Gustav—wrong slide!” ([fig. 42.4](#fig-42-4)).
+New terminology and key personalities emerged at Greenwich. Caroline Villers noted that Berger coined the term *weave interference* ({% cite 'Villers 2003a' 'v' %}), while Percival-Prescott had invented the portmanteau *shrinkle* to describe what happens when moisture causes the canvas to shrink and the paint to wrinkle. I was among the many audience members over the following years who were treated to conference talks featuring Gustav Berger at the podium while his wife, Mira, moved up and down the aisles passing out squares of Kleenex tissue “lined” with other squares of Kleenex using Beva 371 (with no resultant staining). Mira would sometime call out instructions from the back of the auditorium: “No, no, Gustav—wrong slide!” ([fig. 42.4](#fig-42-4)).
 
 {% figure 'fig-42-4' %}
 
 In ICOM-CC’s 1972 triennial meeting, in Madrid, Vishwa Raj Mehra (b. 1931) had presented a radical review of lining methodology, in which he began to argue for a more graduated approach to structural treatment and to question assumptions about the cohesive strength required of lining adhesives and the tensile forces in the painting composite. Percival-Prescott wrote in 2003:
 
-> The atmosphere in the Greenwich Conference will never be forgotten and led to many substantial developments … One of the greatest of these was Vishwa Mehra’s low-pressure cold table; this invention took its place in lining history and was to be copied extensively throughout the world, including for use with paper and textile conservation. Mehra had brought a prototype lining table, transported specially to the conference in order to demonstrate lining with Plextol B500 cold-setting adhesive and woven polypropylene fabric. ([[Percival-Prescott 2003a\|, ix]])
+> The atmosphere in the Greenwich Conference will never be forgotten and led to many substantial developments … One of the greatest of these was Vishwa Mehra’s low-pressure cold table; this invention took its place in lining history and was to be copied extensively throughout the world, including for use with paper and textile conservation. Mehra had brought a prototype lining table, transported specially to the conference in order to demonstrate lining with Plextol B500 cold-setting adhesive and woven polypropylene fabric. ({% cite 'Percival-Prescott 2003a' 'ix' %})
 
 Robert Fieux (1919–1991) ([fig. 42.5](#fig-42-5)) presented a paper at Greenwich reporting on a meeting in Cooperstown, New York, in summer 1973, hosted by Sheldon and Caroline Keck, comparing wax resin, glue paste, Beva, and polyvinyl acetate. Fieux gave papers in Ottawa 1976 and at ICOM-CC 1978, in Zagreb, on “Electrostatic Cling as a Pressure Source in Lining of Paintings.” He invented Fabri-Sil linings: silicone adhesive on Teflon-coated fiberglass fabric, which required only gentle hand pressure for attachment. This seemingly gentle technique was adopted at New York’s Metropolitan Museum and the Museum of Fine Arts, Boston, for a time, but was later abandoned.
 
