--- a/content/8-posters/48.md
+++ b/content/8-posters/48.md
@@ -26,15 +26,15 @@ abstract: "The paper presents the results of the case study in which a solvent p
 
 ## Introduction
 
-The application of wax and wax-resin materials was a common practice in conservation and restoration in Russia from the nineteenth century until the last quarter of the twentieth. Due to their high stability and availability, these materials were used for a wide range of operations: lining, strip-lining, tear mending, and consolidation of ground and paint layer. Wax-resin lining began to be used in Russia from the mid-twentieth century ([[Gorin and Cherkasova 1977\|, 113]]).
+The application of wax and wax-resin materials was a common practice in conservation and restoration in Russia from the nineteenth century until the last quarter of the twentieth. Due to their high stability and availability, these materials were used for a wide range of operations: lining, strip-lining, tear mending, and consolidation of ground and paint layer. Wax-resin lining began to be used in Russia from the mid-twentieth century ({% cite 'Gorin and Cherkasova 1977' '113' %}).
 
-The main reasons for using wax and wax-resin compositions for consolidation were interlayer cleavage, flaking of the paint layer from oil ground, previous restoration with wax-resin, the deterioration of paintings caused by mildew or heat, and the like ([[Gorin and Cherkasova 1977\|, 110]]). Nonetheless, the authors of Russian manuals on restoration mentioned the negative consequences of using wax-resin adhesives that had been observed. For example, *The Restoration of Easel Oil Paintings* states, “Wax-resin composition has a number of negative properties for lining. Impregnating porous chalk grounds, it changes the general tone of the painting towards darkening, especially in the light areas of the picture. During lining the wax-resin composition impregnates the author’s canvas and practically cannot be removed from the picture. It destroys the hygroscopic properties of the canvas, which are necessary for correcting canvas deformations, the picture loses its elasticity, becomes firm and heavy.” ([[Gorin and Cherkasova 1977\|, 129]]).
+The main reasons for using wax and wax-resin compositions for consolidation were interlayer cleavage, flaking of the paint layer from oil ground, previous restoration with wax-resin, the deterioration of paintings caused by mildew or heat, and the like ({% cite 'Gorin and Cherkasova 1977' '110' %}). Nonetheless, the authors of Russian manuals on restoration mentioned the negative consequences of using wax-resin adhesives that had been observed. For example, *The Restoration of Easel Oil Paintings* states, “Wax-resin composition has a number of negative properties for lining. Impregnating porous chalk grounds, it changes the general tone of the painting towards darkening, especially in the light areas of the picture. During lining the wax-resin composition impregnates the author’s canvas and practically cannot be removed from the picture. It destroys the hygroscopic properties of the canvas, which are necessary for correcting canvas deformations, the picture loses its elasticity, becomes firm and heavy.” ({% cite 'Gorin and Cherkasova 1977' '129' %}).
 
-After the negative effects of wax and wax-resin impregnation of canvas paintings were scientifically proven and presented by Gustav Berger and Harold Zeliger in 1975, the application of these materials by Russian conservators came to be limited, primarily performed only for the consolidation of murals made in oil technique ([[Fedoseeva 1999\|, 24–36]]).
+After the negative effects of wax and wax-resin impregnation of canvas paintings were scientifically proven and presented by Gustav Berger and Harold Zeliger in 1975, the application of these materials by Russian conservators came to be limited, primarily performed only for the consolidation of murals made in oil technique ({% cite 'Fedoseeva 1999' '24–36' %}).
 
 One of the great problems mentioned by Berger and Zeliger is the difficulty of removal of wax and wax resin from the structure of canvas ([[Berger and Zeliger 1975]]). Wax treatment limits the use of other restoration materials, particularly water-based ones, for conservation. In this regard, diverse methods of wax/wax-resin extraction have been developed and suggested. The most widely adopted method is the use of a heated spatula and filter paper for absorption of melting wax. The main disadvantage of such a procedure is that, during heating, wax is only partly absorbed by the paper, and it also penetrates deeper in the structure of canvas fibers.
 
-Another popular method of wax removal is mineral-spirit compresses. After being subjected to the solvent, wax softens and can be easily taken away—but only from the surface of the canvas. In 1988, Landgrebe suggested using solvent pastes based on hydroxypropyl cellulose (Klucel M) and solvent mixtures ([[Nicolaus 1999\|, 95]]).
+Another popular method of wax removal is mineral-spirit compresses. After being subjected to the solvent, wax softens and can be easily taken away—but only from the surface of the canvas. In 1988, Landgrebe suggested using solvent pastes based on hydroxypropyl cellulose (Klucel M) and solvent mixtures ({% cite 'Nicolaus 1999' '95' %}).
 
 To achieve more complete removal of wax-resin adhesives, any such treatment should be done on a low-pressure table. However, not every conservation studio is equipped with one. Thus, searching for a material that can effectively absorb wax and wax-resin residues from the structure of canvas paintings without special equipment is a focus area.
 
