--- a/content/8-posters/53.md
+++ b/content/8-posters/53.md
@@ -69,7 +69,7 @@ Glass-fiber fabric was selected for its high tensile strength, dimensional stabi
 
 ### Lining Fabric
 
-A spun-yarn polyester fabric was considered a good lining fabric due to its availability in a wide loom width, its low crease potential, dimensional stability, and high abrasion-resistance properties ([[Young and Jardine 2012\|, 251]]). Trevira CS was selected due to its built-in flame resistance. The Trevira CS fabric has a modified polyester molecule, which means it is permanently flame retardant, which is an important feature considering the paintings’ unconditioned, historic-home environment.[^8] To ensure sufficient bonding with the impregnated glass-fiber interleaf, a solution of 20% Plextol D540 and 20% Dispersion K 360 diluted with 60% distilled water, was brushed onto the stretched fabric.
+A spun-yarn polyester fabric was considered a good lining fabric due to its availability in a wide loom width, its low crease potential, dimensional stability, and high abrasion-resistance properties ({% cite 'Young and Jardine 2012' '251' %}). Trevira CS was selected due to its built-in flame resistance. The Trevira CS fabric has a modified polyester molecule, which means it is permanently flame retardant, which is an important feature considering the paintings’ unconditioned, historic-home environment.[^8] To ensure sufficient bonding with the impregnated glass-fiber interleaf, a solution of 20% Plextol D540 and 20% Dispersion K 360 diluted with 60% distilled water, was brushed onto the stretched fabric.
 
 ### Lining Table
 
