--- a/content/8-posters/55.md
+++ b/content/8-posters/55.md
@@ -23,7 +23,7 @@ abstract: "This paper describes the conservation treatment performed on a large-
 
 The painting entitled *The Crucifixion* originates from the neoclassical parish church of Saint Mary Magdalene in Serniki, a village in Eastern Poland. The church, designed by the architect Jakub Fontana, was funded by Eustachy Potocki (1720–1768), a Polish magnate ([[Gombin 2009]]\|, 123). Formerly a main altar painting*, The Crucifixion* was attributed by local tradition to Jan Bogumił Plersch (1732–1817), one of the most important Polish painters active during the rule of Stanisław August Poniatowski (1732–1798), the last king of Poland ([[Król-Kaczorowska 1981]]). The painting depicts Christ on the cross with figures surrounding him, and was modeled after the composition of *Coup de Lance*, which was painted in 1620 for the Convent of the Friars Minor in Antwerp by Peter Paul Rubens. Rubens’s composition was reproduced in a popular graphic print by Boetius à Bolswert. The print itself was not based on the painting but on a later drawing prepared in Rubens’s studio ([[Art Institute of Chicago n.d.]]).[^1] This print appears to have served as a direct inspiration for the author of the Serniki painting.
 
-*The Crucifixion* was painted with oil paint on a primed linen canvas that was sewn together from two main and four additional smaller pieces. It was once mounted on a traditional wooden stretcher, which no longer existed at the time of the conservation. Due to the painting’s rapidly declining condition, many damaging alterations, and extensive overpaintings done throughout its history ([fig. 55.1](#fig-55-1)), the painting was removed from permanent display in the main altar during the second half of the twentieth century ([[Brykowski 1975\|, 239]]). It was then kept in a storage room, where it was subjected to further decay, waiting for a future conservation treatment.
+*The Crucifixion* was painted with oil paint on a primed linen canvas that was sewn together from two main and four additional smaller pieces. It was once mounted on a traditional wooden stretcher, which no longer existed at the time of the conservation. Due to the painting’s rapidly declining condition, many damaging alterations, and extensive overpaintings done throughout its history ([fig. 55.1](#fig-55-1)), the painting was removed from permanent display in the main altar during the second half of the twentieth century ({% cite 'Brykowski 1975' '239' %}). It was then kept in a storage room, where it was subjected to further decay, waiting for a future conservation treatment.
 
 {% figure 'fig-55-1' %}
 
@@ -51,7 +51,7 @@ It would have been possible to maintain the existing arrangement by adhering the
 
 ## Treatment Steps
 
-To gradually change the structure of the canvas support without causing stress to the already fragile paint layer, it was very gently subjected to higher humidity levels. The problematic areas of the canvas were moistened with blotters and relaxed, which enabled structural corrections. Single linen threads were temporarily adhered with Vinavil NPC to the edges of the torn parts to form a loose bridging, and the structure was secured with locally placed weights. The whole procedure was repeated several times, with the temporary bridging “braces” being reapplied in order to form a tighter join ([[Rouba 2000\|, 65]]). With such a large-scale tear, it was impossible to reconstruct the course of the original weave pattern completely by using a thread-by-thread approach. Nonetheless, the final results were still satisfactory; the remaining gap was not larger than 4 mm. The torn parts of the canvas were glued together with Vinavil NPC, matching their mutual edge, and this procedure did not cause any structural deformations. Only small inlays were inserted in places where the tear edge was destroyed and not possible to reweave. The repaired tears were secured from the back with Beva Tex.
+To gradually change the structure of the canvas support without causing stress to the already fragile paint layer, it was very gently subjected to higher humidity levels. The problematic areas of the canvas were moistened with blotters and relaxed, which enabled structural corrections. Single linen threads were temporarily adhered with Vinavil NPC to the edges of the torn parts to form a loose bridging, and the structure was secured with locally placed weights. The whole procedure was repeated several times, with the temporary bridging “braces” being reapplied in order to form a tighter join ({% cite 'Rouba 2000' '65' %}). With such a large-scale tear, it was impossible to reconstruct the course of the original weave pattern completely by using a thread-by-thread approach. Nonetheless, the final results were still satisfactory; the remaining gap was not larger than 4 mm. The torn parts of the canvas were glued together with Vinavil NPC, matching their mutual edge, and this procedure did not cause any structural deformations. Only small inlays were inserted in places where the tear edge was destroyed and not possible to reweave. The repaired tears were secured from the back with Beva Tex.
 
 The next challenging step of the structural conservation of the canvas support was to apply a new lining in order to stabilize and secure the original canvas, which could no longer withstand its own weight. It was decided to make it a fully reversible lining using high-quality linen canvas and 65 µm Beva 371 Film. Because of the dimensions of the painting, the process was carried out in phases. The adhesive film was placed on the lining canvas impregnated earlier with a solution of Vinavil NPC. The lining canvas was placed on the back of the painting and ironed with hand irons to create the initial bond.
 
