--- a/content/8-posters/56.md
+++ b/content/8-posters/56.md
@@ -65,11 +65,11 @@ In preparation for future interventions in cases where the degraded canvas carri
 
 {% figure 'table-56-3' 'is-table-scale-5' %}
 
-Research on previous consolidation campaigns with similar objects reveal the use of protein glues and carboxymethyl cellulose ([[Dumitran and Rustoiu 2007\|, 30]]). Beva 371b formulations were previously used ([[Petcu 2017]]), but some of the ingredients can raise concerns for conservators. Water-based consolidation systems and adhesives prone to severe shrinkage, as are protein glues, were not considered here, due to the fragility of the untensioned canvas and paint as well as the presence of metal soaps formation.[^9] Potentially cross-linking materials were also excluded from the list.
+Research on previous consolidation campaigns with similar objects reveal the use of protein glues and carboxymethyl cellulose ({% cite 'Dumitran and Rustoiu 2007' '30' %}). Beva 371b formulations were previously used ([[Petcu 2017]]), but some of the ingredients can raise concerns for conservators. Water-based consolidation systems and adhesives prone to severe shrinkage, as are protein glues, were not considered here, due to the fragility of the untensioned canvas and paint as well as the presence of metal soaps formation.[^9] Potentially cross-linking materials were also excluded from the list.
 
 The properties of the chosen materials were researched with recommendations from the available literature,[^10] and further mixtures were selected, including particular additives. The 11 formulas chosen included polyethyloxazoline (PEOX) solutions, including Aquazol 200 and 500; polyvinyl alcohol (Mowiol 4-88), acrylic solutions as Degalan P 550 and Paraloid B72, nonionic cellulose ethers, such as MC and MHEC, as well as Celluforce NCC cellullose nanocrystals ([[Bridarolli et al. 2018b]]) (see [table 56.3](#table-56-3)). Aquazol was selected given its versatility, nontoxicity, minimal interaction with the constituent materials of paintings, and good reversibility ([[Bosetti 2012]]). To enhance the diffusion of the consolidant and its efficiency, surface cleaning and prewetting was carried out selectively.
 
-Considering the dry environment of current storage, Aquazol 500—stronger than Aquazol 200 ([[Mecklenburg, Fuster-López, and Ottoloni 2012\|, 21]]) but with lower penetration ([[Arslanoglu and Tallent 2003]])—was used instead of protein glues, assuring optimum penetration, plasticization, and the necessary workability to reattach the flakes. The addition of 1% Celluforce NCC helped improving the interlayer adhesion and grip while simultaneously reinforcing the degraded canvas. Culminal 2000, a methylcellulose derivative, was added to impart gelled consistency to the adhesive, decreasing the RH responsiveness ([[Arslanoglu 2004]]) and better performance in filling gaps between shrunken ground and canvas threads. Repeated applications by brush and syringe and both cold mechanical pressure using a silicon tool and the heated spatula proved useful in achieving satisfactory adhesion and a stabilization of canvas and paint on both sides of the banner ([fig. 56.3](#fig-56-3)).
+Considering the dry environment of current storage, Aquazol 500—stronger than Aquazol 200 ({% cite 'Mecklenburg, Fuster-López, and Ottoloni 2012' '21' %}) but with lower penetration ([[Arslanoglu and Tallent 2003]])—was used instead of protein glues, assuring optimum penetration, plasticization, and the necessary workability to reattach the flakes. The addition of 1% Celluforce NCC helped improving the interlayer adhesion and grip while simultaneously reinforcing the degraded canvas. Culminal 2000, a methylcellulose derivative, was added to impart gelled consistency to the adhesive, decreasing the RH responsiveness ([[Arslanoglu 2004]]) and better performance in filling gaps between shrunken ground and canvas threads. Repeated applications by brush and syringe and both cold mechanical pressure using a silicon tool and the heated spatula proved useful in achieving satisfactory adhesion and a stabilization of canvas and paint on both sides of the banner ([fig. 56.3](#fig-56-3)).
 
 {% figure 'fig-56-3' %}
 
@@ -107,6 +107,6 @@ This study would not have been possible without the expertise, goodwill, and act
 
 [^9]: The introduction of water can lead to formation of metal soaps inside of paint layers. See [[van Loon, Noble, and Burnstock 2021]].
 
-[^10]: Adding 10% Aquazol 200 to Paraloid B72 improves qualities of B72 in acetone ([[Wolbers 2008\|, 115]]).
+[^10]: Adding 10% Aquazol 200 to Paraloid B72 improves qualities of B72 in acetone ({% cite 'Wolbers 2008' '115' %}).
 
 [^11]: The adhesive and cohesive properties of Beva are assessed in depth, compared to other conservation products ([[Mecklenburg, Fuster-Lopez, and Ottoloni 2012]]).
