--- a/content/2-present-practice/8.md
+++ b/content/2-present-practice/8.md
@@ -26,11 +26,11 @@ The decision to fully retreat the picture in 2018 was based on the fact that the
 
 ## Early History and Ownership
 
-The painting’s checkered early history has affected its condition. In 1650, shortly after Charles I’s execution, Cromwell sold the painting to Sir Balthazar Gerbier, who resold it to Gisbert van Ceulen in Antwerp, from where it was sold yet again to Duke Maximilian II Emanuel, elector of Bavaria and governor of the Spanish Netherlands ([[Martin 1972\|, 44]]). In 1698, the painting was looted from Munich by Emperor Joseph I, who gifted the picture to the first Duke of Marlborough in 1706. From then, it remained in the UK at Blenheim Palace until the National Gallery acquired it in 1885 for the sum of £17,500. Throughout all these changes in ownership the painting would have been rolled up and transported by horse and cart or by ship. The raised, horizontal craquelure in the picture is indicative of the painting having been rolled, as are the large number of splits and losses at the sides ([fig. 8.3](#fig-8-3)). A series of vertical of losses at the right edge also suggest that the rolled canvas was tied too tightly, crushing the paint in these areas.
+The painting’s checkered early history has affected its condition. In 1650, shortly after Charles I’s execution, Cromwell sold the painting to Sir Balthazar Gerbier, who resold it to Gisbert van Ceulen in Antwerp, from where it was sold yet again to Duke Maximilian II Emanuel, elector of Bavaria and governor of the Spanish Netherlands ({% cite 'Martin 1972' '44' %}). In 1698, the painting was looted from Munich by Emperor Joseph I, who gifted the picture to the first Duke of Marlborough in 1706. From then, it remained in the UK at Blenheim Palace until the National Gallery acquired it in 1885 for the sum of £17,500. Throughout all these changes in ownership the painting would have been rolled up and transported by horse and cart or by ship. The raised, horizontal craquelure in the picture is indicative of the painting having been rolled, as are the large number of splits and losses at the sides ([fig. 8.3](#fig-8-3)). A series of vertical of losses at the right edge also suggest that the rolled canvas was tied too tightly, crushing the paint in these areas.
 
 {% figure 'fig-8-3' %}
 
-Since the painting entered the National Gallery’s collection it has rarely travelled. During World War I the picture was evacuated to Overstone Park, outside of Northampton. During the Second World War, it went first to Penrhyn Castle, and then in 1941 to the Manod slate mine in Wales. On both of these latter occasions it was transported upright on its stretcher in a large wooden case strapped to the back of a lorry. On its journey to Manod the truck had to pass through a tunnel that was not tall enough to accommodate the height of the case. This had been anticipated, and the road had been dug up beforehand to make extra height, but even so there was insufficient headroom for the truck to pass through, and the truck’s tires had to be deflated ([[Clark 1977\|, 6]]; [[Davies and Rawlins 1946\|, 13]]). On its return trip to the Gallery in June 1945 the painting travelled mostly by train. More recently, in January 2018, the painting was lent to the Royal Academy’s exhibition *Charles I: King and Collector*, and it again remained on its stretcher for the short journey across London.
+Since the painting entered the National Gallery’s collection it has rarely travelled. During World War I the picture was evacuated to Overstone Park, outside of Northampton. During the Second World War, it went first to Penrhyn Castle, and then in 1941 to the Manod slate mine in Wales. On both of these latter occasions it was transported upright on its stretcher in a large wooden case strapped to the back of a lorry. On its journey to Manod the truck had to pass through a tunnel that was not tall enough to accommodate the height of the case. This had been anticipated, and the road had been dug up beforehand to make extra height, but even so there was insufficient headroom for the truck to pass through, and the truck’s tires had to be deflated ({% cite 'Clark 1977' '6' %}; {% cite 'Davies and Rawlins 1946' '13' %}). On its return trip to the Gallery in June 1945 the painting travelled mostly by train. More recently, in January 2018, the painting was lent to the Royal Academy’s exhibition *Charles I: King and Collector*, and it again remained on its stretcher for the short journey across London.
 
 ## Early Relining Treatments
 
