--- a/content/4-case-studies/26.md
+++ b/content/4-case-studies/26.md
@@ -24,7 +24,7 @@ abstract: "The church of Saint Francis of Assisi Atizapan, located in the Mexica
 
 A series of mid-eighteenth-century easel paintings depicting eleven apostles, Saint Paul, Christ, and the Virgin Mary, housed in the church of Saint Francis of Assisi Atizapan, in the Mexican state of Mexico, were restored in 2018. This afforded the authors the opportunity to study the set of paintings in depth.
 
-The paintings, which appear to be the work of a single artist, date from Mexico’s Viceregal period, and it is important to consider them in that context. The Spanish arrived in the Mexican territory in 1519, and two years later conquered the Aztec empire. In 1524, the Franciscans reached the Americas—starting the Catholic evangelization process in the former Aztec capital of Mexico-Tenochtitlan (now Mexico City) and surrounding territories ([[López Mora 2011\|, 14]]).
+The paintings, which appear to be the work of a single artist, date from Mexico’s Viceregal period, and it is important to consider them in that context. The Spanish arrived in the Mexican territory in 1519, and two years later conquered the Aztec empire. In 1524, the Franciscans reached the Americas—starting the Catholic evangelization process in the former Aztec capital of Mexico-Tenochtitlan (now Mexico City) and surrounding territories ({% cite 'López Mora 2011' '14' %}).
 
 Immediately after their arrival, the Franciscans started the evangelizing to the north of Mexico City, reaching the lands of Tlalnepantla, where they constructed their first church—the Church of the Corpus Christi—in the 1530s. About ten chapels that belonged to the Corpus Christi church were built some decades later. One of them was the chapel of San Francis of Assisi Atizapan, although the first chapel with that name was later demolished. The current church of Saint Francis was built in the 1750s.[^1] That decade corresponds with the creation of the paintings, which suggests that the Apostolate series was made for the new church ([fig. 26.1](#fig-26-1)). In addition to these paintings, the church houses another group depicting saints known as the Doctors of the Church, which was painted by Carlos Clemente Lopez, a *cacique*[^2] artist active during eighteenth century ([[Ramírez Montes 2001]]\|, 106).
 
@@ -32,11 +32,11 @@ Immediately after their arrival, the Franciscans started the evangelizing to the
 
 ## The Apostolate Series
 
-We restored the apostolate easel paintings from June to November of 2018, during which we were guided by the words of Cesare Brandi: “The restoration—always understood in the professional field—is the ideal methodological moment to ask new questions to the works and, with it, add knowledge around them” ([[Brandi 2000\|, 6]]).
+We restored the apostolate easel paintings from June to November of 2018, during which we were guided by the words of Cesare Brandi: “The restoration—always understood in the professional field—is the ideal methodological moment to ask new questions to the works and, with it, add knowledge around them” ({% cite 'Brandi 2000' '6' %}).
 
-The opportunity to analyze a pictorial set painted by a single anonymous author—not just a single painting—was remarkable. Among the advantages that a group of works such as this presented us were summarized by conservator and researcher Elsa Arroyo when she said, “The artistic process and the way the materials were prepared for each strata of the paintings are indicative factors of the tradition of every artist and workshop of New Spain; therefore, technical studies are more relevant when they consider analysis of pictorial series, from the same artist or from the same context” ([[Arroyo Lemus 2017\|, 42]]).
+The opportunity to analyze a pictorial set painted by a single anonymous author—not just a single painting—was remarkable. Among the advantages that a group of works such as this presented us were summarized by conservator and researcher Elsa Arroyo when she said, “The artistic process and the way the materials were prepared for each strata of the paintings are indicative factors of the tradition of every artist and workshop of New Spain; therefore, technical studies are more relevant when they consider analysis of pictorial series, from the same artist or from the same context” ({% cite 'Arroyo Lemus 2017' '42' %}).
 
-The series represents the apostles with the instruments of their martyrdoms: Saint Peter, Saint Andrew, Saint James the Greater, Saint James the Lesser, Saint Bartholomew, Saint Philip, Saint John, Saint Jude Thaddeus, Saint Matthew, Saint Simon, and Saint Thomas. In addition to the apostles, Saint Paul, the Virgin Mary, and Jesus Christ were also painted. After cleaning the paintings, we realized that each included a part of the Apostles’ Creed. According to a legend based on the Acts of the Apostles, while gathered for Pentecost, they began to recite each of the articles of the Creed one by one ([[Schäfer 1983\|, 14]]) ([fig. 26.2](#fig-26-2)). (In addition to this series, a painting of Pentecost by Antonio de Torres hangs in the church, completing the discourse, even though it is the work of a different painter.)
+The series represents the apostles with the instruments of their martyrdoms: Saint Peter, Saint Andrew, Saint James the Greater, Saint James the Lesser, Saint Bartholomew, Saint Philip, Saint John, Saint Jude Thaddeus, Saint Matthew, Saint Simon, and Saint Thomas. In addition to the apostles, Saint Paul, the Virgin Mary, and Jesus Christ were also painted. After cleaning the paintings, we realized that each included a part of the Apostles’ Creed. According to a legend based on the Acts of the Apostles, while gathered for Pentecost, they began to recite each of the articles of the Creed one by one ({% cite 'Schäfer 1983' '14' %}) ([fig. 26.2](#fig-26-2)). (In addition to this series, a painting of Pentecost by Antonio de Torres hangs in the church, completing the discourse, even though it is the work of a different painter.)
 
 {% figure 'fig-26-2' %}
 
@@ -44,9 +44,9 @@ The paintings all correspond with each other aesthetically and technically, and 
 
 ## Research and Analysis
 
-The artist began the composition and the coloring of the paintings on the reddish iron oxide ground layer. The brushstrokes are soft, and the artist used glazes in dark tones and more painting in the light colors despite the fact that the pictorial layer is very thin and has no impastos. As well as these features, the way in which the compositions were solved, along with the technical and pictorial sequence, correspond to eighteenth-century painting production ([[Mues Orts 2017\|, 57]]). Among the material evidence that helped us date the paintings is the presence of Prussian blue.[^3] Although it is unknown when the pigment was first used in New Spain, a painting studied by the Diagnostic Laboratory of Works of Art at the National University of Mexico evidenced its presence by the mid-eighteenth century ([[Zavala Cabello 2013\|, 144]]). This anonymous series is also similar in painting technique to the works of contemporary artists such as Miguel Cabrera, José de Alzibar, Francisco Vallejo, and Patricio Morlete.
+The artist began the composition and the coloring of the paintings on the reddish iron oxide ground layer. The brushstrokes are soft, and the artist used glazes in dark tones and more painting in the light colors despite the fact that the pictorial layer is very thin and has no impastos. As well as these features, the way in which the compositions were solved, along with the technical and pictorial sequence, correspond to eighteenth-century painting production ({% cite 'Mues Orts 2017' '57' %}). Among the material evidence that helped us date the paintings is the presence of Prussian blue.[^3] Although it is unknown when the pigment was first used in New Spain, a painting studied by the Diagnostic Laboratory of Works of Art at the National University of Mexico evidenced its presence by the mid-eighteenth century ({% cite 'Zavala Cabello 2013' '144' %}). This anonymous series is also similar in painting technique to the works of contemporary artists such as Miguel Cabrera, José de Alzibar, Francisco Vallejo, and Patricio Morlete.
 
-As some researchers have pointed out, information is lacking about the practice of painters in documents, so approaching the subject through material analysis is the best way to expand knowledge of New Spanish artists’ techniques ([[Mues Orts 2017\|, 57]]). For this reason, during the restoration we collected all the information we could about the paintings’ materials and technique: they have the same format and measurements, stratigraphy—strainers, priming layers, color layers, and varnishes—and chromatic palette. All the paintings have a linen textile support attached with animal glue to the edge of wooden strainers composed of five elements ([fig. 26.3](#fig-26-3)). About 12 x 11 threads per square centimeter form the fabric, and there is a Z-twist in the threads in both warp and weft ([fig. 26.4](#fig-26-4)).
+As some researchers have pointed out, information is lacking about the practice of painters in documents, so approaching the subject through material analysis is the best way to expand knowledge of New Spanish artists’ techniques ({% cite 'Mues Orts 2017' '57' %}). For this reason, during the restoration we collected all the information we could about the paintings’ materials and technique: they have the same format and measurements, stratigraphy—strainers, priming layers, color layers, and varnishes—and chromatic palette. All the paintings have a linen textile support attached with animal glue to the edge of wooden strainers composed of five elements ([fig. 26.3](#fig-26-3)). About 12 x 11 threads per square centimeter form the fabric, and there is a Z-twist in the threads in both warp and weft ([fig. 26.4](#fig-26-4)).
 
 {% figure 'fig-26-3' %}
 
@@ -66,17 +66,17 @@ We also noted very specific information regarding the technical and material cha
 
 After registering all these characteristics and doing additional research, we realized that the analysis of canvases had not been granted the importance it deserves. For example, many invasive processes have been carried out unnecessarily, such as wax-resin relining, practiced in Mexico since the 1970s, which resulted in important information being hidden or lost. The same thing happened to the original strainers: in almost every conservation treatment applied to a painting, they were discarded and a new one was substituted.
 
-It is also important to establish the context of the canvases in New Spain as background, which refers back to the history of canvases in Spain. Rocío Bruquetas, in her important book *The Technique of Painting in the Spanish Golden Age,* says that almost all the canvases used in Spain were imported from Germany, France, and the Netherlands, although some regions of Spain that produced linen, such as Galicia, el Bierzo, and Medina de Rioseco ([[Bruquetas Galán 2007\|, 104]]).
+It is also important to establish the context of the canvases in New Spain as background, which refers back to the history of canvases in Spain. Rocío Bruquetas, in her important book *The Technique of Painting in the Spanish Golden Age,* says that almost all the canvases used in Spain were imported from Germany, France, and the Netherlands, although some regions of Spain that produced linen, such as Galicia, el Bierzo, and Medina de Rioseco ({% cite 'Bruquetas Galán 2007' '104' %}).
 
-Panel painting was gradually replaced by easel painting starting during the reign of Charles I (1516–1556), but contracts and other documents are not very specific regarding the material characteristics of the canvases. However, it is possible to find allusions to certain processes, such as the tension of the canvas to the frame or strainer and the construction of corners and crossbars ([[Bruquetas Galán 2007\|, 232, 248]]).
+Panel painting was gradually replaced by easel painting starting during the reign of Charles I (1516–1556), but contracts and other documents are not very specific regarding the material characteristics of the canvases. However, it is possible to find allusions to certain processes, such as the tension of the canvas to the frame or strainer and the construction of corners and crossbars ({% cite 'Bruquetas Galán 2007' '232, 248' %}).
 
-In late seventeenth century New Spain, some artists still painted on wood panels, depending on the painting’s intended placement. If it were to be placed in an altarpiece, a wood panel would probably have been preferred. About such preferences, the painters’ guild ordinances of 1587 mentioned that canvases shouldn’t be reused and prohibited painting over an existing painting ([[Carrillo y Gariel 1946\|, 95]]).
+In late seventeenth century New Spain, some artists still painted on wood panels, depending on the painting’s intended placement. If it were to be placed in an altarpiece, a wood panel would probably have been preferred. About such preferences, the painters’ guild ordinances of 1587 mentioned that canvases shouldn’t be reused and prohibited painting over an existing painting ({% cite 'Carrillo y Gariel 1946' '95' %}).
 
-With regard specifically to canvases in Viceregal Mexico, the art conservator Rita Sumano is the only person to have studied in detail the canvases of New Spanish paintings. Her research was enriched by the analysis of more than a hundred paintings restored in the National School of Conservation. Thanks to her research, we know now that almost all New Spanish canvases from the seventeenth and eighteenth centuries were made from linen ([[Sumano González 2010\|, 4, 5]]). We also know that 13% of the canvases analyzed from the eighteenth century have patterns of perforations and, of that percentage, 40% do not have selvages, which she interpreted as a sign of a lack of materials ([[Sumano González 2010\|, 33]]). Importantly, the information we can obtain from the analysis of canvases also gives us information about their origin, distribution, and the loom that was used to make the textiles ([[Siracusano 2005\|, 18]]).
+With regard specifically to canvases in Viceregal Mexico, the art conservator Rita Sumano is the only person to have studied in detail the canvases of New Spanish paintings. Her research was enriched by the analysis of more than a hundred paintings restored in the National School of Conservation. Thanks to her research, we know now that almost all New Spanish canvases from the seventeenth and eighteenth centuries were made from linen ({% cite 'Sumano González 2010' '4, 5' %}). We also know that 13% of the canvases analyzed from the eighteenth century have patterns of perforations and, of that percentage, 40% do not have selvages, which she interpreted as a sign of a lack of materials ({% cite 'Sumano González 2010' '33' %}). Importantly, the information we can obtain from the analysis of canvases also gives us information about their origin, distribution, and the loom that was used to make the textiles ({% cite 'Siracusano 2005' '18' %}).
 
-Trade between Spain and New Spain was fundamental in many aspects. Textiles were exported from Spain and other parts of Europe to New Spain, as were other materials, including pigments, lacquers, oils, and brushes ([[Arroyo Lemus 2017\|, 37]]). In the case of the canvases we studied, twelve of the fourteen paintings have reused textile supports, evidenced by the patterns of perforations and ferro-gallic ink marks already mentioned. These features provide specific clues as to the fabrics’ acquisition by the artist: as mentioned, the paintings.
+Trade between Spain and New Spain was fundamental in many aspects. Textiles were exported from Spain and other parts of Europe to New Spain, as were other materials, including pigments, lacquers, oils, and brushes ({% cite 'Arroyo Lemus 2017' '37' %}). In the case of the canvases we studied, twelve of the fourteen paintings have reused textile supports, evidenced by the patterns of perforations and ferro-gallic ink marks already mentioned. These features provide specific clues as to the fabrics’ acquisition by the artist: as mentioned, the paintings.
 
-Objects traded between Spain and New Spain were marked by the cargador (importer). For example, lightweight sculptures made of cornstalks from the sixteenth and seventeenth centuries in New Spain are found in Spain. Pablo Amador found the mark of the *cargador* who brought such a sculpture of Christ from New Spain to Spain in 1673 ([[Amador Marrero 2012\|, 744]]). Many goods at the time were transported in bales wrapped in fabric (including linen), which were numbered and marked with the importer’s initials. Artists obtained the linen wrappings to use as the canvas supports for their paintings.
+Objects traded between Spain and New Spain were marked by the cargador (importer). For example, lightweight sculptures made of cornstalks from the sixteenth and seventeenth centuries in New Spain are found in Spain. Pablo Amador found the mark of the *cargador* who brought such a sculpture of Christ from New Spain to Spain in 1673 ({% cite 'Amador Marrero 2012' '744' %}). Many goods at the time were transported in bales wrapped in fabric (including linen), which were numbered and marked with the importer’s initials. Artists obtained the linen wrappings to use as the canvas supports for their paintings.
 
 A painting entitled *The Customs Yard* from 1775 by Nicolas-Bernard Lépicié, depicts traders with their merchandise bundled in bales that have similar marks.[^4] Another painting, one from the Basilica de la Virgen de la Soledad in Oaxaca, painted in 1740, depicts an *ex-voto* (votive offering) that expressed the donor’s gratitude to the Virgin for her intercession after an earthquake. The donor of this interesting painting was a wealthy merchant, and, in accordance with his trade, the scene takes place inside his house, where some marked bales lie on the floor.
 
