--- a/content/6-interventions/34.md
+++ b/content/6-interventions/34.md
@@ -34,9 +34,9 @@ That these linings should still be in place and largely effective is all the mor
 
 ## The Nineteenth Century: A Few Preserved Examples of Linings and of Minimal Intervention
 
-In the nineteenth century, we find an earlier massive campaign of restoration, which occurred at a time of many acquisitions as a result of bequests. The public aspects of Roman restoration during this period are well known due to the activities of the Camuccini brothers: Pietro, a restorer, and Vincenzo, an inspector of public paintings ([[Giacomini 2007]]). Among his collaborators, Vincenzo chose Pietro Palmaroli ([[Köster \[1827\] 2001\|, 123]]; [[Rinaldi 2004]]) and Giuseppe Candida, who moved to Rome from Venice in 1803. Candida brought with him such cultural baggage as his experience in the workshop of Pietro Edwards ([[Conti 2003\|, 185, 229]]; [[Köster \[1827\] 2001\|, 121]]).
+In the nineteenth century, we find an earlier massive campaign of restoration, which occurred at a time of many acquisitions as a result of bequests. The public aspects of Roman restoration during this period are well known due to the activities of the Camuccini brothers: Pietro, a restorer, and Vincenzo, an inspector of public paintings ([[Giacomini 2007]]). Among his collaborators, Vincenzo chose Pietro Palmaroli ([[Köster \[1827\] 2001\|, 123]]; [[Rinaldi 2004]]) and Giuseppe Candida, who moved to Rome from Venice in 1803. Candida brought with him such cultural baggage as his experience in the workshop of Pietro Edwards ({% cite 'Conti 2003' '185, 229' %}; [[Köster \[1827\] 2001\|, 121]]).
 
-Restoration practices in the various private collections are less well known. Again, archival documents are of help. In those of the Corsini family we find paintings on which worked G. B. Beretta ([[Ventra 2016]])—a restorer who also worked with Minardi—and going back in time, Palmaroli ([[Cosma 2016\|, 180ff.]]) and Principe ([[Magnanimi 1980a]]; [[Magnanimi 1980b]]). So the same names come up in both the private and public sectors, and through these we will get a better picture of the Roman system.
+Restoration practices in the various private collections are less well known. Again, archival documents are of help. In those of the Corsini family we find paintings on which worked G. B. Beretta ([[Ventra 2016]])—a restorer who also worked with Minardi—and going back in time, Palmaroli ({% cite 'Cosma 2016' '180ff.' %}) and Principe ([[Magnanimi 1980a]]; [[Magnanimi 1980b]]). So the same names come up in both the private and public sectors, and through these we will get a better picture of the Roman system.
 
 In the National Gallery, we have few examples of linings dating back to the nineteenth century, even though the period is rather well known through the historical research cited. Such documentation tends to be of a more theorical (almost sterile) nature, and we are unable to match it with the technical evidence. Just a few linings from the nineteenth century, or even the earlier part of the twentieth, are preserved—a result of the general use of greater quantities of glue paste and of coarser and heavier canvases for linings, which has made them more fragile and more susceptible to changes in relative humidity and temperature ([[Mecklenburg 2007]]; [[CESMAR7 2008]]; [[Ciatti and Signorini 2006]]; [[Roche 2003]]) than the earlier linings described in some detail in later sections of this paper.
 
@@ -80,13 +80,13 @@ It is likely that the use of animal glue became necessary when serious structura
 
 The ratio of flour to glue is the critical element in the formulation of the glue-paste adhesive, on which depends its response to changes in humidity and to biological attack ([[Fuster-Lopez 2017]]). It is now clear that all the additives were included in the formulation to render the paste more elastic and to retard its drying ([[Lavorini 2007]]; [[Laroche and Saccarello 1996]]), and that they also play a role in the aging of the paste ([[Ackroyd 1996]]).
 
-That the original basic recipe contained little or no animal glue can be deduced from the color of the adhesive, which in the older linings is very light, although it should be darker because the type of flour used was less refined and therefore full of husks, and itself darker in color. So the lightness of the adhesive must be related to the amount of animal glue present in the recipe. Orlandi, in the *Abecedario pittorico*, first published in 1704, proposes a flour-paste glue, without the addition of animal glue ([[Orlandi 1753\|, 548]]). We know that the glue was added soon after; for example, Edwards, only fifty years later in Venice, suggests adding German glue, that is strong ox glue (*colla forte*). Edwards also uses a starch-paste glue for his facings and for localized consolidation; and in his descriptions of works requiring restoration, he refers to patches that are poorly attached because of the inadequacy of the “paste made from gluten” (*gluttini*) ([[Tiozzo 2000\|, 152]]). The difference in terminology, which alludes to a material difference, continues over time up to the Forni manual, which still reports patches that are either “pasted or glued on” ([[Bonsanti and Ciatti 2004\|, ch. 3]]).
+That the original basic recipe contained little or no animal glue can be deduced from the color of the adhesive, which in the older linings is very light, although it should be darker because the type of flour used was less refined and therefore full of husks, and itself darker in color. So the lightness of the adhesive must be related to the amount of animal glue present in the recipe. Orlandi, in the *Abecedario pittorico*, first published in 1704, proposes a flour-paste glue, without the addition of animal glue ({% cite 'Orlandi 1753' '548' %}). We know that the glue was added soon after; for example, Edwards, only fifty years later in Venice, suggests adding German glue, that is strong ox glue (*colla forte*). Edwards also uses a starch-paste glue for his facings and for localized consolidation; and in his descriptions of works requiring restoration, he refers to patches that are poorly attached because of the inadequacy of the “paste made from gluten” (*gluttini*) ({% cite 'Tiozzo 2000' '152' %}). The difference in terminology, which alludes to a material difference, continues over time up to the Forni manual, which still reports patches that are either “pasted or glued on” ({% cite 'Bonsanti and Ciatti 2004' 'ch. 3' %}).
 
 ### Ironing
 
 At the very beginning of the use of lining systems, the pressure and heat applied were very light and gentle. But before long the initial massaging of the reverse was associated with heat.
 
-In Orlandi, we learn that the canvases were left beneath a uniform weight provided by a heavy panel, but that the various thicknesses of the paint were nevertheless protected by layers of paper or even felt ([[Orlandi 1753\|, 548]]).
+In Orlandi, we learn that the canvases were left beneath a uniform weight provided by a heavy panel, but that the various thicknesses of the paint were nevertheless protected by layers of paper or even felt ({% cite 'Orlandi 1753' '548' %}).
 
 The introduction of heat, generally termed *stiratura* (ironing), is documented by Edwards, who describes an ingenious system in which heated sand was placed on the reverse of the lining. We have found residues of this sand, confirming the practice as recounted in the sources ([[Tranquilli 1996]]). This system assures even pressure while at the same time adapting to the material nature and profiles of the paint layers without causing excessive flattening of the texture.
 
@@ -146,14 +146,14 @@ Seeking to implement a minimal structural intervention respectful of the aesthet
 
 [^9]: Among the different glue-paste lining systems, in the Florentine system the painting is never left free; even when not stretched onto the stretcher, the canvas is always in a state of tension through the attachment of bands of paper glued at the edges. It is clear that this system aims at the control of canvas deformations differently ([[Lavorini 2007]]).
 
-[^10]: Pietro Edwards suggests canvases finer than the original ones. In the *Obblighi ed incombenze dell’Ispettore al ristauro generale dei pubblici quadri,* he writes, “Che non si ometta di foderare il quadro per evitare la spesa delle costose tele e che queste siano sempre di grana più fine della tela vecchia, perché essendo il contrario non legano bene” (Do not omit lining the painting in order to avoid the expense of a lining canvas, which must be finer, because if it is coarser the adhesion will be poor) ([[Tiozzo 2000\|, 122]]).
+[^10]: Pietro Edwards suggests canvases finer than the original ones. In the *Obblighi ed incombenze dell’Ispettore al ristauro generale dei pubblici quadri,* he writes, “Che non si ometta di foderare il quadro per evitare la spesa delle costose tele e che queste siano sempre di grana più fine della tela vecchia, perché essendo il contrario non legano bene” (Do not omit lining the painting in order to avoid the expense of a lining canvas, which must be finer, because if it is coarser the adhesion will be poor) ({% cite 'Tiozzo 2000' '122' %}).
 
 [^11]: For example, Filippo Lauri, *Festone* (inventory 1934), or the *Landscape* by an anonymous artist (inventory 2232), both from the end of the seventeenth century.
 
-[^12]: There are many references to Michelini working for the most important Roman families; see, for example, [[Debenedetti 2004]]; [[Debenedetti 2005]]; [[Bodart 1970]]; [[Ghezzi 1744]]; letter from L. Crespi to Francesco Algarotti ([[Bottari 1822–25\|, 419]]); [[Nougaret and Leprince 1776\|, 66, 143]]; and [[Standring 1988\|, 608–26, particularly 621 and 624]]. For a more complete study, with all the biographical notes, see [[Marinetti 2007]]. All the works for the Pamphili are cited in {De Marchi 2016}. In the Palazzo della Cancelleria, he worked with Ventura Lamberti, Benefial’s teacher. For the Ruspoli family, he prepared the canvas for Trevisani to paint a Saint Francis. For the Giustiniani, he restored the first version of Caravaggio’s *Saint Matthew.* For the Pellegrini church, he cleaned Reni’s *Trinity* and repaired a panel painted by the Cavalier d’Arpino (*Madonna, Saint Francesco, and Saint Agostino*). For San Giovanni dei Fiorentini, he worked on Maratti’s copy of the *Madonna and Saints.* The Albani family introduced him at the Savoy court. Poerson, director of the French Academy in Rome and president of the Academy of Saint Luke, tells of his restoration for the Odescalchi family, together with B. Luti. Finally, he worked also for the Corsini and the Soderini, being the most important restorer of his time in Rome.
+[^12]: There are many references to Michelini working for the most important Roman families; see, for example, [[Debenedetti 2004]]; [[Debenedetti 2005]]; [[Bodart 1970]]; [[Ghezzi 1744]]; letter from L. Crespi to Francesco Algarotti ({% cite 'Bottari 1822–25' '419' %}); {% cite 'Nougaret and Leprince 1776' '66, 143' %}; and {% cite 'Standring 1988' '608–26, particularly 621 and 624' %}. For a more complete study, with all the biographical notes, see [[Marinetti 2007]]. All the works for the Pamphili are cited in {De Marchi 2016}. In the Palazzo della Cancelleria, he worked with Ventura Lamberti, Benefial’s teacher. For the Ruspoli family, he prepared the canvas for Trevisani to paint a Saint Francis. For the Giustiniani, he restored the first version of Caravaggio’s *Saint Matthew.* For the Pellegrini church, he cleaned Reni’s *Trinity* and repaired a panel painted by the Cavalier d’Arpino (*Madonna, Saint Francesco, and Saint Agostino*). For San Giovanni dei Fiorentini, he worked on Maratti’s copy of the *Madonna and Saints.* The Albani family introduced him at the Savoy court. Poerson, director of the French Academy in Rome and president of the Academy of Saint Luke, tells of his restoration for the Odescalchi family, together with B. Luti. Finally, he worked also for the Corsini and the Soderini, being the most important restorer of his time in Rome.
 
-[^13]: “Signor Domenico Michelini raccomodatore di quadri, che abita in Campo Marzio, è nel suo mestiere bravissimo ma non sa dipingere, ma per ritirarli e ripulirli non ha l’eguale et anche è buonissimo huomo, et à un figliolo che si porta assai bene nel medesimo mestiere. Et io cavaliere Ghezzi ne ho lassata la memoria il 16 luglio 1744” (Domenico Michelini, paintings restorer, who lives in Campo Marzio, is excellent in his work but he cannot paint; but for the restretching and cleaning of a painting he has no equal. He is also a good man, and he has a son who is also very good in the same line of work. And I, Ghezzi, I have left this testimony, July 16, 1744” ([[Ghezzi 1744]], cited in [[Marinetti 2007\|, 34–35]]).
+[^13]: “Signor Domenico Michelini raccomodatore di quadri, che abita in Campo Marzio, è nel suo mestiere bravissimo ma non sa dipingere, ma per ritirarli e ripulirli non ha l’eguale et anche è buonissimo huomo, et à un figliolo che si porta assai bene nel medesimo mestiere. Et io cavaliere Ghezzi ne ho lassata la memoria il 16 luglio 1744” (Domenico Michelini, paintings restorer, who lives in Campo Marzio, is excellent in his work but he cannot paint; but for the restretching and cleaning of a painting he has no equal. He is also a good man, and he has a son who is also very good in the same line of work. And I, Ghezzi, I have left this testimony, July 16, 1744” ([[Ghezzi 1744]], cited in {% cite 'Marinetti 2007' '34–35' %}).
 
 [^14]: Edwards, in his set of guidelines, insists on this point in order to define a profession which was quite distinct, and in the process of evolving, emphasizing the mechanical and structural operations. He criticized those who believed that it was sufficient to know how to paint to become a restorer. Where the retouching involved more than simple losses, and larger areas of painting were required, he looked for painters whose style was as near as possible to that of the original painting ([[Tiozzo 2000]]).
 
-[^15]: We know that important painters also worked as restorers, and we know the effectiveness of their structural interventions. For example, Ciro Ferri, a well-known painter who also worked in the art market and as a restorer, doing both structural repairs (patches) and retouching ([[Marinetti 2007\|, 29–46, 179]]). Moreover, Bellori recounts a restoration by the young Maratti, in 1672, on Annibale Carracci's *Nativity* (originally in Loreto, now in the Louvre) ([[Ciatti 2009\|, 99]]; [[Conti 2003\|, 107]]). It should be noted that these were well-known painters, so this work was not simply a fallback for unknown artists in financial difficulties but reflects a desire to establish an autonomous profession, with its own specific subject matter, independent from the field of painting.
+[^15]: We know that important painters also worked as restorers, and we know the effectiveness of their structural interventions. For example, Ciro Ferri, a well-known painter who also worked in the art market and as a restorer, doing both structural repairs (patches) and retouching ({% cite 'Marinetti 2007' '29–46, 179' %}). Moreover, Bellori recounts a restoration by the young Maratti, in 1672, on Annibale Carracci's *Nativity* (originally in Loreto, now in the Louvre) ({% cite 'Ciatti 2009' '99' %}; {% cite 'Conti 2003' '107' %}). It should be noted that these were well-known painters, so this work was not simply a fallback for unknown artists in financial difficulties but reflects a desire to establish an autonomous profession, with its own specific subject matter, independent from the field of painting.
