--- a/content/8-posters/59.md
+++ b/content/8-posters/59.md
@@ -22,7 +22,7 @@ abstract: "This research shows the application of neodymium magnets in the conse
 
 ## Background
 
-During the last decades, the criterion of minimal intervention has acquired great importance and continues to guide the actions of conservative practitioners aiming to keep open options for retreatment ([[Appelbaum 1987]]). In the specific field of painted canvas supports, progress has been constant as a result of the search for new operational methodologies that continue to provide better responses to the problem of deterioration. Neodymium magnets have a wide field of application in the assembly of objects in permanent and temporary exhibitions, especially graphic works, textiles, and decorative arts collections ([[Spicer 2019]]), but specific applications for pictorial works are still scarce ([[Bestetti 2005]]; [[Rella and Saccani 2006\|, 17–19]]; [[Sterp Moga and Sánchez Ortiz 2019]]) .
+During the last decades, the criterion of minimal intervention has acquired great importance and continues to guide the actions of conservative practitioners aiming to keep open options for retreatment ([[Appelbaum 1987]]). In the specific field of painted canvas supports, progress has been constant as a result of the search for new operational methodologies that continue to provide better responses to the problem of deterioration. Neodymium magnets have a wide field of application in the assembly of objects in permanent and temporary exhibitions, especially graphic works, textiles, and decorative arts collections ([[Spicer 2019]]), but specific applications for pictorial works are still scarce ([[Bestetti 2005]]; {% cite 'Rella and Saccani 2006' '17–19' %}; [[Sterp Moga and Sánchez Ortiz 2019]]) .
 
 An internal auxiliary frame equipped with a magnetic system (IAFMS) has been developed by the authors to assist the conservator in maintaining tension during conservation procedures involving thread-by-thread suture for tear mending, textile intarsia, and reinforcement with thread bridges. The frame is equipped with a magnetic system on the inner and outer edges, consisting of different magnets embedded flush with each edge and a U-shaped iron gutter, adequately protected ([fig. 59.1](#fig-59-1)). The magnets holding the gutter allow the gutter to be raised and lowered to bring the threads closer to the surface of the damaged canvas. Different magnets are housed in the gutter; these act as a clamp and allow the textile material (the necessary threads with the warp and weft) to be held according to the needs of the tear, gap, or break in the textile support. In addition, the system allows the application of a minimum tension by means of the tensioners composed of stainless-steel dowels and threaded rods and nuts placed in the four corners of the frame. In short, the IAFMS allows the tension of the threads to be maintained and exactly positioned during treatment, thus facilitating the adhesion of the suture. At the end of the procedure, the frame and the excess threads are removed from the treated area.
 
